--- a/ᎪᎷᏩᏛᎲ_ᎢᎬᏁᏗ.mw
+++ b/ᎪᎷᏩᏛᎲ_ᎢᎬᏁᏗ.mw
@@ -1,23 +1,23 @@
 :''ᎪᎯ ᎤᏓᏡᎬ ᎧᏁᎢᏍᏙᏗ ᎯᎠ [[intellectual property|ᎢᎦᏘᎭ ᎬᏗ ᎪᎳᏨᎯ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ]] ᏚᏳᎪᏛ. '''[[land grant|ᎦᏙᎯ ᎠᎵᏍᎪᎸᏙᏗ]]''' ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎤᏯᏅᎲ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ. ᎾᏍᎩᎾᎢ ᎯᎠ ᎦᎶᏂᏗ ᎦᏃᏥ, ᎠᎪᏩᏛᏗ '''[[patent leather|ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎦᏃᏥ]]'''.''
 
-'''ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ''' ᎨᏒᎢ ᎠᏫᏒᏗ [[exclusive right|ᎬᏫᏍᏓᏗ ᏚᏳᎪᏛ]]ᎤᎵᏍᎪᎸᏔᏅ ᎾᎥᎢ [[state|ᎤᏔᏂᏗ ᎦᏙᎯ]] patentee (ᎯᎠ [[inventor|ᎪᏪᎵ ᎪᎪᏪᎵ ᎪwᎵᏍᎩ]] ᎠᎴ ᎠᎩᏍᎬᎢ) ᎾᏍᎩᎾᎢ [[Term of patent|ᎣᏍᏛ ᏄᏩᏁᎸ ᎠᎴᏫᏍᏙᏗ iyuwakodi]] ᎭᏫᎾᏗᏢ ᎦᏁᏟᏴᏍᏗ ᎾᏍᎩᎾᎢ ᎯᎠ regulated, ᏴᏫ ᎤᏁᏓᏍᏗ ᎪᎷᏩᏛᏗ ᎤᏙᎯᏳ ᏂᏕᎬᎿᏅᎢ ᏄᏍᏛ ᏗᎧᏃᏗ, ᎢᎬᎾᏗ, ᏧᎵᎬᏩᎳᏅᎯ ᎠᎴ ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ ᎢᏳᏍᏗ ᏯᏛᎿ (ᏗᎧᏃᏗ) (ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[invention|ᏗᏁᏝᎾ]]) ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ [[novelty (patent)|ᎢᏤ]], [[inventive step and non-obviousness|ᏗᏁᏝᎾ]], ᎠᎴ [[utility (patent)|ᎤᎵᏍᎨᏓ]] ᎠᎴ [[industrial applicability|ᏧᏂᎸᏫᏍᏓᏁᏗ ᎠᎾᎵᏐᏈᎸᏍᎬ]].
+'''ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ''' ᎨᏒᎢ ᎠᏫᏒᏗ [[exclusive right|ᎬᏫᏍᏓᏗ ᏚᏳᎪᏛ]] ᎤᎵᏍᎪᎸᏔᏅ ᎾᎥᎢ [[state|ᎤᏔᏂᏗ ᎦᏙᎯ]] patentee (ᎯᎠ [[inventor|ᎪᏪᎵ ᎪᏪᎵᏍᏗ]] ᎠᎴ ᎠᎩᏍᎬᎢ) ᎾᏍᎩᎾᎢ [[Term of patent|ᎣᏍᏛ ᏄᏩᏁᎸ ᎠᎴᏫᏍᏙᏗ ᎢᏳᏩᎪᏗ]] ᎭᏫᎾᏗᏢ ᎦᏁᏟᏴᏍᏗ ᎾᏍᎩᎾᎢ ᎯᎠ regulated, ᏴᏫ ᎤᏁᏓᏍᏗ ᎪᎷᏩᏛᏗ ᎤᏙᎯᏳ ᏂᏕᎬᎿᏅᎢ ᏄᏍᏛ ᏗᎧᏃᏗ, ᎢᎬᎾᏗ, ᏧᎵᎬᏩᎳᏅᎯ ᎠᎴ ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ ᎢᏳᏍᏗ ᏯᏛᎿ (ᏗᎧᏃᏗ) (ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[invention|ᏗᏁᏝᎾ]]) ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ [[novelty (patent)|ᎢᏤ]], [[inventive step and non-obviousness|ᏗᏁᏝᎾ]], ᎠᎴ [[utility (patent)|ᎤᎵᏍᎨᏓ]] ᎠᎴ [[industrial applicability|ᏧᏂᎸᏫᏍᏓᏁᏗ ᎠᎾᎵᏐᏈᎸᏍᎬ]].
 
-ᎯᎠ ᎬᏫᏍᏓᏗ ᏚᏳᎪᏛ ᎤᎵᏍᎪᎸᏔᏅ patentee ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎨᏒᎢ ᎯᎠ ᏚᏳᎪᏛ '''ᎠᎴᏫᏍᏔᏅ''' ᎠᎴ '''ᎬᏫᏍᏓᏗ''' ᎠᏂᏐᎢ ᏂᏛᎴᏅᏓ ᎠᏃᏢᏍᎬ, ᎬᏗᏍᎬᎢ, ᎠᏂᎾᏕᎬ, ᎠᏍᎪᎳᏗᏍᎬ ᎦᎾᏗᏅᏗ ᎠᎴ ᎤᎾᏓᏟᏌᎲ ᎯᎠ [[claim (patent)|ᎠᏆᏤᎵ ᎠᏛᏗ]]ᎦᎾᏄᎪᏫᏒ ᏗᏁᏝᎾ. ᎯᎠ ᏂᏚᏳᎪᏛ ᎠᏓᏁᎸ ᎯᎠ patentee ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏠᏯᏍᏛ ᎯᎠ ᏚᏳᎪᏛ ᎪᏢᏗ, ᎬᏙᏗ, ᎠᎴ ᎦᎾᏗᏅᏗ ᎯᎠ ᏗᏁᏝᎾ ᎤᏅᏌ. ᎯᎠ patentee ᎠᎾᏍᎬᏘ ᎤᎭ ᎠᏍᏓᏩᏛᏍᏓ ᎬᏙᏗ ᏐᎢ ᏧᏂᎧᎿᏩᏛᏍᏗ ᎠᎴ ᏗᎳᏏᏔᏂᏓᏍᏗ ᎪᏢᏗ ᎬᏙᏗ ᎯᎠ ᎠᏆᏤᎵ ᎤᏛᏅᎩ ᏗᏁᏝᎾ. ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ, ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, [[pharmacology|ᎠᏅᏬᏗ]] ᎤᎾᏓᏡᎩ ᎠᎾᏍᎬᏘ ᎣᏤᎵ ᎢᎬᏁᎯ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎾᎿ ᎢᏤ [[medication|ᏄᏬᏗ]] ᎠᎴ ᏫᎵ ᎾᏍᏋ ᏰᎵ ᏄᎵᏂᎬᎬᎾ ᎤᏂᎾᏗᏅᏗ ᎯᎠ ᏄᏬᏗ ᏄᏠᏯᏍᏛᎾ regulatory ᎪᎯᎤᏔᏅ, ᎠᎴ ᎪᏪᎵ ᎪᎪᏪᎵ ᎪwᎵᏍᎩ ᎠᎾᏍᎬᏘ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎵᎢᎵᏒ ᎾᏍᎩᎾ ᏗᎦᎪᏗ [[laser]], ᎠᎴ ᎾᏍᏋ ᏰᎵ ᏄᎵᏂᎬᎬᎾ ᎪᏢᏗ ᎠᎴ ᎦᎾᏗᏅᏗ ᎯᎠ ᎢᏤ ᎠᏤᎸ ᎢᎬᏁᏗ ᏄᏠᏯᏍᏛᎾ ᎪᏪᎵ ᎠᎵᏍᎪᎸᏗᏍᎩ ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᏤᎵᎢ ᎢᎬᏱᎨᏍᏙᏗ broader ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎫᏢᎥᏍᎬ lasers Ꮎ ᏗᎦᎪᏗ. 
+ᎯᎠ ᎬᏫᏍᏓᏗ ᏚᏳᎪᏛ ᎤᎵᏍᎪᎸᏔᏅ patentee ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎨᏒᎢ ᎯᎠ ᏚᏳᎪᏛ '''ᎠᎴᏫᏍᏔᏅ''' ᎠᎴ '''ᎬᏫᏍᏓᏗ''' ᎠᏂᏐᎢ ᏂᏛᎴᏅᏓ ᎠᏃᏢᏍᎬ, ᎬᏗᏍᎬᎢ, ᎠᏂᎾᏕᎬ, ᎠᏍᎪᎳᏗᏍᎬ ᎦᎾᏗᏅᏗ ᎠᎴ ᎤᎾᏓᏟᏌᎲ ᎯᎠ [[claim (patent)|ᎠᏆᏤᎵ ᎠᏛᏗ]] ᎦᎾᏄᎪᏫᏒ ᏗᏁᏝᎾ. ᎯᎠ ᏂᏚᏳᎪᏛ ᎠᏓᏁᎸ ᎯᎠ patentee ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏠᏯᏍᏛ ᎯᎠ ᏚᏳᎪᏛ ᎪᏢᏗ, ᎬᏙᏗ, ᎠᎴ ᎦᎾᏗᏅᏗ ᎯᎠ ᏗᏁᏝᎾ ᎤᏅᏌ. ᎯᎠ patentee ᎠᎾᏍᎬᏘ ᎤᎭ ᎠᏍᏓᏩᏛᏍᏓ ᎬᏙᏗ ᏐᎢ ᏧᏂᎧᎿᏩᏛᏍᏗ ᎠᎴ ᏗᎳᏏᏔᏂᏓᏍᏗ ᎪᏢᏗ ᎬᏙᏗ ᎯᎠ ᎠᏆᏤᎵ ᎤᏛᏅᎩ ᏗᏁᏝᎾ. ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ, ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, [[pharmacology|ᎠᏅᏬᏗ]] ᎤᎾᏓᏡᎩ ᎠᎾᏍᎬᏘ ᎣᏤᎵ ᎢᎬᏁᎯ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎾᎿ ᎢᏤ [[medication|ᏄᏬᏗ]] ᎠᎴ ᏫᎵ ᎾᏍᏋ ᏰᎵ ᏄᎵᏂᎬᎬᎾ ᎤᏂᎾᏗᏅᏗ ᎯᎠ ᏄᏬᏗ ᏄᏠᏯᏍᏛᎾ regulatory ᎪᎯᎤᏔᏅ, ᎠᎴ ᎪᏪᎵ ᎪᏪᎵᏍᏗ ᎠᎾᏍᎬᏘ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎵᎢᎵᏒ ᎾᏍᎩᎾ ᏗᎦᎪᏗ [[laser]], ᎠᎴ ᎾᏍᏋ ᏰᎵ ᏄᎵᏂᎬᎬᎾ ᎪᏢᏗ ᎠᎴ ᎦᎾᏗᏅᏗ ᎯᎠ ᎢᏤ ᎠᏤᎸ ᎢᎬᏁᏗ ᏄᏠᏯᏍᏛᎾ ᎪᏪᎵ ᎠᎵᏍᎪᎸᏗᏍᎩ ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᏤᎵᎢ ᎢᎬᏱᎨᏍᏙᏗ broader ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎫᏢᎥᏍᎬ lasers Ꮎ ᏗᎦᎪᏗ. 
 
-ᎯᎠ ᎠᎴᏂᏍᎬ "ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ" ᎠᎴᏅᏙᏗ ᏂᏛᎴᏅᏓ ᎯᎠ [[Latin]] ᎧᏁᏨ ''patere'' ᎦᏙ ᎤᏍᏗ ᎤᏅᏔᏂᏓᏍᏗ "ᎠᏠᏗ ᎠᏍᏚᎢᏛ" (ᎠᏯ.e. ᎪᏢᏗ ᏰᎵ ᎠᏩᏛᏗ ᎾᏍᎩᎾᎢ ᏴᏫ ᎤᏁᏓᏍᏗ ᎠᎪᎵᏰᏗdᏱ) ᎠᎴ ᎯᎠ ᎠᎴᏂᏍᎬ ''[[letters patent|ᎪᏪᎵ ᏂᏙᏓᎦᏅᏅᎯ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ]]'', ᎦᏙ ᎤᏍᏗ ᎠᎴᏅᏔᏅ denoted [[royal decree|ᎠᏥᎸᏉᏗ ᏴᏫ ᏕᎫᎪᏔᏅ ᎢᏯᏛᏁᏗ]]ᎠᎵᏍᎪᎳᏗᏍᎩ ᎬᏫᏍᏓᏗ ᏂᏚᏳᎪᏛ ᎤᏙᎯᏳ ᏗᏂᏏᏴᏫᎭ ᎠᎴ [[business|ᏗᎦᎸᏫᏍᏓᏁᏗes]].
+ᎯᎠ ᎠᎴᏂᏍᎬ "ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ" ᎠᎴᏅᏙᏗ ᏂᏛᎴᏅᏓ ᎯᎠ [[Latin|ᎦᎸᏥᏱ]] ᎧᏁᏨ ''patere'' ᎦᏙ ᎤᏍᏗ ᎤᏅᏔᏂᏓᏍᏗ "ᎠᏠᏗ ᎠᏍᏚᎢᏛ" (i.e. ᎪᏢᏗ ᏰᎵ ᎠᏩᏛᏗ ᎾᏍᎩᎾᎢ ᏴᏫ ᎤᏁᏓᏍᏗ ᎠᎪᎵᏰᏗdᏱ) ᎠᎴ ᎯᎠ ᎠᎴᏂᏍᎬ ''[[letters patent|ᎪᏪᎵ ᏂᏙᏓᎦᏅᏅᎯ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ]]'', ᎦᏙ ᎤᏍᏗ ᎠᎴᏅᏔᏅ denoted [[royal decree|ᎠᏥᎸᏉᏗ ᏴᏫ ᏕᎫᎪᏔᏅ ᎢᏯᏛᏁᏗ]] ᎠᎵᏍᎪᎳᏗᏍᎩ ᎬᏫᏍᏓᏗ ᏂᏚᏳᎪᏛ ᎤᏙᎯᏳ ᏗᏂᏏᏴᏫᎭ ᎠᎴ [[businesses|ᏗᎦᎸᏫᏍᏓᏁᏗ]].
 
 == ᎧᎵᏗᎳᏏᏗ ᎢᏳᎵᏍᏙᏗ ==
 
-ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏓᏓᏁᎳᏁ ᎯᎠ [[right|ᏚᏳᎪᏛ]] ''ᎬᏫᏍᏓᏗ ᎠᏂᏐᎢ'' ᏂᏛᎴᏅᏓ ᎠᏃᏢᏍᎬ, ᎬᏗᏍᎬᎢ, ᎠᏂᎾᏕᎬ, ᎠᏍᎪᎳᏗᏍᎬ ᎾᏍᎩᎾᎢ ᎦᎾᏗᏅᏗ, ᎠᎴ ᎤᎾᏓᏟᏌᎲ ᎯᎠ patented [[invention|ᏗᏁᏝᎾ]] ᎾᏍᎩᎾᎢ ᎯᎠ [[Term of patent|ᎠᎴᏂᏍᎬ]] ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ, [[Term of patent|ᎤᏠᏱᎭ 20 ᏧᏕᏘᏴᏓ]]. ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎨᏒᎢ, ᎭᏫᎾᏗᏢ ᎢᏳᎵᏍᏙᏗ, ᏩᏎᎸᎯ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ ᏚᏳᎪᏛ Ꮎ ᎯᎠ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏂᏍᎪᎳᏗ ᎪᏪᎵ ᎪᎪᏪᎵ ᎪwᎵᏍᎩ ᎭᏫᎾᏗᏢ ᎦᏁᏟᏴᏍᏗ ᎾᏍᎩᎾᎢ ᎤᎾᏤᎵ ᏓᏓᏁᏤᎸ ᎠᏓᏲᏔᎡᏗ ᎯᎠ ᏂᏕᎬᎿᏅᎢ ᎤᎾᏤᎵ ᏗᏁᏝᎾ ᎬᏙᏗ ᎯᎠ ᏴᏫ ᎤᏁᏓᏍᏗ. ᎾᏍᎩᏯᎢ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏐᎢ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ ᏚᏳᎪᏛ, ᎾᏍᎩ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎦᎾᏗᏅᏓ, ᏙᎯ ᎠᏕᏗ, mortgaged, ᏓᏥᏲᎯᏎᎸ ᎠᎴ ᏭᏚᏓᏲᎯᏎᎸ, ᎠᏓᏁᎸ ᎤᏣᏘᎾ, ᎠᎴ ᏄᏦᏍᏛᎾᏊ ᏚᏲᏒᎩ.
+ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏓᏓᏁᎳᏁ ᎯᎠ [[right|ᏚᏳᎪᏛ]] ''ᎬᏫᏍᏓᏗ ᎠᏂᏐᎢ'' ᏂᏛᎴᏅᏓ ᎠᏃᏢᏍᎬ, ᎬᏗᏍᎬᎢ, ᎠᏂᎾᏕᎬ, ᎠᏍᎪᎳᏗᏍᎬ ᎾᏍᎩᎾᎢ ᎦᎾᏗᏅᏗ, ᎠᎴ ᎤᎾᏓᏟᏌᎲ ᎯᎠ patented [[invention|ᏗᏁᏝᎾ]] ᎾᏍᎩᎾᎢ ᎯᎠ [[Term of patent|ᎠᎴᏂᏍᎬ]] ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ, [[Term of patent|ᎤᏠᏱᎭ 20 ᏧᏕᏘᏴᏓ]]. ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎨᏒᎢ, ᎭᏫᎾᏗᏢ ᎢᏳᎵᏍᏙᏗ, ᏩᏎᎸᎯ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ ᏚᏳᎪᏛ Ꮎ ᎯᎠ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏂᏍᎪᎳᏗ ᎪᏪᎵ ᎪᏪᎵᏍᏗ ᎭᏫᎾᏗᏢ ᎦᏁᏟᏴᏍᏗ ᎾᏍᎩᎾᎢ ᎤᎾᏤᎵ ᏓᏓᏁᏤᎸ ᎠᏓᏲᏔᎡᏗ ᎯᎠ ᏂᏕᎬᎿᏅᎢ ᎤᎾᏤᎵ ᏗᏁᏝᎾ ᎬᏙᏗ ᎯᎠ ᏴᏫ ᎤᏁᏓᏍᏗ. ᎾᏍᎩᏯᎢ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏐᎢ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ ᏚᏳᎪᏛ, ᎾᏍᎩ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎦᎾᏗᏅᏓ, ᏙᎯ ᎠᏕᏗ, mortgaged, ᏓᏥᏲᎯᏎᎸ ᎠᎴ ᏭᏚᏓᏲᎯᏎᎸ, ᎠᏓᏁᎸ ᎤᏣᏘᎾ, ᎠᎴ ᏄᏦᏍᏛᎾᏊ ᏚᏲᏒᎩ.
 
 ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎣᏤᎵ ᎢᎬᏁᎯ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ, ᎠᏔᏲᎯᎯ ᎠᏎ ᎠᏓᏁᎳᏁᏗ ᎪᏪᎳᏅᎯ ᏄᏍᏛ ᏗᎧᏃᏗ ᎤᏤᎵ ᎠᎴ ᎾᏍᎩ ᎠᎨᏴ ᏗᏁᏝᎾ ᎭᏫᎾᏗᏢ [[sufficiency of disclosure|ᏰᎵᏊ ᏄᏍᏗᏓᏅᎢ]] ᎾᏍᎩᎾᎢ ᎠᏏᏴᏫ ᎠᏛᏅᎢᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎯᎠ ᏗᏟᎶᏍᏙᏗ ᎪᏢᏗ ᎠᎴ ᎬᏙᏗ ᎯᎠ ᏗᏁᏝᎾ. ᎪᎯ ᎪᏪᎳᏅᎯ ᏄᏍᏛ ᏗᎧᏃᏗ ᎨᏒᎢ ᎠᏓᏁᎳᏅ ᎭᏫᎾᏗᏢ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎯᎠ [[patent specification|ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]], ᎦᏙ ᎤᏍᏗ ᎢᏳᏓᎵᎭ ᎨᏒᎢ accompanied ᎾᎥᎢ ᏗᏎᏍᏗ Ꮎ ᎤᎾᏛᏁᎸᏗ ᎯᎳᎪ ᎯᎠ ᏗᏁᏝᎾ ᎨᏒᎢ ᎪᏢᏅᎯ ᎠᎴ ᎯᎳᎪ ᎾᏍᎩ ᏗᏂᎪᏍᏙᏗ. ᎭᏫᎾᏗᏢ ᎦᏟᏐᏗᎩ, ᎾᎾᎢ ᎯᎠ ᎤᎵᏍᏛ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎯᎠ ᎠᏔᏲᎯᎯ ᎠᏎ ᎠᏓᏁᎳᏁᏗ ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎬᏙᏗ ᏌᏊ ᎠᎴ ᎤᏟ ᎢᎦᎢ [[Claim (patent)|ᎠᏆᏤᎵ ᎠᎾᏗᏍᎩ]] Ꮎ ᏗᏙᎶᎩ ᎪᏍᏓᏱ ᎠᏥᏄqᎣᏫᏍᎬ ᎦᏙ ᎤᏍᏗ ᎯᎠ ᎠᏔᏲᎯᎯ ᎤᏓᎦᏎᏍᏗ ᏥᏄᏍᏗ ᎤᏤᎵ ᎠᎴ ᎾᏍᎩ ᎠᎨᏴ ᏗᏁᏝᎾ. ᎠᏆᏤᎵ ᎠᏛᏗ, ᏧᏓᎴᎿᎢ ᎯᎠ ᎠᏰᎸ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎨᏒᎢ ᏄᏍᏛ ᏗᎧᏃᏗ ᎠᏎᎸ ᎢᏗᎬᏁᏗ ᎠᏓᏁᎳᏁᏗ ᎯᎠ ᏴᏫ ᎤᏁᏓᏍᏗ ᎬᏙᏗ ᎠᏓᏃᎯᏎᎯ ᎧᎵᏬ ᏗᏙᎳᎩ ᎦᏙ ᎤᏍᏗ ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎤᏤᎵᎢ ᎤᎭ ᏚᏳᎪᏛ ᎬᏫᏍᏓᏗ ᎠᏂᏐᎢ ᏂᏛᎴᏅᏓ ᎠᏃᏢᏍᎬ, ᎬᏗᏍᎬᎢ, ᎠᎴ ᎠᏂᎾᏕᎬ. ᎠᏆᏤᎵ ᎠᎾᏗᏍᎩ ᎠᎴ ᎢᏳᏓᎵᎭ analogized ᎦᏙᎯ ᎦᏂᏴᏙ ᎠᎴ ᏐᎢ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ Ꮎ, ᎭᏫᎾᏗᏢ ᎯᎠ ᏄᏍᏗᏓᏅ ᎤᏙᎯᏳ ᎾᏍᎩ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ, ᏗᏫᏒᏗ ᎯᎠ ᎠᏟᎶᏍᏗ ᎦᏙᎯ ᎠᎴ ᎢᎪᎯᏓ ᎨᏒ ᎤᏤᎵᎢ ᎤᏤᎵ ᏚᏳᎪᏛ ᎬᏫᏍᏓᏗ. ᎯᎠ ᎠᏆᏤᎵ ᎠᎾᏗᏍᎩ ᎧᏁᎢᏍᏔᏅᎯ ᎦᏙ ᎤᏍᏗ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏗᎫᏝᎢ ᎠᎴ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎫᏢᏗ. ᏏᏴᏫ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎾᏍᎬᏘ ᎢᎦᎢ ᎨᏒ ᎤᏂᎪᏗᏗ ᎠᏆᏤᎵ ᎠᎾᏗᏍᎩ, ᎠᏂᏏᏴᏫᎭ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎾᏍᎩ ᎠᏰᎸᏅ ᏥᏄᏍᏗ ᎤᏤᎵᏛ ᏗᏁᏝᎾ.
 
 ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎾᏍᎩᎾᎢ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎾᏍᏋ ᎤᎵᏍᎪᎸᏔᏅ, Ꮎ ᎨᏒᎢ ᎠᎩᏍᏗ ᎧᎵᏗᎳᏏᏗ ᎢᏳᎵᏍᏙᏗ, ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᏔᏲᏍᏙᏗ ᎠᏎ ᏗᏠᎯᏍᏗ ᎯᎠ ᏚᎵᏁᏨ ᎢᏯᏛᏁᏗ ᎯᎠ ᎬᎾᏕᎾ ᏗᎧᎿᏩᏛᏍᏗ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ [[patentability]]. 
 
-ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎨᏒᎢ exclusionary ᏚᏳᎪᏛ-ᎾᏍᎩ ᎠᏓᏁᏗ ᎯᎠ ᏚᏳᎪᏛ ᎬᏫᏍᏓᏗ ᎠᏂᏐᎢ ᏂᏛᎴᏅᏓ infringing ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ, ᎠᎴ Ꮎ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏎᎾᏍᎩ ᎢᏳᎵᏍᏙᏗ ᎠᏓᏁᏗ ᎯᎠ ᎤᏤᎵᎢ ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎯᎠ ᏚᏳᎪᏛ ᎠᎵᏖᎸᏗ ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ. ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎤᎪᏗᏗ ᏗᏁᏝᎾ ᎠᎴ ᏚᏂᎸᏫᏍᏓᏁᎸ ᏧᏩᎫᏔᏅᏒ ᏗᏁᏝᎾ ᎦᏙ ᎤᏍᏗ ᎠᎾᏍᎬᏘ ᏙᎢ ᎾᏍᏋ ᎫᏝᎢ ᎾᎥᎢ ᎩᎶ ᎠᏏᏴᏫ ᎠᎴ ᎾᏍᎩ ᎤᏤᎵ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ. ᎢᏳᏃ ᎪᏪᎵ Ꭺgoweli gowlisgi ᎠᎩᏍᎪᎢ ᎬᏂᎨᏒ ᏄᏍᏛ patented [[mouse trap|ᏥᏍᏕᏥ ᏌᏛᏗ]] ᎠᏤᎸ ᎢᎬᏁᏗ, ᎦᏟᏐᏗ ᎢᏤ ᏄᏍᏛ ᏗᎧᏃᏗ ᎪᏢᏗ ᎪᏢᎯᏌᏅ ᏥᏍᏕᏥ ᏌᏛᏗ, ᎠᎴ ᎣᏤᎵ ᎢᎬᏁᎯ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎾᎿ ᎯᎠ ᎠᎵᎢᎵᏒ, ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᎴ ᎾᏍᎩ ᎠᎨᏴ ᏰᎵᏇ ᎾᏍᎩ ᎤᏩᏒ ᏗᏂᎳᏫᎩ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ ᎤᏤᎵ ᎠᎴ ᎾᏍᎩ ᎠᎨᏴ ᎪᏢᎯᏌᏅ ᏥᏍᏕᏥ ᏌᏛᏗ ᎬᏙᏗ ᎤᏁᎳᎩ ᎡᎵᏒᎢ ᏂᏛᎴᏅᏓ ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏧᏂᏴᎯ ᎯᎠ ᎠᎴᏅᏗᏍᎬ ᏥᏍᏕᏥ ᏌᏛᏗ, ᏃᎵᏍᎬᎢ ᎯᎠ ᎠᎴᏅᏗᏍᎬ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎨᏒᎢ ᏙᎢ ᎭᏫᎾᏗᏢ ᎦᏌᏙᏯᏍᏗ. ᎾᎿ ᎯᎠ ᏐᎢ ᎤᏬᏰᏂ, ᎯᎠ ᎤᏤᎵᎢ ᎯᎠ ᎪᏢᎯᏌᏅ ᏥᏍᏕᏥ ᏌᏛᏗ ᏰᎵᏇ ᎬᏫᏍᏓᏗ ᎯᎠ ᎠᎴᏅᏗᏍᎬ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎤᏤᎵᎢ ᏂᏛᎴᏅᏓ ᎬᏗᏍᎬᎢ ᎯᎠ ᎠᎵᎢᎵᏒ.
+ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎨᏒᎢ exclusionary ᏚᏳᎪᏛ-ᎾᏍᎩ ᎠᏓᏁᏗ ᎯᎠ ᏚᏳᎪᏛ ᎬᏫᏍᏓᏗ ᎠᏂᏐᎢ ᏂᏛᎴᏅᏓ infringing ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ, ᎠᎴ Ꮎ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏎᎾᏍᎩ ᎢᏳᎵᏍᏙᏗ ᎠᏓᏁᏗ ᎯᎠ ᎤᏤᎵᎢ ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎯᎠ ᏚᏳᎪᏛ ᎠᎵᏖᎸᏗ ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ. ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎤᎪᏗᏗ ᏗᏁᏝᎾ ᎠᎴ ᏚᏂᎸᏫᏍᏓᏁᎸ ᏧᏩᎫᏔᏅᏒ ᏗᏁᏝᎾ ᎦᏙ ᎤᏍᏗ ᎠᎾᏍᎬᏘ ᏙᎢ ᎾᏍᏋ ᎫᏝᎢ ᎾᎥᎢ ᎩᎶ ᎠᏏᏴᏫ ᎠᎴ ᎾᏍᎩ ᎤᏤᎵ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ. ᎢᏳᏃ ᎪᏪᎵ ᎪᏪᎵᏍᏗ ᎠᎩᏍᎪᎢ ᎬᏂᎨᏒ ᏄᏍᏛ patented [[mouse trap|ᏥᏍᏕᏥ ᏌᏛᏗ]] ᎠᏤᎸ ᎢᎬᏁᏗ, ᎦᏟᏐᏗ ᎢᏤ ᏄᏍᏛ ᏗᎧᏃᏗ ᎪᏢᏗ ᎪᏢᎯᏌᏅ ᏥᏍᏕᏥ ᏌᏛᏗ, ᎠᎴ ᎣᏤᎵ ᎢᎬᏁᎯ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎾᎿ ᎯᎠ ᎠᎵᎢᎵᏒ, ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᎴ ᎾᏍᎩ ᎠᎨᏴ ᏰᎵᏇ ᎾᏍᎩ ᎤᏩᏒ ᏗᏂᎳᏫᎩ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ ᎤᏤᎵ ᎠᎴ ᎾᏍᎩ ᎠᎨᏴ ᎪᏢᎯᏌᏅ ᏥᏍᏕᏥ ᏌᏛᏗ ᎬᏙᏗ ᎤᏁᎳᎩ ᎡᎵᏒᎢ ᏂᏛᎴᏅᏓ ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏧᏂᏴᎯ ᎯᎠ ᎠᎴᏅᏗᏍᎬ ᏥᏍᏕᏥ ᏌᏛᏗ, ᏃᎵᏍᎬᎢ ᎯᎠ ᎠᎴᏅᏗᏍᎬ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎨᏒᎢ ᏙᎢ ᎭᏫᎾᏗᏢ ᎦᏌᏙᏯᏍᏗ. ᎾᎿ ᎯᎠ ᏐᎢ ᎤᏬᏰᏂ, ᎯᎠ ᎤᏤᎵᎢ ᎯᎠ ᎪᏢᎯᏌᏅ ᏥᏍᏕᏥ ᏌᏛᏗ ᏰᎵᏇ ᎬᏫᏍᏓᏗ ᎯᎠ ᎠᎴᏅᏗᏍᎬ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎤᏤᎵᎢ ᏂᏛᎴᏅᏓ ᎬᏗᏍᎬᎢ ᎯᎠ ᎠᎵᎢᎵᏒ.
 
-ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏰᎵᏇ ᏂᎦᎥᏊ ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᏋ ᎦᏌᏙᏯᏍᏗ ᏗᎬᏩᎶᏒ [[litigation|ᎤᎵᎶᎯ ᎢᎬᏁᎯ ᏓᏓᎳᏑᎸ]](ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎾᏍᎩᎾᎢ ᎢᏧᎳ ᎠᏴ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ, ᎾᎥᎢ ᎠᎵᏖᎸᏗ ᎾᏍᎩᎾᎢ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎦᏛᎴᎯᏍᏗ ᎭᏫᎾᏗᏢ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᏂᎬᎾᏛ ᎠᏰᎵ ᏧᎾᏓᏱᎵᏓᏍᏗ), ᎾᏍᎩ ᎤᏁᎳᎩ ᎢᎦᏛ territories (ᏯᏛᎿ ᏥᏄᏍᏗ [[France]] ᎠᎴ [[Austria]]) ᎤᎭ ᏔᎵᏁ ᎠᏓᎴᏁ penalties ᎾᏍᎩᎾᎢ ᏓᎦᏘᎴᎬ ᎠᎦᏛᎴᎯᏍᏗ.<ref>[[DLA Piper Rudnick Gray Cary|DLA ᏗᏂᏃᎩᏍᏗᏍᎩ Rudnick ᎤᏍᎪᎸ ᏌᎪᏂᎨ Cary]] (2005) ''ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏂᏓᏙᎳᎬᎾ ᏗᎦᎾᏗᎯᏍᏗ Europe'', handout ᏰᎵ ᎠᏩᏛᏗ ᏥᏄᏍᏗ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ [http://cecollect.com/ve/ZZf3096aBBft91T940 this link].</ref>
-<ref>ᎾᎿᎢ ᎠᎴ ᎠᏓᏅᏍᏗ criminalize ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎦᏛᎴᎯᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ European ᏗᏌᏊ ᎤᎾᎵᎪᎯ. {{cite press release|title=UK patent attorneys welcome clamp down on fake goods but oppose move to criminalize patent infringement|publisher=[[Chartered Institute of Patent Attorneys|CIPA]]|date=[[2006-06-22]]|url = http://www.cipa.org.uk/pages/whatsnew/article?6701D3CC-74FD-4B1C-BB73-7C6918A423B4 |accessdate=2006-07-19}}</ref> ᎢᏯᏛᏁᎵᏓᏍᏗ, ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎤᏤᎵᎢ ᏫᎵ ᎠᏯᏍᏗ ᎠᏕᎳ ᎥᏓᏓᎫᏴᎡᏗᏱ ᎾᏍᎩᎾᎢ ᏧqᎠᎫᏔᏅᏒ ᎠᎦᏛᎴᎯᏍᏗ, ᎠᎴ ᏫᎵ ᎠᏯᏍᏗ [[injunction|ᎤᎵᏁᏨ ᎢᏯᏛᏁᏗ]] ᎦᏅᏍᏙᎯᏍᏗ ᎯᎠ ᎠᏥᏱᎵᏙᎯ ᏂᏛᎴᏅᏓ ᎠᏍᏆᏂᎪᏒᏗ ᎭᏫᎾᏗᏢ ᎤᏩᎫᏗᏗᏒ ᏗᎵᏖᎸᏗ ᎠᎦᏛᎴᎯᏍᏗ.  ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎪᎯᏳᏙᏗ ᎠᎦᏛᎴᎯᏍᏗ, ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎤᏤᎵᎢ ᎠᏎ ᎪᏢᏗ Ꮎ ᎯᎠ ᎠᎫᎢᏍᏗ infringer ᎠᎵᏏᎾᎯᏍᏙᏗ ᏂᎦᏛ ᎯᎠ ᏚᎵᏁᏨ ᎢᏯᏛᏁᏗ ᎾᎾᎢ ᎠᏂᎦᏲᎵ ᏌᏊ ᎯᎠ ᎠᏆᏤᎵ ᎠᎾᏗᏍᎩ ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ (ᎾᏍᎩ ᏂᎨᏒᎾ Ꮎ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏓᎳᏏᏛ ᎯᎠ ᎠᎵᏍᏕᎸᏙᏗ ᎠᎾᏍᎬᏘ ᎾᏍᎩ ᏂᎨᏒᎾ ᎾᏍᏋ ᏩᏎᎸᎯ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎾᏍᎩᏯ ᎪᏪᎸ ᎤᏃᎮᎸᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏆᏤᎵ ᎠᎾᏗᏍᎩ, ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ ᎤᏍᏆᎸᎲ ᎯᎠ "[[doctrine of equivalents|ᎤᏬᎯᏳᏒ  ᎢᏗᎦᏘᎭ]]").
+ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏰᎵᏇ ᏂᎦᎥᏊ ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᏋ ᎦᏌᏙᏯᏍᏗ ᏗᎬᏩᎶᏒ [[litigation|ᎤᎵᎶᎯ ᎢᎬᏁᎯ ᏓᏓᎳᏑᎸ]] (ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎾᏍᎩᎾᎢ ᎢᏧᎳ ᎠᏴ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ, ᎾᎥᎢ ᎠᎵᏖᎸᏗ ᎾᏍᎩᎾᎢ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎦᏛᎴᎯᏍᏗ ᎭᏫᎾᏗᏢ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᏂᎬᎾᏛ ᎠᏰᎵ ᏧᎾᏓᏱᎵᏓᏍᏗ), ᎾᏍᎩ ᎤᏁᎳᎩ ᎢᎦᏛ territories (ᏯᏛᎿ ᏥᏄᏍᏗ [[France|ᎦᎸᏥᏱ]] ᎠᎴ [[Austria]]) ᎤᎭ ᏔᎵᏁ ᎠᏓᎴᏁ penalties ᎾᏍᎩᎾᎢ ᏓᎦᏘᎴᎬ ᎠᎦᏛᎴᎯᏍᏗ.<ref>[[DLA Piper Rudnick Gray Cary|DLA ᏗᏂᏃᎩᏍᏗᏍᎩ Rudnick ᎤᏍᎪᎸ ᏌᎪᏂᎨ Cary]] (2005) ''ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏂᏓᏙᎳᎬᎾ ᏗᎦᎾᏗᎯᏍᏗ [[Europe|ᏳᎳᏛ]]'', handout ᏰᎵ ᎠᏩᏛᏗ ᏥᏄᏍᏗ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ [http://cecollect.com/ve/ZZf3096aBBft91T940 this link].</ref>
+<ref>ᎾᎿᎢ ᎠᎴ ᎠᏓᏅᏍᏗ criminalize ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎦᏛᎴᎯᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ European ᏗᏌᏊ ᎤᎾᎵᎪᎯ.{{cite book|title=UK patent attorneys welcome clamp down on fake goods but oppose move to criminalize patent infringement|publisher=[[Chartered Institute of Patent Attorneys|CIPA]]|date=2006-06-22|url = http://www.cipa.org.uk/pages/whatsnew/article?6701D3CC-74FD-4B1C-BB73-7C6918A423B4 |accessdate=2006-07-19}}</ref> ᎢᏯᏛᏁᎵᏓᏍᏗ, ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎤᏤᎵᎢ ᏫᎵ ᎠᏯᏍᏗ ᎠᏕᎳ ᎥᏓᏓᎫᏴᎡᏗᏱ ᎾᏍᎩᎾᎢ ᏧqᎠᎫᏔᏅᏒ ᎠᎦᏛᎴᎯᏍᏗ, ᎠᎴ ᏫᎵ ᎠᏯᏍᏗ [[injunction|ᎤᎵᏁᏨ ᎢᏯᏛᏁᏗ]] ᎦᏅᏍᏙᎯᏍᏗ ᎯᎠ ᎠᏥᏱᎵᏙᎯ ᏂᏛᎴᏅᏓ ᎠᏍᏆᏂᎪᏒᏗ ᎭᏫᎾᏗᏢ ᎤᏩᎫᏗᏗᏒ ᏗᎵᏖᎸᏗ ᎠᎦᏛᎴᎯᏍᏗ.  ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎪᎯᏳᏙᏗ ᎠᎦᏛᎴᎯᏍᏗ, ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎤᏤᎵᎢ ᎠᏎ ᎪᏢᏗ Ꮎ ᎯᎠ ᎠᎫᎢᏍᏗ infringer ᎠᎵᏏᎾᎯᏍᏙᏗ ᏂᎦᏛ ᎯᎠ ᏚᎵᏁᏨ ᎢᏯᏛᏁᏗ ᎾᎾᎢ ᎠᏂᎦᏲᎵ ᏌᏊ ᎯᎠ ᎠᏆᏤᎵ ᎠᎾᏗᏍᎩ ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ (ᎾᏍᎩ ᏂᎨᏒᎾ Ꮎ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏓᎳᏏᏛ ᎯᎠ ᎠᎵᏍᏕᎸᏙᏗ ᎠᎾᏍᎬᏘ ᎾᏍᎩ ᏂᎨᏒᎾ ᎾᏍᏋ ᏩᏎᎸᎯ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎾᏍᎩᏯ ᎪᏪᎸ ᎤᏃᎮᎸᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏆᏤᎵ ᎠᎾᏗᏍᎩ, ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ ᎤᏍᏆᎸᎲ ᎯᎠ "[[doctrine of equivalents|ᎤᏬᎯᏳᏒ  ᎢᏗᎦᏘᎭ]]").
 
 ᎤᎵᏍᎨᏛ ᎪᏪᎵ ᎠᏍᏚᏗ ᎾᎿ ᎯᎠ ᏅᏏᎾᏒ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎤᏤᎵᎢ ᎦᏣᏄᎳ ᎧᏁᎢᏍᏗᏱ ᎤᏤᎵ ᎠᎴ ᎾᏍᎩ ᎠᎨᏴ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎭᏫᎾᏗᏢ ᎤᎵᎶᎯ ᎢᎬᏁᎯ ᏂᏓᏙᎳᎬᎾ ᎨᏒᎢ ᎯᎠ ᎠᎫᎢᏍᏗ infringer ᎤᏤᎵ ᏚᏳᎪᏛ ᎤᏂᎦᏛᎲᏍᎩ ᎯᎠ ᎤᎳᏂᎬᎬ Ꮎ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ.  ᎤᎵᎶᎯ ᎢᎬᏁᎯ ᏗᏓᏱᎵᏓᏍᏗ ᎠᏛᎩᏍᎬ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏕᎦᎸᏛ ᎧᏁᏌᎢ ᏰᎵᏇ ᎠᎴ ᎢᏳᏓᎵᎭ ᎿᏛᎦ ᎧᏁᎢᏍᏗ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎤᎾᎵᎪᏒ.  ᎯᎠ ᏗᎦᏙᎯ ᎾᎿ ᎦᏙ ᎤᏍᏗ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏰᎵᏇ ᎾᏍᏋ ᎠᏩᏛᏗ ᎤᎾᎵᎪᏒ ᎠᎴ ᎠᏫᏒᏗ ᎠᏥᏄqᎣᏫᏍᎬ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎾᎵᏐᏈᎸᏍᎬ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏗᎧᏃᏩᏛᏍᏗ ᏓᏃᏢᏍᎬ ᎠᎴ ᏧᏓᎴᎾᎯ ᎠᏰᎵ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ.  ᎢᏳᏓᎵᎭ, ᎯᎠ ᏗᎦᏙᎯ ᎠᎴ ᎠᏂᎦᏲᎵ-ᎠᏫᏒᏗ ᎯᎠ ᏚᎵᏁᏨ ᎢᏯᏛᏁᏗ ᎾᏍᎩᎾᎢ [[patentability]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎾᎵᏐᏈᎸᏍᎬ ᏙᏱᏗᏢ ᎦᏚᎲ.
 
@@ -27,11 +27,11 @@
 
 ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎯᎠ ᎡᎶᎯ, ᎢᏧᎳ ᏂᎬᏩᏍᏛ ᎠᏂᏏᏴᏫᎭ ᎠᎴ ᏧᏠᎯᏍᏗ entities ᎠᎾᏍᎬᏘ ᎢᎬᎾᏙᏗ ᎾᏍᎩᎾᎢ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ.  ᎯᎠ ᎬᏂᎨᏒ ᏄᏍᏛᎢ ᎠᎴ entities ᎾᎯᏳᎢ ᏗᏙᎳᎩ ᎯᎠ ᎤᎾᏤᎵᎢ ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎯᎳᎪ ᎢᏳ ᎠᎴ ᎢᏳᏃ ᎾᏍᎩ ᎠᏯᏙᎯᎲ.
 
-ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ, ᏱᏂᎬᏛᎾ, ᎾᏍᎩ ᎤᏩᏒ ᎯᎠ ᏂᎬᏩᏍᏛ ᎠᏂᏏᏴᏫᎭ (ᎠᏯ.e. ᎯᎠ ᎪᏪᎵ ᎪᎪᏪᎵ ᎪwᎵᏍᎩ) ᎠᎾᏍᎬᏘ ᎢᎬᎾᏙᏗ ᎾᏍᎩᎾᎢ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ. ᎢᏳᏃ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᏯᏙᎯᎲ, ᎾᎯᏳᎢ ᎠᏂᏏᏴᏫᎭ ᎠᏏᏴᏫ ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ ᏥᏄᏍᏗ ᎪᏪᎵ ᎪᎪᏪᎵ ᎪwᎵᏍᎩ ᏧᏤᎵ ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏧᏓᎴᎿᎢᎭ ᏂᏛᎴᏅᏓ ᎯᎠ ᏐᎢ.  ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎢᏳᏃ ᏔᎵ ᎪᏪᎵ ᎪᎪᏪᎵ ᎪwᎵᏍᎩ ᎠᎴ ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ ᎾᎿ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ, ᎾᎯᏳᎢ ᎠᏂᏏᏴᏫᎭ ᏌᏊ ᎠᎾᏍᎬᏘ ᎠᎵᏍᎪᎸᏙᏗ ᎪᏪᎵ ᎠᎵᏍᎪᎸᏗᏍᎩ ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎤᎾᏤᎵᏛ ᎤᎾᏙᏢᎯ ᎯᎠ ᏐᎢ.
+ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ, ᏱᏂᎬᏛᎾ, ᎾᏍᎩ ᎤᏩᏒ ᎯᎠ ᏂᎬᏩᏍᏛ ᎠᏂᏏᏴᏫᎭ (i.e. ᎯᎠ ᎪᏪᎵ ᎪᏪᎵᏍᏗ) ᎠᎾᏍᎬᏘ ᎢᎬᎾᏙᏗ ᎾᏍᎩᎾᎢ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ. ᎢᏳᏃ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᏯᏙᎯᎲ, ᎾᎯᏳᎢ ᎠᏂᏏᏴᏫᎭ ᎠᏏᏴᏫ ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ ᏥᏄᏍᏗ ᎪᏪᎵ ᎪᏪᎵᏍᏗ ᏧᏤᎵ ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏧᏓᎴᎿᎢᎭ ᏂᏛᎴᏅᏓ ᎯᎠ ᏐᎢ.  ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎢᏳᏃ ᏔᎵ ᎪᏪᎵ ᎪᏪᎵᏍᏗ ᎠᎴ ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ ᎾᎿ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ, ᎾᎯᏳᎢ ᎠᏂᏏᏴᏫᎭ ᏌᏊ ᎠᎾᏍᎬᏘ ᎠᎵᏍᎪᎸᏙᏗ ᎪᏪᎵ ᎠᎵᏍᎪᎸᏗᏍᎩ ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎤᎾᏤᎵᏛ ᎤᎾᏙᏢᎯ ᎯᎠ ᏐᎢ.
 
-ᎾᏍᎩ ᎨᏒᎢ ᏧᏣᏔᏊ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎾᏍᎩᎾᎢ ᎪᏪᎵ ᎪᎪᏪᎵ ᎪwᎵᏍᎩ  [[assignment (law)|ᎠᏂᎧᎻᏏᏂ]] ᎤᎾᏤᎵ ᎾᏍᎩ ᎤᏤᎵ ᏂᏚᏳᎪᏛ ᏧᏠᎯᏍᏗ ᎬᏂᎨᏒ ᏄᏍᏛᎢ.  <ref>{{cite web | title=Assignee (Company) Name |url=http://www.uspto.gov/web/patents/patog/week39/OG/help/help.htm#Assignee%20(Company)%20Name  |work=Help Page |publisher= U.S. Copyright and Trademark Office (USPTO) | accessdate=2007-07-25 }}</ref>  ᎪᏪᎵ ᎪᎪᏪᎵ ᎪwᎵᏍᎩ Ꮎ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎾᏍᎩᎾᎢ ᎤᎾᏙᏢᎯ, ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎢᏳᏓᎵᎭ ᎠᎴ ᎧᏁᏨ ᎢᏯᏛᏁᏗ ᎠᏂᎧᎻᏏᏂ ᎤᎾᏤᎵ ᎾᏍᎩ ᎤᏤᎵ ᏂᏚᏳᎪᏛ ᎤᎾᏤᎵ ᎤᎾᏙᏢᎯ ᏥᏄᏍᏗ ᏄᏍᏗᏓᏅ ᎤᎾᏤᎵ ᏗᎨᏥᎾᏢᏗ.  ᎤᎾᏤᎵᏛ ᎤᎾᏙᏢᎯ ᎪᏪᎵ ᎪᎪᏪᎵ ᎪwᎵᏍᎩ ᎢᏳᏓᎵᎭ ᎠᏂᎧᎻᏏᏂ ᎤᎾᏤᎵ ᎾᏍᎩ ᎤᏤᎵ ᏂᏚᏳᎪᏛ ᏏᏴᏫ ᎬᏂᎨᏒ ᏄᏍᏛᎢ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ Ꮎ ᎾᏍᎩ ᎤᏩᏒ ᏌᏊ ᎬᏂᎨᏒ ᏄᏍᏛᎢ ᎤᎭ ᎯᎠ ᏚᏳᎪᏛ ᎠᎵᏍᎪᎸᏙᏗ ᎪᏪᎵ ᎠᎵᏍᎪᎸᏗᏍᎩ.  
+ᎾᏍᎩ ᎨᏒᎢ ᏧᏣᏔᏊ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎾᏍᎩᎾᎢ ᎪᏪᎵ ᎪᏪᎵᏍᏗ  [[assignment (law)|ᎠᏂᎧᎻᏏᏂ]] ᎤᎾᏤᎵ ᎾᏍᎩ ᎤᏤᎵ ᏂᏚᏳᎪᏛ ᏧᏠᎯᏍᏗ ᎬᏂᎨᏒ ᏄᏍᏛᎢ.<ref>{{cite book | title=Assignee (Company) Name |url=http://www.uspto.gov/web/patents/patog/week39/OG/help/help.htm#Assignee%20(Company)%20Name  |work=Help Page |publisher= U.S. Copyright and Trademark Office (USPTO) | accessdate=2007-07-25 }}</ref>  ᎪᏪᎵ ᎪᏪᎵᏍᏗ Ꮎ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎾᏍᎩᎾᎢ ᎤᎾᏙᏢᎯ, ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎢᏳᏓᎵᎭ ᎠᎴ ᎧᏁᏨ ᎢᏯᏛᏁᏗ ᎠᏂᎧᎻᏏᏂ ᎤᎾᏤᎵ ᎾᏍᎩ ᎤᏤᎵ ᏂᏚᏳᎪᏛ ᎤᎾᏤᎵ ᎤᎾᏙᏢᎯ ᏥᏄᏍᏗ ᏄᏍᏗᏓᏅ ᎤᎾᏤᎵ ᏗᎨᏥᎾᏢᏗ.  ᎤᎾᏤᎵᏛ ᎤᎾᏙᏢᎯ ᎪᏪᎵ ᎪᏪᎵᏍᏗ ᎢᏳᏓᎵᎭ ᎠᏂᎧᎻᏏᏂ ᎤᎾᏤᎵ ᎾᏍᎩ ᎤᏤᎵ ᏂᏚᏳᎪᏛ ᏏᏴᏫ ᎬᏂᎨᏒ ᏄᏍᏛᎢ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ Ꮎ ᎾᏍᎩ ᎤᏩᏒ ᏌᏊ ᎬᏂᎨᏒ ᏄᏍᏛᎢ ᎤᎭ ᎯᎠ ᏚᏳᎪᏛ ᎠᎵᏍᎪᎸᏙᏗ ᎪᏪᎵ ᎠᎵᏍᎪᎸᏗᏍᎩ.  
 
-ᎯᎠ ᏅᏏᎾᏒ ᎠᏂᎧᎻᏏᏂ ᎾᏍᎩ ᎤᏤᎵ ᏂᏚᏳᎪᏛ ᎧᏁᏉᎠ ᎯᎠ ᎦᎾ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏥᏄᏍᏗ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ.  ᎪᏪᎵ ᎪᎪᏪᎵ ᎪwᎵᏍᎩ ᏰᎵᏇ ᎣᏤᎵ ᎢᎬᏁᎯ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎴ ᎾᎯᏳᎢ ᎦᎾᏗᏅᏗ ᎠᏂ ᏦᎢᏁ ᏚᎾᏓᏟᏌᎲ.  ᎯᎠ ᏦᎢᏁ ᏚᎾᏓᏟᏌᎲ ᎾᎯᏳᎢ ᎣᏤᎵ ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏥᏄᏍᏗ ᎢᏳᏃ ᎤᏅᏌ ᎠᏰᎲ ᎠᎴᏅᏔᏅ ᎪᏢᏅᎯ ᎯᎠ ᏗᏁᏝᎾ ᎤᏅᏌ.
+ᎯᎠ ᏅᏏᎾᏒ ᎠᏂᎧᎻᏏᏂ ᎾᏍᎩ ᎤᏤᎵ ᏂᏚᏳᎪᏛ ᎧᏁᏉᎠ ᎯᎠ ᎦᎾ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏥᏄᏍᏗ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ.  ᎪᏪᎵ ᎪᏪᎵᏍᏗ ᏰᎵᏇ ᎣᏤᎵ ᎢᎬᏁᎯ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎴ ᎾᎯᏳᎢ ᎦᎾᏗᏅᏗ ᎠᏂ ᏦᎢᏁ ᏚᎾᏓᏟᏌᎲ.  ᎯᎠ ᏦᎢᏁ ᏚᎾᏓᏟᏌᎲ ᎾᎯᏳᎢ ᎣᏤᎵ ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏥᏄᏍᏗ ᎢᏳᏃ ᎤᏅᏌ ᎠᏰᎲ ᎠᎴᏅᏔᏅ ᎪᏢᏅᎯ ᎯᎠ ᏗᏁᏝᎾ ᎤᏅᏌ.
 
 === ᎢᏚᏳᎪᏛ ᏧᏂᎧᎿᏩᏛᏍᏗ ===
 
@@ -39,52 +39,50 @@
 
 ᏱᏓᏟᎶᏍᏔᏅ, ᎠᏰᎵ ᎤᏙᏢᏒ ᏚᏙᏢᏒ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎬᏙᏗ ᎠᏚᏓᎸᏗ ᎾᏍᎩᎾᎢ ᎠᏂᎩᏍᏗᏍᎬ Ꮎ ᎠᏰᎵ ᎤᏙᏢᏒ ᎤᏤᎵ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎢᏯhᏛᏁᎵᏓᏍᏗ, ᎭᏫᏂᏗᏢ ᎯᎠ ᎠᎾᎵᏐᏈᎸᏍᎬ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏧᏂᎧᎿᏩᏛᏍᏗ.  ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏂᎦᎥᏊ ᎤᎭ ᎠᏚᏓᎸᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᎵᏍᎪᎸᏙᏗ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ, ᎬᏙᏗ ᎠᎦᏛᎴᎯᏍᏗ ᎠᎴᏂᏙᎲ ᎯᎠ ᏩᏗᏱ ᎬᎾᏕᎾ ᏗᏓᏱᎵᏓᏍᏗ.
 
-ᎾᎿᎢ ᎨᏒᎢ ᏫᏚᏳᎪᏛ ᏫᏂᏚᏳᎪᏛ global harmonization ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏧᏂᎧᎿᏩᏛᏍᏗ, ᎬᏙᏗ ᎯᎠ [[World Trade Organization|WTO]] ᎠᎴᏂᏙᎲ ᎾᏍᎩᎾ ᎨᏒ lᏯᏛᏁᎯ ᎭᏫᎾᏗᏢ ᎪᎯ ᎡᏍᎦᏂ.  ᎯᎠ [[Agreement on Trade-Related Aspects of Intellectual Property Rights|ᏄᏁᎸᏛᎢ ᏓᏓᏁᏤᎸ]] ᎤᎭ ᏭᏪᏙᎢ ᎡᏆᏯ ᎦᏣᏄᎳ ᎭᏫᎾᏗᏢ ᎠᎾᏓᏁᎳᏍᎬ ᏗᏕᎶᏆᏍᏗ ᎾᏍᎩᎾᎢ ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᎣᏏ ᎠᏰᎸᏗ ᎾᎿ ᎢᏚᏳᎪᏛ ᎠᏫᏒᏗ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏧᏂᎧᎿᏩᏛᏍᏗ.  ᏗᏙᎳᎩ ᎬᏙᏗ ᎯᎠ ᏄᏁᎸᏛᎢ ᏓᏓᏁᏤᎸ ᎨᏒᎢ ᎤᎵᏁᏨ ᎢᏯᏛᏁᏗ ᎪᎯᏳᏙᏗ ᎯᎠ WTO ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎠᏍᏓᏩᏛᏍᏗ ᎨᏒᎢ ᎠᎪᎲᎢ ᎾᎥᎢ ᎤᎪᏗᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᏥᏄᏍᏗ ᎤᎵᏍᎨᏛ.  ᎪᎯ ᎤᎭ ᎾᏍᎩ ᎾᏍᏇ ᎤᏗᏅᏒᎩ ᎤᎪᏗᏗ ᎠᏙᎷᏩᏘᏍᎬ ᎠᏰᎵ ᏚᎾᏙᏢᏒ, ᎦᏙ ᎤᏍᏗ ᎠᎾᏍᎬᏘ ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ ᎤᎭ ᎤᏙᎷᏩᏛᏓ ᏄᏓᎴᎿᎥ ᏧᏂᎧᎿᏩᏛᏍᏗ ᎠᏓᏍᏕᎸᏗ ᎤᎾᏤᎵ ᏚᏙᎳᏩᏛᎲ, enforcing ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏧᏂᎧᎿᏩᏛᏍᏗ ᎭᏫᎾᏗᏢ ᎠᏍᏓᏅᏅ ᎬᏙᏗ global ᎠᎵᏏᎾᎯᏍᏙᏗ.
+ᎾᎿᎢ ᎨᏒᎢ ᏫᏚᏳᎪᏛ ᏫᏂᏚᏳᎪᏛ global harmonization ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏧᏂᎧᎿᏩᏛᏍᏗ, ᎬᏙᏗ ᎯᎠ [[World Trade Organization|WTO]] ᎠᎴᏂᏙᎲ ᎾᏍᎩᎾ ᎨᏒ lᏯᏛᏁᎯ ᎭᏫᎾᏗᏢ ᎪᎯ ᎡᏍᎦᏂ. ᎯᎠ [[Agreement on Trade-Related Aspects of Intellectual Property Rights|ᏄᏁᎸᏛᎢ ᏓᏓᏁᏤᎸ]] ᎤᎭ ᏭᏪᏙᎢ ᎡᏆᏯ ᎦᏣᏄᎳ ᎭᏫᎾᏗᏢ ᎠᎾᏓᏁᎳᏍᎬ ᏗᏕᎶᏆᏍᏗ ᎾᏍᎩᎾᎢ ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᎣᏏ ᎠᏰᎸᏗ ᎾᎿ ᎢᏚᏳᎪᏛ ᎠᏫᏒᏗ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏧᏂᎧᎿᏩᏛᏍᏗ.  ᏗᏙᎳᎩ ᎬᏙᏗ ᎯᎠ ᏄᏁᎸᏛᎢ ᏓᏓᏁᏤᎸ ᎨᏒᎢ ᎤᎵᏁᏨ ᎢᏯᏛᏁᏗ ᎪᎯᏳᏙᏗ ᎯᎠ WTO ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎠᏍᏓᏩᏛᏍᏗ ᎨᏒᎢ ᎠᎪᎲᎢ ᎾᎥᎢ ᎤᎪᏗᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᏥᏄᏍᏗ ᎤᎵᏍᎨᏛ. ᎪᎯ ᎤᎭ ᎾᏍᎩ ᎾᏍᏇ ᎤᏗᏅᏒᎩ ᎤᎪᏗᏗ ᎠᏙᎷᏩᏘᏍᎬ ᎠᏰᎵ ᏚᎾᏙᏢᏒ, ᎦᏙ ᎤᏍᏗ ᎠᎾᏍᎬᏘ ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ ᎤᎭ ᎤᏙᎷᏩᏛᏓ ᏄᏓᎴᎿᎥ ᏧᏂᎧᎿᏩᏛᏍᏗ ᎠᏓᏍᏕᎸᏗ ᎤᎾᏤᎵ ᏚᏙᎳᏩᏛᎲ, enforcing ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏧᏂᎧᎿᏩᏛᏍᏗ ᎭᏫᎾᏗᏢ ᎠᏍᏓᏅᏅ ᎬᏙᏗ global ᎠᎵᏏᎾᎯᏍᏙᏗ.
 
-ᎦᎸᎳᏗᎨᏍᏗ ᎢᎦᏪᏛ ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᎤᏓᏂᏝᏅ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎨᏒᎢ ᎯᎠ [[Paris Convention for the Protection of Industrial Property|ᏨᏓᏓᏨᏍᏙᏗ ᎤᏓᏂᏝᏅ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᎵᏍᏕᎸᏙᏗ  ᏧᏂᎸᏫᏍᏓᏁᏗ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ]] ᎦᏙ ᎤᏍᏗ ᏥᏄᏍᏛᎩ ᎠᎴᏅᏘᏍᎬ ᏚᏓᏂᎸᏨ ᎭᏫᎾᏗᏢ [[1883]].  ᎯᎠ ᏨᏓᏓᏨᏍᏙᏗ ᎤᏓᏂᏝᏅ ᏗᏫᏒᏗ ᎠᏥᏄqᎣᏫᏍᎬ ᎠᏍᏓᏅᏅ ᏄᏦᏍᏛᎾ ᏗᎫᎪᏔᏅ ᎦᏃᏢᎩ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ, ᎠᎴ ᎾᏍᎩ ᎤᏁᎳᎩ ᎯᎠ ᎤᏓᏂᏝᏅ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎭ ᎠᏓᏎᎮᏗ ᎧᎵᏗᎳᏏᏗ ᎢᏳᎵᏍᏙᏗ, ᎯᎠ ᏚᎵᏍᎪᎵᏴ ᎯᎠ ᎤᏓᏂᏝᏅ ᎠᎴ ᎤᎾᏙᏢᏅᎯ ᎾᎾᎯ ᏂᎦᏛ ᎢᎦᏪᏛ ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎢᏯhᏛᏁᎵᏓᏍᏗ.  ᎯᎠ ᎤᎪᏗᏗ ᎦᏛᎬᎢ ᎤᏔᏂᏗ ᎦᏙᎯ ᎯᎠ ᎤᏓᏂᏝᏅ ᎨᏒᎢ ᎯᎠ ᎠᎵᏍᏕᎸᏙᏗ ᎯᎠ ᏚᏳᎪᏛ ᎠᏆᏤᎵ ᎠᏛᏗ [[priority right|ᏭᎵᏍᎨᏗᏴ]]: ᏓᏢᎥᏍᎬ ᎠᏔᏲᏍᏙᏗ ᎭᏫᎾᏗᏢ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏌᏊ ᎨᎳ ᎤᏔᏂᏗ ᎦᏙᎯ ᎯᎠ ᏨᏓᏓᏨᏍᏙᏗ ᎤᏓᏂᏝᏅ ᎠᏍᏆᏂᎪᏙᏗ ᎯᎠ ᏚᏳᎪᏛ ᎾᏍᎩᎾᎢ ᏌᏊ ᏑᏕᏘᏴᏓ ᎠᏝᎥᎢ ᎭᏫᎾᏗᏢ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏐᎢ ᎨᎳ ᎤᏔᏂᏗ ᎦᏙᎯ, ᎠᎴ ᎠᎩᏍᏗ ᎯᎠ ᎤᎵᏍᏕᎸᏙᏗ ᎯᎠ ᎠᎴᏅᏗᏍᎬ ᏓᏢᎥᏍᎬ ᎢᏳ ᎢᎪᎯ.  ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᏚᏳᎪᏛ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎨᏒᎢ ᏂᎬᎢ ᎢᏳ ᎢᎪᎯ-ᎤᏱᎵᏒᎩ, ᎪᎯ ᏚᏳᎪᏛ ᎨᏒᎢ ᏄᎬᏫᏳᏒ ᏗᎳᏏᏙᏗ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏓᎦᏘᎴᎬ.
+ᎦᎸᎳᏗᎨᏍᏗ ᎢᎦᏪᏛ ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᎤᏓᏂᏝᏅ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎨᏒᎢ ᎯᎠ [[Paris Convention for the Protection of Industrial Property|ᏨᏓᏓᏨᏍᏙᏗ ᎤᏓᏂᏝᏅ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᎵᏍᏕᎸᏙᏗ  ᏧᏂᎸᏫᏍᏓᏁᏗ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ]] ᎦᏙ ᎤᏍᏗ ᏥᏄᏍᏛᎩ ᎠᎴᏅᏘᏍᎬ ᏚᏓᏂᎸᏨ ᎭᏫᎾᏗᏢ 1883. ᎯᎠ ᏨᏓᏓᏨᏍᏙᏗ ᎤᏓᏂᏝᏅ ᏗᏫᏒᏗ ᎠᏥᏄqᎣᏫᏍᎬ ᎠᏍᏓᏅᏅ ᏄᏦᏍᏛᎾ ᏗᎫᎪᏔᏅ ᎦᏃᏢᎩ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ, ᎠᎴ ᎾᏍᎩ ᎤᏁᎳᎩ ᎯᎠ ᎤᏓᏂᏝᏅ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎭ ᎠᏓᏎᎮᏗ ᎧᎵᏗᎳᏏᏗ ᎢᏳᎵᏍᏙᏗ, ᎯᎠ ᏚᎵᏍᎪᎵᏴ ᎯᎠ ᎤᏓᏂᏝᏅ ᎠᎴ ᎤᎾᏙᏢᏅᎯ ᎾᎾᎯ ᏂᎦᏛ ᎢᎦᏪᏛ ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎢᏯhᏛᏁᎵᏓᏍᏗ.  ᎯᎠ ᎤᎪᏗᏗ ᎦᏛᎬᎢ ᎤᏔᏂᏗ ᎦᏙᎯ ᎯᎠ ᎤᏓᏂᏝᏅ ᎨᏒᎢ ᎯᎠ ᎠᎵᏍᏕᎸᏙᏗ ᎯᎠ ᏚᏳᎪᏛ ᎠᏆᏤᎵ ᎠᏛᏗ [[priority right|ᏭᎵᏍᎨᏗᏴ]]: ᏓᏢᎥᏍᎬ ᎠᏔᏲᏍᏙᏗ ᎭᏫᎾᏗᏢ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏌᏊ ᎨᎳ ᎤᏔᏂᏗ ᎦᏙᎯ ᎯᎠ ᏨᏓᏓᏨᏍᏙᏗ ᎤᏓᏂᏝᏅ ᎠᏍᏆᏂᎪᏙᏗ ᎯᎠ ᏚᏳᎪᏛ ᎾᏍᎩᎾᎢ ᏌᏊ ᏑᏕᏘᏴᏓ ᎠᏝᎥᎢ ᎭᏫᎾᏗᏢ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏐᎢ ᎨᎳ ᎤᏔᏂᏗ ᎦᏙᎯ, ᎠᎴ ᎠᎩᏍᏗ ᎯᎠ ᎤᎵᏍᏕᎸᏙᏗ ᎯᎠ ᎠᎴᏅᏗᏍᎬ ᏓᏢᎥᏍᎬ ᎢᏳ ᎢᎪᎯ.  ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᏚᏳᎪᏛ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎨᏒᎢ ᏂᎬᎢ ᎢᏳ ᎢᎪᎯ-ᎤᏱᎵᏒᎩ, ᎪᎯ ᏚᏳᎪᏛ ᎨᏒᎢ ᏄᎬᏫᏳᏒ ᏗᎳᏏᏙᏗ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏓᎦᏘᎴᎬ.
 
 ᎯᎠ ᏓᎳᏏᏛ ᎾᏍᎩᎾᎢ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏧᏂᎧᎿᏩᏛᏍᏗ ᎭᏫᎾᏗᏢ ᏄᏓᎴᎿᎥ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ varies. ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ, ᎯᎠ [[United States Constitution|ᎦᎫᏍᏛᏗ]] ᎤᎳᏂᎬᎬ [[United States Congress|ᏩᏥᏂ ᏗᏂᎳᏫᎩ]] ᎪᏢᏗ ᏧᏂᎧᎿᏩᏛᏍᏗ "ᎧᏁᏉᏍᏗ ᎯᎠ ᎠᎵᎢᎵᏒ ᎠᎦᏙᎲᏍᏗ ᎠᎴ ᎤᎵᏍᎨᏓ ᏗᎾᏟᎶᏍᏗᏍᎩ..." ᎯᎠ ᏧᏂᎧᎿᏩᏛᏍᏗ ᏩᏥᏂ ᏗᏂᎳᏫᎩ ᎤᎶᏒᎩ ᎠᎴ codified ᎭᏫᎾᏗᏢ ᎦᏓ ᎦᏂᏴᏙ 35 ᎯᎠ [[United States Code|ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎠᏍᏓᏩᏛᏍᏙᏗ]] ᎠᎴ ᎪᏢᏅᎯ ᎯᎠ [[United States Patent and Trademark Office|ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎴ Trademark ᏗᎦᎸᏫᏍᏓᏁᏗ|]][http://www.law.cornell.edu/uscode/html/uscode35/usc_sup_01_35.html]. ᎭᏫᎾᏗᏢ ᎯᎠ UK, ᎬᏂᎨᏒ ᏄᏍᏛᎢ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏗᎧᎿᏩᏛᏍᏗ ᎨᏒᎢ ᎢᎦᎢ ᎨᏒᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎢᏯᏛᏁᎯ 1977 ᏥᏄᏍᏗ amended.<ref>ᎠᏫᏒᏗ ᎠᏰᎵ ᎤᎾᏙᏢᏒ ᏗᎧᎿᏩᏛᏍᏗ ᎠᏂᏁᎬ ᎢᏯᏛᏁᏗ Ꮭ ᎦᏛᎬᎢ ᏓᎳᏏᏛ ᎤᏍᏆᎸᎲ ᎯᎠ [[Supremacy of Parliament|ᎤᏂᎪᏗᏗ  ᏗᏂᎳᏫᎩ]].</ref>
 
-ᎭᏫᎾᏗᏢ ᎦᏟᏐᏗᎩ, ᎾᎿᎢ ᎠᎴ ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ ᎠᎯᎸᏍᏗᏱ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎠᎯᎸᏍᏗᏱ ᎭᏫᎾᏗᏢ ᎯᎠ [[European Patent Convention|European ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎤᏓᏂᏝᏅ]] (EPC) (administered ᎾᎥᎢ ᎯᎠ [[European Patent Office|European ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ]] (EPO), ᎠᎴ ᎯᎠ [[Patent Cooperation Treaty|ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎵᎪᏒ ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ]] (PCT) (administered ᎾᎥᎢ [[WIPO]] ᎠᎴ ᎫᏢᎥᏍᎬ ᎾᎥᏂᎨᏍᏙᏗᏇ 120 ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏗᏍᏆᎸᏙᏗ), Ꮎ centralize ᎢᎦᏛ ᎢᎦᏛ ᎯᎠ ᏓᏢᎥᏍᎬ ᎠᎴ ᎠᏥᎪᎵᏰᏗ ᎠᎯᎸᏍᏗᏱ.    ᎤᏠᏱ ᏗᏓᏁᎳᏅᎯ ᎬᏂᎨᏒ ᏄᏍᏗ ᏄᎾᏛᏅ ᎯᎠ ᎨᎳ ᎧᏃᎮᎭ ARIPO, OAPI, ᎯᎠ ᎾᎥᏂᎨ ᎡᎵᏍᏗ treaties ᏄᎾᏛᏅ African ᎠᎴ Asian ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ.
+ᎭᏫᎾᏗᏢ ᎦᏟᏐᏗᎩ, ᎾᎿᎢ ᎠᎴ ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ ᎠᎯᎸᏍᏗᏱ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎠᎯᎸᏍᏗᏱ ᎭᏫᎾᏗᏢ ᎯᎠ [[European Patent Convention|European ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎤᏓᏂᏝᏅ]] (EPC) (administered ᎾᎥᎢ ᎯᎠ [[European Patent Office|European ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ]] (EPO), ᎠᎴ ᎯᎠ [[Patent Cooperation Treaty|ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎵᎪᏒ ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ]] (PCT) (administered ᎾᎥᎢ [[WIPO]] ᎠᎴ ᎫᏢᎥᏍᎬ ᎾᎥᏂᎨᏍᏙᏗᏇ 120 ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏗᏍᏆᎸᏙᏗ), Ꮎ centralize ᎢᎦᏛ ᎢᎦᏛ ᎯᎠ ᏓᏢᎥᏍᎬ ᎠᎴ ᎠᏥᎪᎵᏰᏗ ᎠᎯᎸᏍᏗᏱ. ᎤᏠᏱ ᏗᏓᏁᎳᏅᎯ ᎬᏂᎨᏒ ᏄᏍᏗ ᏄᎾᏛᏅ ᎯᎠ ᎨᎳ ᎧᏃᎮᎭ ARIPO, OAPI, ᎯᎠ ᎾᎥᏂᎨ ᎡᎵᏍᏗ treaties ᏄᎾᏛᏅ African ᎠᎴ Asian ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ.
 
-ᏥᏄᏍᏗ ᏗᎪᏏᏌᏅᎯ ᎭᏫᎾᏗᏢ ᎤᏟ ᎢᎦᎢ ᏄᏍᏗᏓᏅᎢ ᎭᏫᎾᏗᏢ [[European patent law|European ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏗᎧᎿᏩᏛᏍᏗ]], ᎯᎠ EPC ᏗᎫᏝᎢ ᎾᎥᏂᎨᏍᏙᏗᏇ 30 European ᎧᏃᎮᎭ, ᎠᏠᏯᏍᏗᏍᎩ ᏂᎦᏛ [[European Union|European ᏗᏌᏊ ᎤᎾᎵᎪᎯ]] ᎧᏃᎮᎭ ᎾᏍᎩ ᎤᏩᏒ [[Malta]].  ᎯᎠ EPO ᎠᎦᏎᏍᏙᏗ ᎠᎴ ᎠᎵᏍᎪᎸᏙᏗ "European ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ" ᎦᏙ ᎤᏍᏗ, ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎠᏲᎵ ᎢᎬᏱ ᎦᏰᎯ ᏚᎵᏁᏨ ᎢᏯᏛᏁᏗ, ᎾᎯᏳᎢ ᎣᏤᎵ ᎢᎬᏁᏗ ᎯᎠ ᎤᏠᏱ ᏄᏍᏗᏓᏅ ᎠᎴ ᎦᏌᏙᏯᏍᏗ ᏥᏄᏍᏗ ᎬᎾᏕᎾ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎬᎾᏕᎾ ᏧᏂᎧᎿᏩᏛᏍᏗ ᏯᏛᎿ EPC ᎠᎦᏲᎳᏗᏍᏗ ᎧᏃᎮᎭ ᏥᏄᏍᏗ ᎯᎠ ᎠᏔᏲᎯᎯ ᏫᏚᏳᎪᏛ. [http://www.european-patent-office.org/legal/epc/e/ar2.html EPC Art. 2(2)] <ref> ᏗᏂᏃᎩᏍᏗᏍᎩ/Stauder, ''ᎯᎠ European ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎤᏓᏂᏝᏅ, ᏩᏎᏍᏗ ᎾᎿ'', Munich, 2003</ref>  ᎯᎠ EPC ᏩᏗᏱ ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ ᎬᏂᎨᏒ ᏄᏍᏛᎢ ᎠᏯᏙᎯᎲ European ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ, ᎨᏛᎢ-ᎠᎵᏍᎪᎸᏙᏗ, ᎬᎾᏕᎾ ᏗᎧᎿᏩᏛᏍᏗ. 
+ᏥᏄᏍᏗ ᏗᎪᏏᏌᏅᎯ ᎭᏫᎾᏗᏢ ᎤᏟ ᎢᎦᎢ ᏄᏍᏗᏓᏅᎢ ᎭᏫᎾᏗᏢ [[European patent law|European ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏗᎧᎿᏩᏛᏍᏗ]], ᎯᎠ EPC ᏗᎫᏝᎢ ᎾᎥᏂᎨᏍᏙᏗᏇ 30 European ᎧᏃᎮᎭ, ᎠᏠᏯᏍᏗᏍᎩ ᏂᎦᏛ [[European Union|European ᏗᏌᏊ ᎤᎾᎵᎪᎯ]] ᎧᏃᎮᎭ ᎾᏍᎩ ᎤᏩᏒ [[Malta]].  ᎯᎠ EPO ᎠᎦᏎᏍᏙᏗ ᎠᎴ ᎠᎵᏍᎪᎸᏙᏗ "European ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ" ᎦᏙ ᎤᏍᏗ, ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎠᏲᎵ ᎢᎬᏱ ᎦᏰᎯ ᏚᎵᏁᏨ ᎢᏯᏛᏁᏗ, ᎾᎯᏳᎢ ᎣᏤᎵ ᎢᎬᏁᏗ ᎯᎠ ᎤᏠᏱ ᏄᏍᏗᏓᏅ ᎠᎴ ᎦᏌᏙᏯᏍᏗ ᏥᏄᏍᏗ ᎬᎾᏕᎾ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎬᎾᏕᎾ ᏧᏂᎧᎿᏩᏛᏍᏗ ᏯᏛᎿ EPC ᎠᎦᏲᎳᏗᏍᏗ ᎧᏃᎮᎭ ᏥᏄᏍᏗ ᎯᎠ ᎠᏔᏲᎯᎯ ᏫᏚᏳᎪᏛ.<ref>[http://www.european-patent-office.org/legal/epc/e/ar2.html EPC Art. 2(2)]</ref><ref>ᏗᏂᏃᎩᏍᏗᏍᎩ/Stauder, ''ᎯᎠ European ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎤᏓᏂᏝᏅ, ᏩᏎᏍᏗ ᎾᎿ'', Munich, [[ᎠᏂᏛᏥ]], 2003</ref>  ᎯᎠ EPC ᏩᏗᏱ ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ ᎬᏂᎨᏒ ᏄᏍᏛᎢ ᎠᏯᏙᎯᎲ European ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ, ᎨᏛᎢ-ᎠᎵᏍᎪᎸᏙᏗ, ᎬᎾᏕᎾ ᏗᎧᎿᏩᏛᏍᏗ. 
 
 ᎯᎠ PCT ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏓᏁᎳᏁᏗ ᎠᏰᎵ, ᎠᏰᎵ ᏚᎾᏙᏢᏒ, ᎠᎵᏍᎪᎳᏗᏍᎩ ᏓᎳᏏᏛ, ᎠᎴ ᎤᏟ ᎬᏰᎸᏗ ᎠᎵᏍᎪᎸᏙᏗ ᏎᏍᏗ ᎯᎠ ᏧᏣᏔᏊ procedural ᎠᎳᏍᎬᏎᎬ ᎧᏁᏨ ᎢᏯᏛᏁᏗ ᎣᏤᎵ ᎢᎬᏁᎯ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎾᏍᏋ ᎠᏫᏛᏓ ᎠᏥᏄqᎣᏫᏍᎬ ᎾᏍᎩᎾᎢ ᏏᏴᏫ ᎠᏔᏲᏍᏙᏗ.  ᎯᎠ PCT ᎢᏯhᏛᏁᎵᏓᏍᏗ ᎨᏒᎢ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎠᏏᎾᏍᏛ ᏫᏚᏳᎪᏛ ᎣᏤᎵ ᎾᎬᏁᎲ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎭᏫᎾᏗᏢ ᎡᏆ ᏎᏍᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏥᏄᏍᏗ ᎤᎪᏗᏗ ᎯᎠ ᎠᎳᏍᎬᏎᎬ ᎤᏚᎳᏗ ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᏋ ᏄᏛᏁᎸ ᏌᏊ ᎢᏳᏩᎫᏗ.  PCT ᎠᏔᏲᏍᏙᏗ ᎾᏍᎩ ᎾᏍᏇ ᎪᎯᏗᏍᏗ ᎤᎪᏗᏗ ᎯᎠ ᎦᎸᎳᏗᎨᏍᏗ-ᎤᎪᏗ ᏗᎵᎬᏩᎸᏍᎩ ᎠᏓᏅᏍᏗ [[patent prosecution|prosecuting]] ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ.
 
 == ᎠᎳᏏᏅᏙᏗ ᏂᎬᏂᏏᏍᎬ ==
 
-
 ᎾᎿᎢ ᎠᎴ ᏅᎩ ᎢᎬᏱ ᎠᎴᏅᏗ ᎦᎴᏴᏗᏍᎬᎢ ᎾᏍᎩᎾᎢ ᎠᎵᏍᎪᎳᏗᏍᎩ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ: ᏧᎾᏍᏗ, ᎪᎷᏩᏛᏗ, ᎠᏛᎯᏍᏙᏗ ᎫᏢᎥᏍᎬ, ᎠᎴ ᎢᏯᏓᏛᏁᎸ ᏴᏩtᎤᏫᏛ.
 
-ᎢᎬᏱ, ᎭᏫᎾᏗᏢ ᏗᏙᎳᎩ ᎬᏙᏗ ᎯᎠ ᎠᎴᏅᏗᏍᎬ ᏩᏎᏍᏗ ᎾᎿ ᎯᎠ ᎠᎴᏂᏍᎬ "ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ," ᎾᏍᎩ ᎨᏒᎢ argued Ꮎ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᏛᏅᎢᏍᏔᏅ ᎠᎴ ᎠᏓᎦᎳᏍᏓᏗᏍᏗ ᎪᎷᏩᏛᏗ [[innovation|ᏧᎾᏍᏗ]]ᎾᎾᎯ ᎯᎠ [[public domain|ᏴᏫ ᎤᏁᏓᏍᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] ᎾᏍᎩᎾᎢ ᎯᎠ [[common good|ᏧᏣᏔᏊ ᎣᏍᏛ]]. ᎢᏳᏃ [[inventor|ᎪᏪᎵ Ꭺgoweli gowlisgi]]ᏄᏛᏁᎸ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎭ ᎯᎠ ᎧᎵᏗᎳᏏᏗ ᎠᎵᏍᏕᎸᏙᏗ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ, ᎤᏅᏌ ᎠᎾᏍᎬᏘ ᎤᏟ ᎬᏰᎸᏗ ᎠᎴ ᏫᏚᏳᎪᏛ ᎠᏍᏆᏂᎪᏙᏗ ᎤᎾᏤᎵ ᏗᏁᏝᎾ ᎤᏕᎵᏓ. ᏗᎫᎪᏔᏅ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏂᎦᎥᏊ ᏗᎪᏢᏅ ᎯᎠ ᏂᏕᎬᎿᏅᎢ ᎢᏤ ᎠᏏᎾᏒᎢ ᏕᎦᏃᏣᎸ ᏰᎵ ᎠᏩᏛᏗ, ᎾᏍᎩᎾᎢ ᎤᏂᎦᏛᎲᏍᎩ ᎾᎥᎢ ᎾᏂᎥᏇ ᎤᎶᏐᏅ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎵᏍᏕᎸᏙᏗ ᏚᎵᏍᏛ, ᎠᎴ ᎾᏍᎩᎾᎢ ᎤᏗᏗᏢ ᎠᎵᎢᎵᏒ ᎾᎥᎢ ᏐᎢ ᎪᏪᎵ ᎪᎪᏪᎵ ᎪwᎵᏍᎩ. ᎤᏗᏗᏢᎢᎨᏍᏙᏗ, ᎯᎳᎪ ᎢᏳ [[term of patent|ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎤᏤᎵ ᎠᎴᏂᏍᎬ]] ᎤᎭ ᎤᎵᏍᏆᏛ, ᎯᎠ ᏴᏫ ᎤᏁᏓᏍᏗ ᎪᏪᎸ ᎠᏍᏓᏩᏛᏍᏗ Ꮎ ᎯᎠ patentee ᎤᏤᎵ ᎠᏓᏅᏖᏗ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎴᎾᎯᏛ ᏴᏫ ᎠᏁᎲ.
+ᎢᎬᏱ, ᎭᏫᎾᏗᏢ ᏗᏙᎳᎩ ᎬᏙᏗ ᎯᎠ ᎠᎴᏅᏗᏍᎬ ᏩᏎᏍᏗ ᎾᎿ ᎯᎠ ᎠᎴᏂᏍᎬ "ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ," ᎾᏍᎩ ᎨᏒᎢ argued Ꮎ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᏛᏅᎢᏍᏔᏅ ᎠᎴ ᎠᏓᎦᎳᏍᏓᏗᏍᏗ ᎪᎷᏩᏛᏗ [[innovation|ᏧᎾᏍᏗ]] ᎾᎾᎯ ᎯᎠ [[public domain|ᏴᏫ ᎤᏁᏓᏍᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] ᎾᏍᎩᎾᎢ ᎯᎠ [[common good|ᏧᏣᏔᏊ ᎣᏍᏛ]]. ᎢᏳᏃ [[inventor|ᎪᏪᎵ ᎪᏪᎵᏍᏗ]]ᏄᏛᏁᎸ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎭ ᎯᎠ ᎧᎵᏗᎳᏏᏗ ᎠᎵᏍᏕᎸᏙᏗ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ, ᎤᏅᏌ ᎠᎾᏍᎬᏘ ᎤᏟ ᎬᏰᎸᏗ ᎠᎴ ᏫᏚᏳᎪᏛ ᎠᏍᏆᏂᎪᏙᏗ ᎤᎾᏤᎵ ᏗᏁᏝᎾ ᎤᏕᎵᏓ. ᏗᎫᎪᏔᏅ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏂᎦᎥᏊ ᏗᎪᏢᏅ ᎯᎠ ᏂᏕᎬᎿᏅᎢ ᎢᏤ ᎠᏏᎾᏒᎢ ᏕᎦᏃᏣᎸ ᏰᎵ ᎠᏩᏛᏗ, ᎾᏍᎩᎾᎢ ᎤᏂᎦᏛᎲᏍᎩ ᎾᎥᎢ ᎾᏂᎥᏇ ᎤᎶᏐᏅ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎵᏍᏕᎸᏙᏗ ᏚᎵᏍᏛ, ᎠᎴ ᎾᏍᎩᎾᎢ ᎤᏗᏗᏢ ᎠᎵᎢᎵᏒ ᎾᎥᎢ ᏐᎢ ᎪᏪᎵ ᎪᏪᎵᏍᏗ. ᎤᏗᏗᏢᎢᎨᏍᏙᏗ, ᎯᎳᎪ ᎢᏳ [[term of patent|ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎤᏤᎵ ᎠᎴᏂᏍᎬ]] ᎤᎭ ᎤᎵᏍᏆᏛ, ᎯᎠ ᏴᏫ ᎤᏁᏓᏍᏗ ᎪᏪᎸ ᎠᏍᏓᏩᏛᏍᏗ Ꮎ ᎯᎠ patentee ᎤᏤᎵ ᎠᏓᏅᏖᏗ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎴᎾᎯᏛ ᏴᏫ ᎠᏁᎲ.
 
-ᏔᎵᏁ, ᎾᏍᎩ ᎨᏒᎢ ᎠᏯᏖᎾ ᎤᏬᎯᏳᏅ Ꮎ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᏓᏁᎳᏁᏗ ᏄᏍᏛ ᏕᎫᎪᏗᏍᎬ ᎾᏍᎩᎾᎢ ᎠᎳᏏᎾᎯᏍᏗ ᎠᏏᎾᏍᏛ [[research and development|ᏅᎠᏯᏍᏗ ᎠᎴ ᏚᏙᎳᏩᏛᎲ]] (R&D). ᎤᎪᏗᏗ ᎡᏆ ᎪᎯᏊ ᎢᏴ ᏥᎩ [[corporation|ᎤᎾᏙᏢᎯ]]ᎤᎭ ᎾᏕᏘᏴᎯᏒ R&D ᎠᏓᏁᎶᏗ ᎢᏯᏍᎪᎯᏧᏈ ᎢᏧᏆᏗᏅᏓ ᎠᎴ ᎢᏧᎳᎭ ᎯᏍᎩ ᎤᏂᏃᏍᏓ. ᏄᏠᏯᏍᏛᎾ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎵᏍᏕᎸᏙᏗ, R&D ᎤᏂᏩᏍᎬ ᏯᏓᎢᏗᏏ ᎾᏍᏋ ᎦᏛᎬᎢ ᎦᏲᎵᎨ ᎠᎴ eliminated ᏂᎦᏛ, ᎠᏎᎸᎯ ᎯᎠ ᎤᏝᏅᏓᏕᎲ technological ᎠᏓᏌᎳᏙᏗ ᎠᎴ breakthroughs. ᎤᎾᏙᏢᎯ ᏯᏓᎢᏗᏏ ᎾᏍᏋ ᎤᏣᏘ ᎤᏟ ᎢᎦᎢ ᎠᏂᏙᎾᎥ ᎬᏩᏚᏫᏛ ᎯᎠ R&D ᎫᏢᎥᏍᎬ ᎤᏅᏌ ᎪᏢᏅᎯ, ᏥᏄᏍᏗ ᏦᎢᏁ ᏚᎾᏓᏟᏌᎲ ᏯᏓᎢᏗᏏ ᎾᏍᏋ [[free rider problem|ᎠᏎᏊᎢ  ᎠᎵᏖᎸᏗ]] ᏂᎦᎵᏍᏗᏍᎬᎫ ᏚᎾᏙᎷᏩᏛᎲ. ᎪᎯ ᏔᎵᏁ ᎦᎴᏴᏗᏍᎬᎢ ᎨᏒᎢ ᎾᎥᏂᎨᎢ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎯᎠ ᏄᏦᏍᏛᎾ ᎠᏓᏅᏖᏗ underlying ᎧᏃᎮᎸᎯ [[property (ownership right)|ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ ᏂᏚᏳᎪᏛ]]: ᎦᏙᏃ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ ᎦᎵᏦᏕ ᎢᏳᏃ ᏄᏓᎴ ᎠᏏᏴᏫ ᏰᎵᏇ ᏄᏚᏓᎸᎾ ᎠᎦᏁᎸ ᎾᏍᎩ?
+ᏔᎵᏁ, ᎾᏍᎩ ᎨᏒᎢ ᎠᏯᏖᎾ ᎤᏬᎯᏳᏅ Ꮎ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᏓᏁᎳᏁᏗ ᏄᏍᏛ ᏕᎫᎪᏗᏍᎬ ᎾᏍᎩᎾᎢ ᎠᎳᏏᎾᎯᏍᏗ ᎠᏏᎾᏍᏛ [[research and development|ᏅᎠᏯᏍᏗ ᎠᎴ ᏚᏙᎳᏩᏛᎲ]] (R&D). ᎤᎪᏗᏗ ᎡᏆ ᎪᎯᏊ ᎢᏴ ᏥᎩ [[corporation|ᎤᎾᏙᏢᎯ]] ᎤᎭ ᎾᏕᏘᏴᎯᏒ R&D ᎠᏓᏁᎶᏗ ᎢᏯᏍᎪᎯᏧᏈ ᎢᏧᏆᏗᏅᏓ ᎠᎴ ᎢᏧᎳᎭ ᎯᏍᎩ ᎤᏂᏃᏍᏓ. ᏄᏠᏯᏍᏛᎾ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎵᏍᏕᎸᏙᏗ, R&D ᎤᏂᏩᏍᎬ ᏯᏓᎢᏗᏏ ᎾᏍᏋ ᎦᏛᎬᎢ ᎦᏲᎵᎨ ᎠᎴ eliminated ᏂᎦᏛ, ᎠᏎᎸᎯ ᎯᎠ ᎤᏝᏅᏓᏕᎲ technological ᎠᏓᏌᎳᏙᏗ ᎠᎴ breakthroughs. ᎤᎾᏙᏢᎯ ᏯᏓᎢᏗᏏ ᎾᏍᏋ ᎤᏣᏘ ᎤᏟ ᎢᎦᎢ ᎠᏂᏙᎾᎥ ᎬᏩᏚᏫᏛ ᎯᎠ R&D ᎫᏢᎥᏍᎬ ᎤᏅᏌ ᎪᏢᏅᎯ, ᏥᏄᏍᏗ ᏦᎢᏁ ᏚᎾᏓᏟᏌᎲ ᏯᏓᎢᏗᏏ ᎾᏍᏋ [[free rider problem|ᎠᏎᏊᎢ  ᎠᎵᏖᎸᏗ]] ᏂᎦᎵᏍᏗᏍᎬᎫ ᏚᎾᏙᎷᏩᏛᎲ. ᎪᎯ ᏔᎵᏁ ᎦᎴᏴᏗᏍᎬᎢ ᎨᏒᎢ ᎾᎥᏂᎨᎢ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎯᎠ ᏄᏦᏍᏛᎾ ᎠᏓᏅᏖᏗ underlying ᎧᏃᎮᎸᎯ [[property (ownership right)|ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ ᏂᏚᏳᎪᏛ]]: ᎦᏙᏃ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ ᎦᎵᏦᏕ ᎢᏳᏃ ᏄᏓᎴ ᎠᏏᏴᏫ ᏰᎵᏇ ᏄᏚᏓᎸᎾ ᎠᎦᏁᎸ ᎾᏍᎩ?
 
-ᏦᎢᏁ, ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ industries (ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎬᏙᏗ ᎦᎸᎳᏗ ᎣᏍᏛ ᏄᏩᏁᎸ ᏚᏂᎬᏩᎶᏛ ᎠᎴ ᎢᏳᏍᏗᏊ ᎡᎳᏗ ᎠᏍᏛᎢ ᏚᏂᎬᏩᎶᏛ ᎠᎴ ᎡᎳᏗ ᎠᏨᏍᏙᏗ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᏚᏂᎬᏩᎶᏛ - ᎡᎵᏍ processors, software, ᎠᎴ ᎠᏅᏬᏗ ᎠᎴᏂᏙᎲ prototypical ᏱᏓᏟᎶᏍᏔᏅ), ᏌᏊ ᎢᏳᏩᎫᏗ ᏗᏁᏝᎾ ᎬᏂᎨᏒ ᏂᏚᏍᏗ, ᎯᎠ ᏓᎬᏩᎶᏛ commercial productization (ᎠᎦᏛᏗ, ᎠᏣᏅᏙ ᎦᎸᎳᏗᏢ ᎪᎱᏍᏗ ᎤᏃᏢᏗ, ᎠᏙᎷᏩᏘᏍᎬ ᎤᏂᎾᏗᏅᏗ, ᎠᎴ ᎤᏠᏯᏍᏗ.) ᎨᏒᎢ ᎢᏅ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᎯᎠ ᎠᎴᏅᏘᏍᎬ ᏗᎧᏃᏗ ᎠᏓᏁᏟᏴᏍᎬ ᏓᎬᏩᎶᏛ.  (ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎯᎠ "ᎠᏍᏓᏩᏛᏍᏙᏗ ᎤᏚᏂᎯᏯᏍᏓ" ᎾᏍᎩᎾᎢ ᎡᎵᏍ ᏚᎾᏓᏡᎬᎢ ᎭᏫᎾᏗᏢ ᎯᎠ 1980 ᎤᏤᎵ ᏥᏄᏍᏛᎩ Ꮎ ᎨᏛᎢ-R&D ᏚᏂᎬᏩᎶᏛ ᎨᏒᎩ 7--1 {{citation needed}}).  ᏄᏍᏗᏓᏅ ᎾᎿᎢ ᎨᏒᎢ ᎢᎦᏛ ᎦᎶᎯᏍᏗ ᎠᎴᏫᏍᏔᏅ ᎯᎸᏍᎩ ᏗᏟᎶᏍᏔᏅ ᏂᏛᎴᏅᏓ competing ᎾᎾᎢ ᎯᎠ ᎠᏍᏛᎢ ᏓᎬᏩᎶᏛ ᎠᏛᎯᏍᏙᏗ, ᏚᎾᏓᏡᎬᎢ ᏫᎵ ᎾᏍᎩ ᏂᎨᏒᎾ ᎪᏢᏗ Ꮎ productization ᎫᏢᎥᏍᎬ.
+ᏦᎢᏁ, ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ industries (ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎬᏙᏗ ᎦᎸᎳᏗ ᎣᏍᏛ ᏄᏩᏁᎸ ᏚᏂᎬᏩᎶᏛ ᎠᎴ ᎢᏳᏍᏗᏊ ᎡᎳᏗ ᎠᏍᏛᎢ ᏚᏂᎬᏩᎶᏛ ᎠᎴ ᎡᎳᏗ ᎠᏨᏍᏙᏗ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᏚᏂᎬᏩᎶᏛ - ᎡᎵᏍ processors, software, ᎠᎴ ᎠᏅᏬᏗ ᎠᎴᏂᏙᎲ prototypical ᏱᏓᏟᎶᏍᏔᏅ), ᏌᏊ ᎢᏳᏩᎫᏗ ᏗᏁᏝᎾ ᎬᏂᎨᏒ ᏂᏚᏍᏗ, ᎯᎠ ᏓᎬᏩᎶᏛ commercial productization (ᎠᎦᏛᏗ, ᎠᏣᏅᏙ ᎦᎸᎳᏗᏢ ᎪᎱᏍᏗ ᎤᏃᏢᏗ, ᎠᏙᎷᏩᏘᏍᎬ ᎤᏂᎾᏗᏅᏗ, ᎠᎴ ᎤᏠᏯᏍᏗ.) ᎨᏒᎢ ᎢᏅ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᎯᎠ ᎠᎴᏅᏘᏍᎬ ᏗᎧᏃᏗ ᎠᏓᏁᏟᏴᏍᎬ ᏓᎬᏩᎶᏛ.  (ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎯᎠ "ᎠᏍᏓᏩᏛᏍᏙᏗ ᎤᏚᏂᎯᏯᏍᏓ" ᎾᏍᎩᎾᎢ ᎡᎵᏍ ᏚᎾᏓᏡᎬᎢ ᎭᏫᎾᏗᏢ ᎯᎠ 1980 ᎤᏤᎵ ᏥᏄᏍᏛᎩ Ꮎ ᎨᏛᎢ-R&D ᏚᏂᎬᏩᎶᏛ ᎨᏒᎩ 7–1).  ᏄᏍᏗᏓᏅ ᎾᎿᎢ ᎨᏒᎢ ᎢᎦᏛ ᎦᎶᎯᏍᏗ ᎠᎴᏫᏍᏔᏅ ᎯᎸᏍᎩ ᏗᏟᎶᏍᏔᏅ ᏂᏛᎴᏅᏓ competing ᎾᎾᎢ ᎯᎠ ᎠᏍᏛᎢ ᏓᎬᏩᎶᏛ ᎠᏛᎯᏍᏙᏗ, ᏚᎾᏓᏡᎬᎢ ᏫᎵ ᎾᏍᎩ ᏂᎨᏒᎾ ᎪᏢᏗ Ꮎ productization ᎫᏢᎥᏍᎬ.
 
 ᏅᎩᏁ, ᎤᎪᏗᏗ ᎤᏬᎯᏳ Ꮎ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏂᏚᏳᎪᏛ ᎪᏢᏗ ᏄᏍᏛ ᏕᎫᎪᏗᏍᎬ ᎾᏍᎩᎾᎢ ᏚᎾᏓᏡᎬᎢ ᎤᏙᎷᏬᏗ workarounds patented ᏗᏁᏝᎾ, ᎾᎥᏂᎨᏍᏗ creating ᎪᏢᎯᏌᏅ ᎠᎴ ᏅᎪᏢᎯᏐᏗᏱ technologies Ꮎ ᏄᎵᏂᎬᎬ ᎾᏍᎩ ᏂᎨᏒᎾ ᎢᏳᏃ ᏰᎵ ᎤᎭ ᏭᏪᏙᎢ ᎤᏙᎷᏩᏛᏓ.
 
-ᏌᏊ ᎤᏍᏆᏂᎪᏗ ᎠᏍᏆᎨᏂ ᎢᏳᎵᏍᏙᏗ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎢᎦ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏓᎦᏘᎴᎬ ᎨᏒᎢ Ꮎ ᎯᎠ ᎤᏍᏗ-ᎢᏳᏩᎪᏗ ᎪᏪᎵ ᎪᎪᏪᎵ ᎪwᎵᏍᎩ ᏰᎵᏇ ᎬᏙᏗ ᎯᎠ ᎬᏫᏍᏓᏗ ᏚᏳᎪᏛ ᏄᏍᏗᏓᏅ ᏗᏙᎳᎩ licensor.  ᎪᎯ ᎠᎵᏍᎪᎸᏙᏗ ᎯᎠ ᎪᏪᎵ ᎪᎪᏪᎵ ᎪwᎵᏍᎩ ᎦᏒᏔᏍᏗ ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ ᏄᎵᏍᏛ ᏂᏛᎴᏅᏓ licensing ᎯᎠ ᏗᏁᏝᎾ ᎠᎴ ᎠᎾᏍᎬᏘ ᎠᎵᏍᎪᎸᏙᏗ ᎦᏣᏄᎳ ᏧᎾᏍᏗ ᏄᎵᏍᏔᏅ ᎢᎬᏂᏏᏍᎩ ᎾᏍᎩ ᎠᏍᎦᏯ/ᎾᏍᎩ ᎠᎨᏴ ᎠᎾᏍᎬᏘ ᎠᏑᏰᏍᏗ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏓᏅᏖᎵᏍᏓᏍᏗ ᎠᏃᏢᏅᎥᏍᎬ buildup ᎾᏍᎩᎾᎢ ᎯᎠ ᏗᏁᏝᎾ.  ᎯᎠ ᎢᏴ ᎯᎠ ᎪᏪᎵ ᎪᎪᏪᎵ ᎪwᎵᏍᎩ ᎤᏤᎵ ᎢᏳᏩᎪᏗ ᎠᎴ ᏄᎵᏂᎬᎬ ᏰᎵᏇ ᎾᏍᏋ ᎤᏂᏩᏒ ᎾᎿ ᎤᏓᏅᎦᎸᏓ ᏧᎾᏍᏗ, ᎠᎵᏍᎪᎸᏙᏗ ᎠᏂᏐᎢ ᎤᏓᏂᏝᏅ ᎾᎿ manufacturability. 
+ᏌᏊ ᎤᏍᏆᏂᎪᏗ ᎠᏍᏆᎨᏂ ᎢᏳᎵᏍᏙᏗ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎢᎦ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏓᎦᏘᎴᎬ ᎨᏒᎢ Ꮎ ᎯᎠ ᎤᏍᏗ-ᎢᏳᏩᎪᏗ ᎪᏪᎵ ᎪᏪᎵᏍᏗ ᏰᎵᏇ ᎬᏙᏗ ᎯᎠ ᎬᏫᏍᏓᏗ ᏚᏳᎪᏛ ᏄᏍᏗᏓᏅ ᏗᏙᎳᎩ licensor.  ᎪᎯ ᎠᎵᏍᎪᎸᏙᏗ ᎯᎠ ᎪᏪᎵ ᎪᏪᎵᏍᏗ ᎦᏒᏔᏍᏗ ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ ᏄᎵᏍᏛ ᏂᏛᎴᏅᏓ licensing ᎯᎠ ᏗᏁᏝᎾ ᎠᎴ ᎠᎾᏍᎬᏘ ᎠᎵᏍᎪᎸᏙᏗ ᎦᏣᏄᎳ ᏧᎾᏍᏗ ᏄᎵᏍᏔᏅ ᎢᎬᏂᏏᏍᎩ ᎾᏍᎩ ᎠᏍᎦᏯ/ᎾᏍᎩ ᎠᎨᏴ ᎠᎾᏍᎬᏘ ᎠᏑᏰᏍᏗ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏓᏅᏖᎵᏍᏓᏍᏗ ᎠᏃᏢᏅᎥᏍᎬ buildup ᎾᏍᎩᎾᎢ ᎯᎠ ᏗᏁᏝᎾ.  ᎯᎠ ᎢᏴ ᎯᎠ ᎪᏪᎵ ᎪᏪᎵᏍᏗ ᎤᏤᎵ ᎢᏳᏩᎪᏗ ᎠᎴ ᏄᎵᏂᎬᎬ ᏰᎵᏇ ᎾᏍᏋ ᎤᏂᏩᏒ ᎾᎿ ᎤᏓᏅᎦᎸᏓ ᏧᎾᏍᏗ, ᎠᎵᏍᎪᎸᏙᏗ ᎠᏂᏐᎢ ᎤᏓᏂᏝᏅ ᎾᎿ manufacturability. 
 
 === ᎠᏙᏚᎯᏍᏙᏗ ===
 
 ᎾᎿᎢ ᎠᎴ ᏓᏃᏏᏏᏍᎬ ᎭᏫᎾᏗᏢ ᏗᎦᏘᎸᏍᏗ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏂᏚᏳᎪᏛ. ᎠᎵᏍᎪᎳᏗᏍᎩ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎵᏃᎮᏗ "ᏗᎦᏘᎴᎩ ᏄᏍᏛ ᎧᏃᎮᏗ ᏚᏳᎪᏛ" ᎾᏍᎩ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎤᏤᎵᎢ, ᎢᎬᏂᏏᏍᎩ ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᎴ ᎾᏍᎩ ᎠᎨᏴ ᎠᎾᏍᎬᏘ ᏗᏂᎳᏫᎩ ᎬᏫᏍᏓᏗ ᏗᏓᎦᏘᎴᎩ ᏂᏛᎴᏅᏓ ᎬᏗᏍᎬᎢ ᎠᎴ ᎠᎵᏖᎸᏗ ᎯᎠ ᏗᏁᏝᎾ, ᎢᏧᎳᎭ ᎢᏳᏃ ᎯᎠ ᏗᏓᎦᏘᎴᎩ ᎠᏍᏓᏩᏗᏒ (ᎢᏳᏍᏗᏊ ᎠᏍᏓᏩᏗᏒ ᎯᎠ ᎢᏳ ᎢᎪᎯ ᏗᏁᏝᎾ, ᎠᎴ ᎯᎠ [[priority date|ᏭᎵᏍᎨᏗᏴ ᎢᏳ ᎢᎪᎯ]], ᎥᎵᏍᎦᏍᏙᏗᏍᎬ ᎾᏍᎩ ᎯᎠ ᎠᎾᎵᏐᏈᎸᏍᎬ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏗᎧᎿᏩᏛᏍᏗ - ᎠᎪᏩᏛᏗ [[First to file and first to invent|ᎢᎬᏱ  ᎠᏝᎥᎢ ᎠᎴ ᎢᎬᏱ  ᎪᎷᏩᏛᏗ]]) ᎤᎾᏤᎵᏛ ᎤᎾᏙᏢᎯ ᎤᏙᎷᏬᏗ ᎯᎠ ᎤᏠᏱ ᏗᏁᏝᎾ.  ᎾᏍᎩ ᎾᏍᏇ, ᎾᏍᎩ ᎨᏒᎢ argued Ꮎ monopolies ᎪᏢᏗ ᏰᎵ ᏄᎵᏂᎬᎬᎾ. ᎢᏳᏃ ᎯᎠ ᎠᎵᏍᎪᎸᏙᏗ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎨᏒᎢ ᎯᎠ ᎠᎵᏍᎪᎸᏙᏗ ᎠᎨᏔᏗᏍᏗ, ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎢᏯhᏛᏁᎵᏓᏍᏗ ᎠᎾᏍᎬᏘ ᎠᏓᎯᏍᏗ [[competition|ᎠᏓᎪᏅᏙᏗᏱ]] ᎠᎴ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎦᎸᎳᏗᎨᏍᏙᏗ ᏚᏂᎬᏩᎶᏔᏅ, ᎡᎳᏗᎨ ᎢᎦ ᎣᏏ, ᎠᎴ ᏍᏆᎳᎯᎨᏍᏙᏗ.
 
-ᎤᏟ ᎢᎦᎢ ᎠᏍᏓᏩᏛᏍᏗ, ᎠᎴ ᏄᏍᏗᏓᏅ, ᎠᎦᏎᏍᏙᏗ ᎢᎬᏁᏗ ᎬᏙᏗ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏂᏚᏳᎪᏛ ᏥᏄᏍᏛᎩ ᎤᏙᎷᏩᏛᏓ ᎾᎥᎢ ᏗᎧᎿᏩᏛᏍᏗ ᏗᏕᎶᏆᏍᎩ [[Michael Heller (law professor)|Michael Heller]] ᎠᎴ [[Rebecca Eisenberg]] ᎭᏫᎾᏗᏢ 1998 ''ᎠᎦᏙᎲᏍᏗ'' ᎤᏓᏡᎬ.<ref>Heller, M.., & Eisenberg, R.. (1998).  ᏰᎵᏇ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᏕᎸ ᏗᏎᎯᏍᏗ ᏧᎾᏍᏗ?  ᎯᎠ Anticommons ᎭᏫᎾᏗᏢ Biomedical ᏅᎠᏯᏍᏗ.  agatohvsdi, 280(1 ᎠᎾᏍᎬᏘ 1998), '''280''', 698-701.</ref> ᎠᏓᏁᎸ ᏂᏛᎴᏅᏓ Heller ᎤᏤᎵ ᎪᎷᏩᏛᏗ ᎯᎠ [[tragedy of the anticommons|ᎤᏐᏅᏅᎯ  ᎯᎠ anticommons]], ᎯᎠ ᏗᏕᎶᏆᏍᎩ postulated Ꮎ ᎢᎦᏘᎭ ᎬᏗ ᎪᎳᏨᎯ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ ᏂᏚᏳᎪᏛ ᎠᎾᏍᎬᏘ ᏗᏙᎳᎩ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏂᎬᎢ fragmented Ꮎ, ᎢᏳᎵᏍᏙᏗᏱ, Ꮭ ᏌᏊ ᏰᎵᏇ ᎠᎩᏍᏗ ᎠᏜᏅᎠᏓᏗᏍᎬ ᎠᏂ ᏥᏄᏍᏗ ᎿᏛᎦ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏯᏓᎢᏗᏏ ᎧᏁᏍᏗ ᎢᏯᏛᏁᏗ ᏓᏓᏁᏤᎸ ᎠᏰᎵ ᎯᎠ ᎤᎾᏤᎵᎢ ᏂᎦᏛ ᎯᎠ ᎠᏍᏓᏩᏛᏍᏗ. 
+ᎤᏟ ᎢᎦᎢ ᎠᏍᏓᏩᏛᏍᏗ, ᎠᎴ ᏄᏍᏗᏓᏅ, ᎠᎦᏎᏍᏙᏗ ᎢᎬᏁᏗ ᎬᏙᏗ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏂᏚᏳᎪᏛ ᏥᏄᏍᏛᎩ ᎤᏙᎷᏩᏛᏓ ᎾᎥᎢ ᏗᎧᎿᏩᏛᏍᏗ ᏗᏕᎶᏆᏍᎩ [[Michael Heller (law professor)|Michael Heller]] ᎠᎴ [[Rebecca Eisenberg]] ᎭᏫᎾᏗᏢ 1998 ''ᎠᎦᏙᎲᏍᏗ'' ᎤᏓᏡᎬ.<ref>Heller, M.., ᎠᎴ Eisenberg, R.. (1998).  ᏰᎵᏇ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᏕᎸ ᏗᏎᎯᏍᏗ ᏧᎾᏍᏗ?  ᎯᎠ Anticommons ᎭᏫᎾᏗᏢ Biomedical ᏅᎠᏯᏍᏗ.  agatohvsdi, 280(1 ᎠᎾᏍᎬᏘ 1998), '''280''', 698-701.</ref> ᎠᏓᏁᎸ ᏂᏛᎴᏅᏓ Heller ᎤᏤᎵ ᎪᎷᏩᏛᏗ ᎯᎠ [[tragedy of the anticommons|ᎤᏐᏅᏅᎯ  ᎯᎠ anticommons]], ᎯᎠ ᏗᏕᎶᏆᏍᎩ postulated Ꮎ ᎢᎦᏘᎭ ᎬᏗ ᎪᎳᏨᎯ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ ᏂᏚᏳᎪᏛ ᎠᎾᏍᎬᏘ ᏗᏙᎳᎩ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏂᎬᎢ fragmented Ꮎ, ᎢᏳᎵᏍᏙᏗᏱ, Ꮭ ᏌᏊ ᏰᎵᏇ ᎠᎩᏍᏗ ᎠᏜᏅᎠᏓᏗᏍᎬ ᎠᏂ ᏥᏄᏍᏗ ᎿᏛᎦ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏯᏓᎢᏗᏏ ᎧᏁᏍᏗ ᎢᏯᏛᏁᏗ ᏓᏓᏁᏤᎸ ᎠᏰᎵ ᎯᎠ ᎤᎾᏤᎵᎢ ᏂᎦᏛ ᎯᎠ ᎠᏍᏓᏩᏛᏍᏗ. 
 
-ᏂᎦᏛ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎴ ᎦᎴᏴᏔᏅᎯ ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎾᎿᎢ ᎨᏒᎢ ᏄᎵᏂᎬᎬ ᎠᏰᎵ ᎠᏠᏯᏍᏗᏍᎩ ᏰᎵᏊ ᏄᏍᏗᏓᏅᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᏔᏲᏍᏙᏗ ᏗᎦᏂᏴᏗ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎵᏍᏕᎸᏙᏗ ᎠᎴ ᎯᎠ ᎠᏚᎳᏗ ᎠᏓᏍᏕᎸᏗ "ᏗᏓᏁᏟᏴᎡᏗ ᎤᏕᎵᏓ."  ᎾᏍᎩ ᎤᎭ ᏭᏪᏙᎢ argued Ꮎ ᎯᎠ ᏂᎬᎢ ᏚᎵᏁᏨ ᎢᏯᏛᏁᏗ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᏚᏳᎪᏛ ᏰᎵᏊ ᎠᎴ Ꮎ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎴ ᏱᏓᏟᎶᏍᏔᏅ ᎤᎵᏍᎪᎸᏔᏅ ᏄᏠᏯᏍᏛᎾ ᏂᎦᎵᏍᏗᏍᎬᎫ ᎥᎦᏔᎲᎢ ᎠᎴᏂᏙᎲ ᏗᏲᎯᏎᏗ ᎤᎾᏙᏢᎯ, ᎪᎯ ᏫᏚᏳᎪᏛ ᎾᏍᏋ ᎾᏍᎩᎾ software ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ, ᎾᎿ ᎢᏴ ᎯᎠ ᏗᏓᎴᎲᏍᎬ ᎠᏍᏓᏩᏛᏍᏙᏗ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏍᏆᏂᎪᏗ.<ref> [http://www.bustpatents.com www.bustpatents.com], retrieved ᎾᎿ ᏕᎭᎷᏱ 29, 2006</ref>  ᎾᏍᎩ ᎤᎭ ᎾᏍᎩ ᎾᏍᏇ ᏭᏪᏙᎢ ᎧᏁᎢᏍᏔᏅ Ꮎ ᎤᏂᎾᏗᏅᏗ ᏄᏍᏛ ᏕᎫᎪᏗᏍᎬ ᎤᏩᏒ ᏯᏓᎢᏗᏏ ᎾᏍᏋ ᏰᎵᏊ ᏄᏍᏛ ᏕᎫᎪᏗᏍᎬ ᏧᎾᏍᏗ ᎢᏧᎳᎭ ᎭᏫᎾᏗᏢ ᎯᎠ ᏅᏙᎲᏅ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ. 
+ᏂᎦᏛ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎴ ᎦᎴᏴᏔᏅᎯ ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎾᎿᎢ ᎨᏒᎢ ᏄᎵᏂᎬᎬ ᎠᏰᎵ ᎠᏠᏯᏍᏗᏍᎩ ᏰᎵᏊ ᏄᏍᏗᏓᏅᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᏔᏲᏍᏙᏗ ᏗᎦᏂᏴᏗ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎵᏍᏕᎸᏙᏗ ᎠᎴ ᎯᎠ ᎠᏚᎳᏗ ᎠᏓᏍᏕᎸᏗ "ᏗᏓᏁᏟᏴᎡᏗ ᎤᏕᎵᏓ."  ᎾᏍᎩ ᎤᎭ ᏭᏪᏙᎢ argued Ꮎ ᎯᎠ ᏂᎬᎢ ᏚᎵᏁᏨ ᎢᏯᏛᏁᏗ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᏚᏳᎪᏛ ᏰᎵᏊ ᎠᎴ Ꮎ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎴ ᏱᏓᏟᎶᏍᏔᏅ ᎤᎵᏍᎪᎸᏔᏅ ᏄᏠᏯᏍᏛᎾ ᏂᎦᎵᏍᏗᏍᎬᎫ ᎥᎦᏔᎲᎢ ᎠᎴᏂᏙᎲ ᏗᏲᎯᏎᏗ ᎤᎾᏙᏢᎯ, ᎪᎯ ᏫᏚᏳᎪᏛ ᎾᏍᏋ ᎾᏍᎩᎾ software ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ, ᎾᎿ ᎢᏴ ᎯᎠ ᏗᏓᎴᎲᏍᎬ ᎠᏍᏓᏩᏛᏍᏙᏗ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏍᏆᏂᎪᏗ.<ref>[http://www.bustpatents.com www.bustpatents.com], retrieved ᎾᎿ ᏕᎭᎷᏱ 29, 2006</ref>  ᎾᏍᎩ ᎤᎭ ᎾᏍᎩ ᎾᏍᏇ ᏭᏪᏙᎢ ᎧᏁᎢᏍᏔᏅ Ꮎ ᎤᏂᎾᏗᏅᏗ ᏄᏍᏛ ᏕᎫᎪᏗᏍᎬ ᎤᏩᏒ ᏯᏓᎢᏗᏏ ᎾᏍᏋ ᏰᎵᏊ ᏄᏍᏛ ᏕᎫᎪᏗᏍᎬ ᏧᎾᏍᏗ ᎢᏧᎳᎭ ᎭᏫᎾᏗᏢ ᎯᎠ ᏅᏙᎲᏅ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ. 
 
-ᎭᏫᎾᏗᏢ ᎯᎠ ᎣᏂ 10 ᏧᏕᏘᏴᏓ, ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏧᏂᎸᏫᏍᏓᏁᏗ ᎭᏫᎾᏗᏢ ᎢᏧᎳ ᎯᎠ Ꭴ.. ᎠᎴ Europe ᎤᎭ ᎤᎴᏅᎲ ᎠᎵᏍᎪᎳᏗᏍᎩ [[software patent|software ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ]].  ᎠᏓᏃᎮᏗ ᎠᎴ ᎠᏂᏐᎢ ᎠᎵᏍᎦᏃᏍᏗ Ꮎ ᎾᏍᎩ ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎤᎵᏍᎪᎸᏔᏅ software ᏧᎾᏍᏗ ᎭᏫᎾᏗᏢ ᎤᎵᏍᏓᎯᎨ ᎦᏁᏟᏴᏍᎬ ᏠᎨᏏ ᎭᏢᏃ ᎾᏍᎩᎾ technique ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎠᏗᏅᏓ ᎭᏫᎾᏗᏢ ᎦᏲᎵ ᏍᏆᎳᎢ ᏧᏕᏘᏴᏓ.<ref>[http://lpf.ai.mit.edu lpf.ai.mit.edu], retrieved ᎾᎿ ᏕᎭᎷᏱ 29, 2006</ref>
+ᎭᏫᎾᏗᏢ ᎯᎠ ᎣᏂ 10 ᏧᏕᏘᏴᏓ, ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏧᏂᎸᏫᏍᏓᏁᏗ ᎭᏫᎾᏗᏢ ᎢᏧᎳ ᎯᎠ [[ᎠᎹᏰᏟ]] ᎠᎴ [[Europe|ᏳᎳᏛ]] ᎤᎭ ᎤᎴᏅᎲ ᎠᎵᏍᎪᎳᏗᏍᎩ [[software patent|software ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ]].  ᎠᏓᏃᎮᏗ ᎠᎴ ᎠᏂᏐᎢ ᎠᎵᏍᎦᏃᏍᏗ Ꮎ ᎾᏍᎩ ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎤᎵᏍᎪᎸᏔᏅ software ᏧᎾᏍᏗ ᎭᏫᎾᏗᏢ ᎤᎵᏍᏓᎯᎨ ᎦᏁᏟᏴᏍᎬ ᏠᎨᏏ ᎭᏢᏃ ᎾᏍᎩᎾ technique ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎠᏗᏅᏓ ᎭᏫᎾᏗᏢ ᎦᏲᎵ ᏍᏆᎳᎢ ᏧᏕᏘᏴᏓ.<ref>[http://lpf.ai.mit.edu lpf.ai.mit.edu], retrieved ᎾᎿ ᏕᎭᎷᏱ 29, 2006</ref>
 
-ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ ᎪᎯᏳᏙ ᏰᎵᏇ ᎾᏍᏋ ᎠᏩᏛᏗ ᎢᏧᎳ ᎭᏫᎾᏗᏢ favour ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎢᏯhᏛᏁᎵᏓᏍᏗ ᎠᎴ ᏗᎦᏘᎴᎩ ᎠᏂ.  ᎯᎠ ᎠᏰᎵ ᏯᏛᎾ ᎠᎺᏉᎯ-19th ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ dyestuffs ᏗᎦᎸᏫᏍᏓᏁᏗ faltered ᎭᏫᎾᏗᏢ Britain ᎭᏢᏃ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎵᏍᏕᎸᏙᏗ ᏥᏄᏍᏛᎩ ᏰᎵ ᎠᏩᏛᏗ, ᎠᎴ flourished ᎭᏫᎾᏗᏢ Germany ᎦᎾᏆᏘᏍᏗ ᎯᎠ ᏅᏙᎲᏅ ᏯᏛᎿ ᎠᎵᏍᏕᎸᏙᏗ.  ᎭᏫᎾᏗᏢ ᏧᏓᎴᎾᎢ, ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎵᏍᏕᎸᏙᏗ ᎤᎭ yli ᎢᏳᎵᏍᏔᏅ ᎪᏪᎵ ᎪᎪᏪᎵ ᎪwᎵᏍᎩ ᎠᏓᏍᏕᎸᏗ ᎤᎾᏤᎵ innovative ᎤᎾᏛᎯᏍᏔᏅ ᏂᏛᎴᏅᏓ ᎡᏆᎯᎨᏍᏙᏗ ᏚᎾᏓᏡᎬᎢ ᎠᎴ ᎠᎩᏍᏗ ᎠᏌᏍᏛ ᎾᏍᎩᎾᎢ ᎤᎾᏤᎵ ᎠᏓᏌᎳᏙᏗ.  ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎯᎠ [[Dyson (appliances)|Dyson]] bagless ᏅᏙᎲᏅ cleaner ᎤᎭ ᎤᏗᏅᏒᎩ ᎦᏛᎬᎢ ᏗᏓᏁᏟᏴᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᏅᏙᎲᏅ cleaner ᎤᏂᎾᏗᏅᏗ ᎠᎴ ᎯᎠ ᎪᏪᎵ ᎪᎪᏪᎵ gowlisgi ᎤᎭ benefitted ᏂᏛᎴᏅᏓ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎵᏍᏕᎸᏙᏗ.
+ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ ᎪᎯᏳᏙ ᏰᎵᏇ ᎾᏍᏋ ᎠᏩᏛᏗ ᎢᏧᎳ ᎭᏫᎾᏗᏢ favor ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎢᏯhᏛᏁᎵᏓᏍᏗ ᎠᎴ ᏗᎦᏘᎴᎩ ᎠᏂ. ᎯᎠ ᎠᏰᎵ ᏯᏛᎾ ᎠᎺᏉᎯ-19th ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ dyestuffs ᏗᎦᎸᏫᏍᏓᏁᏗ faltered ᎭᏫᎾᏗᏢ Britain ᎭᏢᏃ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎵᏍᏕᎸᏙᏗ ᏥᏄᏍᏛᎩ ᏰᎵ ᎠᏩᏛᏗ, ᎠᎴ flourished ᎭᏫᎾᏗᏢ Germany ᎦᎾᏆᏘᏍᏗ ᎯᎠ ᏅᏙᎲᏅ ᏯᏛᎿ ᎠᎵᏍᏕᎸᏙᏗ.  ᎭᏫᎾᏗᏢ ᏧᏓᎴᎾᎢ, ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎵᏍᏕᎸᏙᏗ ᎤᎭ ᏰᎵ ᎢᏳᎵᏍᏔᏅ ᎪᏪᎵ ᎪᏪᎵᏍᏗ ᎠᏓᏍᏕᎸᏗ ᎤᎾᏤᎵ innovative ᎤᎾᏛᎯᏍᏔᏅ ᏂᏛᎴᏅᏓ ᎡᏆᎯᎨᏍᏙᏗ ᏚᎾᏓᏡᎬᎢ ᎠᎴ ᎠᎩᏍᏗ ᎠᏌᏍᏛ ᎾᏍᎩᎾᎢ ᎤᎾᏤᎵ ᎠᏓᏌᎳᏙᏗ.  ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎯᎠ [[Dyson (appliances)|Dyson]] bagless ᏅᏙᎲᏅ cleaner ᎤᎭ ᎤᏗᏅᏒᎩ ᎦᏛᎬᎢ ᏗᏓᏁᏟᏴᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᏅᏙᎲᏅ cleaner ᎤᏂᎾᏗᏅᏗ ᎠᎴ ᎯᎠ ᎪᏪᎵ ᎪᏪᎵᏍᏗ ᎤᎭ benefited ᏂᏛᎴᏅᏓ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎵᏍᏕᎸᏙᏗ.
 
 ᎭᏫᎾᏗᏢ ᎦᏬᎯᎵᏴᏓ perceived ᏗᎦᏎᏍᏙᏗ ᎬᏙᏗ ᎯᎠ ᎠᎵᏍᎪᎸᏙᏗ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ, ᎠᎴ ᎯᎠ ᏚᏙᎳᏩᏛᎲ ᎤᏁᎳᏅ ᎤᏬᏢᏅ ᎠᏏᎾᏒᎢ ᎠᎴ ᏗᎦᎸᏫᏍᏓᏁᏗ, ᎾᎿᎢ ᎨᏒᎢ ᎾᎿ-ᏓᏰᏏ ᏗᏟᏴ ᏗᎦᏬᏂᎯᏍᏗ ᎬᏩᏚᏫᏛ, ᎠᎴ ᎠᏓᏅᏘᏐᏗ , ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎢᏯhᏛᏁᎵᏓᏍᏗ ᏴᏩtᎤᏫᏛ ᎯᎠ ᎡᎶᎯ.  ᎯᎠ [[Agreement on Trade-Related Aspects of Intellectual Property Rights|ᏄᏁᎸᏛᎢ]] ᏓᏓᏁᏤᎸ, ᎤᏙᎷᏩᏛᏓ ᎾᎥᎢ ᎯᎠ [[World Trade Organization|WTO]] ᎤᎭ ᎤᏗᏅᏒᎩ ᎯᎠ ᎢᏚᏳᎪᏛ ᎤᎪᏗᏗ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎢᏯhᏛᏁᎵᏓᏍᏗ ᎬᏙᏗ ᎾᏍᎩ ᎣᏏ ᎠᏰᎸᏗ ᎤᏙᎯᏳ ᎧᏃᎮᎸᏗ ᎠᏯᏙᎯᎲ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᎤᏓᏍᏕᎸᎲ ᎾᎥᎢ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎴ ᎯᎠ ᎢᏳᏍᏗ ᎧᏃᎮᏗ [[Agreement on Trade-Related Aspects of Intellectual Property Rights#Access to essential medicines|ᎤᏚᎳᏗ licences]] ᎭᏫᎾᏗᏢ ᏕᎦᎸᏛ ᎧᏁᏌᎢ ᎬᎾᏕᎾ ᎤᏚᎳᏗ.  ᎾᎿᎢ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ lᏯᏛᏁᎯ ᎾᎥ ᏄᎾᏓᎸ ᎦᎪ ᏗᎦᏘᎸᏍᏗ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎴ ᎦᎪ ᎠᎦᏘᏗᏍᏗ ᎧᏅᏑᎸ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᏎᏍᎬ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎢᏯhᏛᏁᎵᏓᏍᏗ.
 
 == ᎧᏃᎮᏍᎩ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ==
+[[File:USpatents18002004.JPG|thumb|right|[[ᎠᎹᏰᏟ]] ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎤᎵᏍᎪᎸᏔᏅ, 1800–2004.<ref>[http://www.uspto.gov/ᎤᏂᏏᎳᏛ/ᏧᏂᎸᏫᏍᏓᏁᏗ/ac/ido/oeip/taf/h_ᏫᏚᏳᎪᏛ.htm]</ref>]]
 
-[[File:USpatents18002004.JPG|thumb|right|Ꭴ.. ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎤᎵᏍᎪᎸᏔᏅ, 1800–2004.[http://www.uspto.gov/ᎤᏂᏏᎳᏛ/ᏧᏂᎸᏫᏍᏓᏁᏗ/ac/ido/oeip/taf/h_ᏫᏚᏳᎪᏛ.htm]]]
-
-ᎾᏍᎩ ᎤᏁᎳᎩ ᎾᎿᎢ ᎨᏒᎢ ᎪᎯᏳᏙ ᎠᏂᏁᎢᏍᏗᏍᎬ Ꮎ ᎪᎱᏍᏗ ᎾᏍᎩᏯᎢ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏥᏄᏍᏛᎩ ᎬᏔᏅᎯ ᏄᎾᏛᏅ ᎢᎦᏛ ᎯᎸᎯᏳᎢ ᎠᎪᎢ ᏕᎦᏚᎲ, ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎤᏓᏅᏖᏗ originated ᎭᏫᎾᏗᏢ Italy ᎭᏫᎾᏗᏢ [[1474]].  ᎾᎾᎢ Ꮎ ᎢᏳᏩᎪᏗ ᎯᎠ [[Republic of Venice|ᎠᏰᎵ ᎤᏙᏢ  ᏓᎾᏓᎵᎮᎵᎬ]] ᎢᏳᏍᏗ ᎧᏃᎮᎢᏳᏍᏗ ᎧᏃᎮhᏛ ᏕᎫᎪᏔᏅ ᎢᏯᏛᏁᏗ ᎾᎥᎢ ᎦᏙ ᎤᏍᏗ ᎢᏤ ᎠᎴ ᏗᏁᏝᎾ ᏄᏍᏛ ᏗᎧᏃᏗ, ᏌᏊ ᎢᏳᏩᎫᏗ ᎤᏅᏌ ᎠᏰᎲ ᏭᏪᏙᎢ ᏩᏗᏱ ᎾᎾᎯ ᎠᎵᏏᎾᎯᏍᏙᏗ, ᎠᏰᎲ ᎾᏍᏋ communicated ᎯᎠ ᎠᏰᎵ ᎤᏙᏢ ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎣᏤᎵ ᎢᎬᏁᎯ ᎧᎵᏗᎳᏏᏗ ᎠᎵᏍᏕᎸᏙᏗ ᏗᎦᏘᎴᎩ ᏰᎵᏊ ᏱᎩ infringers. England ᎠᏍᏓᏩᏛᏓ ᎬᏙᏗ ᎯᎠ [[Statute of Monopolies 1623|ᎢᏚᏳᎪᏛ  Monopolies]] ᎭᏫᎾᏗᏢ [[1623]] ᎭᏫᎾᏗᏢ ᎤᎬᏫᏳᎯ [[James I of England|James ᎠᏯ]], ᎦᏙ ᎤᏍᏗ ᎤᏁᏨᎩ Ꮎ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏰᎵᏇ ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᏋ ᎤᎵᏍᎪᎸᏔᏅ ᎾᏍᎩᎾᎢ "ᎠᏎᎸᎯ ᎢᏤ ᏗᏁᏝᎾ."  ᎾᎯᏳᎨᏒ ᎯᎠ ᎤᎬᏫᏳ ᏕᎫᎪᏗᏍᎬ [Queen Anne] (1702-1714), ᎯᎠ ᏗᏘᏲᎯᎯ ᎯᎠ ᎩᎵᏏ ᏧᎾᏓᏱᎵᏓᏍᏗ ᎤᏙᎷᏩᏛᏓ ᎯᎠ ᎤᎵᏁᏨ ᎢᏯᏛᏁᏗ Ꮎ ᎪᏪᎳᏅᎯ ᏄᏍᏛ ᏗᎧᏃᏗ ᎯᎠ ᏗᏁᏝᎾ ᎠᏎ ᎾᏍᏋ ᏚᏲᏒ.<ref> [http://www.patent.gov.uk/copy/history/index.htm http://www.patent.gov.uk/copy/history/index.htm], retrieved ᎾᎿ ᏕᎭᎷᏱ 29, 2006</ref>  ᎾᏍᎩ ᎯᎠ ᏚᎾᏙᎷᏩᏛᎲ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎩ ᎭᏫᎾᏗᏢ ᎾᎿᎢ ᎾᎯᏳᎨᏒ ᎯᎠ lᏳᏕᏘᏴᏓ ᎠᎴᏫᏍᏙᏗ, ᎪᏢᎯ ᎢᎪᏢᎯ ᎢgᏁᎸᎯ ᎯᎠ ᎠᎴᏅᏙᏗ ᎾᏍᎩᎾᎢ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎩᎵᏏ ᎠᎴ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏗᎧᎿᏩᏛᏍᏗ.
+ᎾᏍᎩ ᎤᏁᎳᎩ ᎾᎿᎢ ᎨᏒᎢ ᎪᎯᏳᏙ ᎠᏂᏁᎢᏍᏗᏍᎬ Ꮎ ᎪᎱᏍᏗ ᎾᏍᎩᏯᎢ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏥᏄᏍᏛᎩ ᎬᏔᏅᎯ ᏄᎾᏛᏅ ᎢᎦᏛ ᎯᎸᎯᏳᎢ ᎠᎪᎢ ᏕᎦᏚᎲ, ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎤᏓᏅᏖᏗ originated ᎭᏫᎾᏗᏢ [[Italy|ᏲᎶ]] ᎭᏫᎾᏗᏢ 1474.  ᎾᎾᎢ Ꮎ ᎢᏳᏩᎪᏗ ᎯᎠ [[Republic of Venice|ᎠᏰᎵ ᎤᏙᏢ  ᏓᎾᏓᎵᎮᎵᎬ]] ᎢᏳᏍᏗ ᎧᏃᎮᎢᏳᏍᏗ ᎧᏃᎮhᏛ ᏕᎫᎪᏔᏅ ᎢᏯᏛᏁᏗ ᎾᎥᎢ ᎦᏙ ᎤᏍᏗ ᎢᏤ ᎠᎴ ᏗᏁᏝᎾ ᏄᏍᏛ ᏗᎧᏃᏗ, ᏌᏊ ᎢᏳᏩᎫᏗ ᎤᏅᏌ ᎠᏰᎲ ᏭᏪᏙᎢ ᏩᏗᏱ ᎾᎾᎯ ᎠᎵᏏᎾᎯᏍᏙᏗ, ᎠᏰᎲ ᎾᏍᏋ communicated ᎯᎠ ᎠᏰᎵ ᎤᏙᏢ ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎣᏤᎵ ᎢᎬᏁᎯ ᎧᎵᏗᎳᏏᏗ ᎠᎵᏍᏕᎸᏙᏗ ᏗᎦᏘᎴᎩ ᏰᎵᏊ ᏱᎩ infringers. England ᎠᏍᏓᏩᏛᏓ ᎬᏙᏗ ᎯᎠ [[Statute of Monopolies 1623|ᎢᏚᏳᎪᏛ  Monopolies]] ᎭᏫᎾᏗᏢ 1623 ᎭᏫᎾᏗᏢ ᎤᎬᏫᏳᎯ [[James I of England|James ᎠᏯ]], ᎦᏙ ᎤᏍᏗ ᎤᏁᏨᎩ Ꮎ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏰᎵᏇ ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᏋ ᎤᎵᏍᎪᎸᏔᏅ ᎾᏍᎩᎾᎢ "ᎠᏎᎸᎯ ᎢᏤ ᏗᏁᏝᎾ."  ᎾᎯᏳᎨᏒ ᎯᎠ ᎤᎬᏫᏳ ᏕᎫᎪᏗᏍᎬ [Queen Anne] (1702-1714), ᎯᎠ ᏗᏘᏲᎯᎯ ᎯᎠ ᎩᎵᏏ ᏧᎾᏓᏱᎵᏓᏍᏗ ᎤᏙᎷᏩᏛᏓ ᎯᎠ ᎤᎵᏁᏨ ᎢᏯᏛᏁᏗ Ꮎ ᎪᏪᎳᏅᎯ ᏄᏍᏛ ᏗᎧᏃᏗ ᎯᎠ ᏗᏁᏝᎾ ᎠᏎ ᎾᏍᏋ ᏚᏲᏒ.<ref> [http://www.patent.gov.uk/copy/history/index.htm http://www.patent.gov.uk/copy/history/index.htm], retrieved ᎾᎿ ᏕᎭᎷᏱ 29, 2006</ref>  ᎾᏍᎩ ᎯᎠ ᏚᎾᏙᎷᏩᏛᎲ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎩ ᎭᏫᎾᏗᏢ ᎾᎿᎢ ᎾᎯᏳᎨᏒ ᎯᎠ lᏳᏕᏘᏴᏓ ᎠᎴᏫᏍᏙᏗ, ᎪᏢᎯ ᎢᎪᏢᎯ ᎢgᏁᎸᎯ ᎯᎠ ᎠᎴᏅᏙᏗ ᎾᏍᎩᎾᎢ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎩᎵᏏ ᎠᎴ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏗᎧᎿᏩᏛᏍᏗ.
 
 ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ, ᎾᎯᏳᎨᏒ ᎯᎠ lᏳᏕᏘᏴᏓ ᎠᎴᏫᏍᏙᏗ ᎠᎴ ᏚᏓᏡᎬ ᎠᎵᎪᏒ ᏧᏕᏘᏴᏓ (1778-1789), ᎯᎸᏍᎩ ᎧᏃᎮᎭ ᎠᏠᏯᏍᏔᏅᎯ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎢᏯhᏛᏁᎵᏓᏍᏗ ᎤᎾᏤᎵ ᎣᏤᎵ.  ᎯᎠ ᎢᎬᏱ ᏩᏥᏂ ᏗᏂᎳᏫᎩ ᎠᏠᏯᏍᏔᏅᎯ [[US Patent Act (1790)|ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎢᏯᏛᏁᎯ]], ᎭᏫᎾᏗᏢ 1790.
 
@@ -92,21 +90,13 @@
 
 :''ᎾᏍᎩᎾᎢ ᎤᏟ ᎢᎦᎢ ᏂᏕᎬᎿᏅᎢ ᎾᎿ ᎪᎯ ᎢᏳᏍᏗ ᎧᏃᎮᏗ, ᎠᎪᏩᏛᏗ [[Patent application|ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᏔᏲᏍᏙᏗ]] ᎠᎴ [[Patent prosecution|ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ]].''
 
-ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎨᏒᎢ otsel igvnelv ᎾᎥᎢ ᏓᏢᎥᏍᎬ ᎪᏪᎳᏅᎯ [[Patent application|ᎠᏔᏲᏍᏙᏗ]] ᎾᎾᎢ ᎯᎠ ᎠᎾᎵᏐᏈᎸᏍᎬ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ.  Ꮎ ᎠᏔᏲᏍᏙᏗ ᏫᎵ ᎢᎦᎢ ᎨᏒ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏄᏍᏗᏓᏅᎢ ᎯᎠ ᏗᏁᏝᎾ ᎠᎴ ᎯᎠ ᎠᎵᏍᏕᎸᏙᏗ ᎠᏆᏤᎵ ᎤᏛᏅᎩ, ᎢᏧᎳ ᎬᏙᏗ ᏚᏙᏢᏒ ᎦᏃᏢᎩ ᎯᎠ procedural ᎢᎦᏛ ᎣᏤᎵ ᎾᎬᏁᎲ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ.  ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ, ᎠᏠᏯᏍᏗᏍᎩ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ, ᎾᎿᎢ ᎨᏒᎢ Ꮭ ᎤᎵᏁᏨ ᎢᏯᏛᏁᏗ Ꮎ ᎯᎠ ᎪᏪᎵ Ꭺgoweli gowlisgi ᎤᏙᎯᏳᎯᏯ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ ᎠᎴᏅᏗᏍᎬ ᎠᎴ ᎢᏳᏃ ᏰᎵ ᎠᎦᏲᎳᏅ ᎤᏤᎵ ᎠᎴ ᎾᏍᎩ ᎠᎨᏴ ᏗᏁᏝᎾ ᎠᎵᏏᎾᎯᏍᏙᏗ ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎣᏤᎵ ᎢᎬᏁᎯ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ.
+ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎨᏒᎢ ᎣᏤᎵ ᎢᎬᏁᎸ ᎾᎥᎢ ᏓᏢᎥᏍᎬ ᎪᏪᎳᏅᎯ [[Patent application|ᎠᏔᏲᏍᏙᏗ]] ᎾᎾᎢ ᎯᎠ ᎠᎾᎵᏐᏈᎸᏍᎬ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ.  Ꮎ ᎠᏔᏲᏍᏙᏗ ᏫᎵ ᎢᎦᎢ ᎨᏒ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏄᏍᏗᏓᏅᎢ ᎯᎠ ᏗᏁᏝᎾ ᎠᎴ ᎯᎠ ᎠᎵᏍᏕᎸᏙᏗ ᎠᏆᏤᎵ ᎤᏛᏅᎩ, ᎢᏧᎳ ᎬᏙᏗ ᏚᏙᏢᏒ ᎦᏃᏢᎩ ᎯᎠ procedural ᎢᎦᏛ ᎣᏤᎵ ᎾᎬᏁᎲ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ.  ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ, ᎠᏠᏯᏍᏗᏍᎩ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ, ᎾᎿᎢ ᎨᏒᎢ Ꮭ ᎤᎵᏁᏨ ᎢᏯᏛᏁᏗ Ꮎ ᎯᎠ ᎪᏪᎵ ᎪᏪᎵᏍᏗ ᎤᏙᎯᏳᎯᏯ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ ᎠᎴᏅᏗᏍᎬ ᎠᎴ ᎢᏳᏃ ᏰᎵ ᎠᎦᏲᎳᏅ ᎤᏤᎵ ᎠᎴ ᎾᏍᎩ ᎠᎨᏴ ᏗᏁᏝᎾ ᎠᎵᏏᎾᎯᏍᏙᏗ ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎣᏤᎵ ᎢᎬᏁᎯ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ.
 
 ᏌᏊ ᎢᏳᏩᎫᏗ [[patent application|ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᏔᏲᏍᏙᏗ]] ᎤᎭ ᏭᏪᏙᎢ ᎤtlᏅᎩ, ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᎦᏎᏍᏙᏗ Ꮎ ᎠᏔᏲᏍᏙᏗ ᎾᏍᎩᎾᎢ ᎠᏍᏓᏩᏛᏍᏗ ᎬᏙᏗ ᎯᎠ [[Patentability|ᏚᎵᏁᏨ ᎢᏯᏛᏁᏗ]] ᎯᎠ ᎠᎾᎵᏐᏈᎸᏍᎬ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏗᎧᎿᏩᏛᏍᏗ.  ᎢᏳᏃ ᎯᎠ ᎠᏔᏲᏍᏙᏗ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏍᏓᏩᏛᏍᏓ ᎬᏙᏗ ᏂᎦᏛ ᎯᎠ ᏚᎵᏁᏨ ᎢᏯᏛᏁᏗ, ᎯᎠ ᏧᏂᎦᏘᎴᏛ ᎠᎴ communicated ᎯᎠ ᎠᏔᏲᎯᎯ (ᎠᎴ ᎤᏤᎵ ᏗᎦᎳᏫᎩ), ᎦᎪ ᏰᎵᏇ ᎾᎯᏳᎢ ᎦᏬᎯᎵᏴᏍᏗ ᎾᏍᎩ ᏧᏂᎦᏘᎴᏛ ᎠᏁᎸᏙᏗ ᎤᏓᏢᏔᏍᏗ ᎠᏂ ᎣᏤᎵ ᎢᎬᏁᎯ ᎯᎠ ᎠᎵᏍᎪᎸᏙᏗ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ.
 
 ᏌᏊ ᎢᏳᏩᎫᏗ ᎤᎵᏍᎪᎸᏔᏅ ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎨᏒᎢ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ [[maintenance fee (patent)|ᎠᏤᎯᏐᏗᏱ ᎤᎾᏓᏠᏒᎯ]], ᏂᎦᎥᏊ ᎤᏍᏆᎸᎲ ᎠᏂᏏᏴᏫᎭ ᏑᏕᏘᏴᏓ <ref>ᎯᎠ ᎢᏧᎳ ᎠᏴ ᎠᎴᏂᏙᎲ ᎢᎦᏪᏛ ᏓᎦᏘᎴᎬ; ᎠᎪᏩᏛᏗ ᎯᎠ [[Maintenance fee (patent)|ᎠᏍᏆᏂᎪᏙᏗ ᎤᏓᏠᏒ ᎠᎫᏴᏗ (ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ)]] ᎤᏓᏡᎬ ᎾᏍᎩᎾᎢ ᎤᏟ ᎢᎦᎢ ᏂᏕᎬᎿᏅᎢ</ref>, ᎠᏍᏆᏂᎪᏙᏗ ᎯᎠ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎭᏫᎾᏗᏢ ᎦᏌᏙᏯᏍᏗ.
 
-== ᏫᏓᏎᎸᎢ ==
-<!--This article uses the Cite.php citation mechanism. If you would like more information on how to add references to this article, please see http://meta.wikimedia.org/wiki/Cite/Cite.php --> 
-<div class="references-small">
-<references/>
-</div>
-
 == ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
-
-{{wikiquote}}
 
 ᎠᎪᏩᏛᏗ [[List of patent legal concepts|ᏙᎪᏩᎸ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎧᎵᏗᎳᏏᏗ ᎠᏓᏅᏖᏗ]] ᎾᏍᎩᎾᎢ ᏚᏓᏡᎬ ᎾᎿ ᏧᏓᎴᏅᏓ ᎧᎵᏗᎳᏏᏗ ᎢᎦᏛ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ, ᎠᏠᏯᏍᏗᏍᎩ ᎤᏤᎵᏛ ᎢᏗᎦᎪᏘ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎴ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏗᏔᏲᏍᏙᏗ.
 
@@ -117,9 +107,8 @@
 
 === Treaties, ᎤᏓᏂᏝᏅ ᎠᎴ ᏐᎢ ᎧᎵᏗᎳᏏᏗ ᏓᎵᏍᏛ ᎠᎴ ᎠᎵᏍᏕᎸᏗ ===
 
-
 *[[Agreement on Trade-Related Aspects of Intellectual Property Rights|ᏓᏓᏁᏤᎸ ᎾᎿ ᏗᏓᏁᏟᏴᎡᏗ-ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎢᎦᏛ ᎢᎦᏘᎭ ᎬᏗ ᎪᎳᏨᎯ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ ᏂᏚᏳᎪᏛ]] (ᏄᏁᎸᏛᎢ ᏓᏓᏁᏤᎸ)
-*[[American Inventors Protection Act|ᏴᏩᏁᎬ ᎪᏪᎵ Ꭺgoweli gowlisgi ᎠᎵᏍᏕᎸᏙᏗ ᎢᏯᏛᏁᎯ]] (AIPA)
+*[[American Inventors Protection Act|ᏴᏩᏁᎬ ᎪᏪᎵ ᎪᏪᎵᏍᏗ ᎠᎵᏍᏕᎸᏙᏗ ᎢᏯᏛᏁᎯ]] (AIPA)
 *[[Budapest Treaty|Budapest ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ]]
 *[[Community Patent|ᎾᎥ ᏄᎾᏓᎸ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ]] (''ᎧᏁᎢᏍᏔᏅ'')
 *''[[Directive on the patentability of computer-implemented inventions|ᎦᎸᏆᏗᏰᏍᎩ Directive ᎾᎿ ᎯᎠ Patentability ᎡᎵᏍ-Implemented ᏗᏁᏝᎾ]]'' (''ᎧᏁᎢᏍᏔᏅ, ᎾᎯᏳᎢ ᎠᏓᏯᏍᏗ'')
@@ -130,7 +119,7 @@
 *[[Japanese patent law|Japanese ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏗᎧᎿᏩᏛᏍᏗ]]
 *[[London Agreement (2000)|London ᏓᏓᏁᏤᎸ]] (''ᎠᏍᏆᏛ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎭᏫᎾᏗᏢ ᎦᏌᏙᏯᏍᏗ ᎩᎳ'')
 *[[Paris Convention for the Protection of Industrial Property|ᏨᏓᏓᏨᏍᏙᏗ ᎤᏓᏂᏝᏅ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᎵᏍᏕᎸᏙᏗ ᏧᏂᎸᏫᏍᏓᏁᏗ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ]]
-*[[Patent Reform Act of 2005|Ꭴ.. ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᏓᏅᏘᏐᏗ ᎢᏯᏛᏁᎯ 2005]]
+*[[Patent Reform Act of 2005|ᎠᎹᏰᏟ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᏓᏅᏘᏐᏗ ᎢᏯᏛᏁᎯ 2005]]
 *[[Patent Cooperation Treaty|ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎵᎪᏒ ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ]] (PCT)
 *[[Patent Law Treaty|ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏗᎧᎿᏩᏛᏍᏗ ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ]] (PLT)
 *[[Substantive Patent Law Treaty|ᎬᏂᎨᏒ ᏄᏍᏛᎢ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏗᎧᎿᏩᏛᏍᏗ ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ]] (SPLT) (''ᎧᏁᎢᏍᏔᏅ'')
@@ -156,30 +145,19 @@
 *[[Patent troll|ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎦᏣᏄᎳ]]
 *[[Patent pirate|ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏗᏟᎶᏍᏔᏅ]]
 *[[United States Patents Quarterly|ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎩᏄᏙᏗ]]
-*[[X-Patent|X-ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ]]
-* [[Patent attorney#Notable blogs|ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ Blogs]]
 
-== ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ ==
+== ᏫᏓᏎᎸᎢ ==
+{{reflist}}
 
-ᎾᏍᎩᎾᎢ ᏙᎪᏩᎸ 
+== ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ ==
 * '''ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏧᏂᎸᏫᏍᏓᏁᏗ''' ᎠᎴ ᎤᎾᏤᎵ ᎧᎾᏁᏍᎦ ᎤᏏᎵᏕᏫᏒ ᏄᏍᏓ, ᎠᎪᏩᏛᏗ [[patent office|ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ]] ᎠᎴ [http://www.wipo.int/directory/en/urls.jsp this list] ᎢᎦᏘᎭ ᎢᎬᏁᏗ ᎾᎥᎢ WIPO
 * '''ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏧᎾᏙᏢᎯ''', ᎠᎪᏩᏛᏗ [[intellectual property organization|ᎢᎦᏘᎭ ᎬᏗ ᎪᎳᏨᎯ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ ᎤᎾᏙᏢᎯ]]
 * ᎤᏂᏏᎳᏛ ᏄᏍᏗᏓᏅ ᎠᎾᏓᏁᎳᏍᎬ '''ᎠᏯᏍᏗ ᎠᎴ download ᎬᏔᏂᏓᏍᏗ''' ᎦᏃᏢᎩ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᎴ ᏧᏩᎫᏔᏅᏒ ᏗᏟᎶᏍᏙᏗ, ᎠᎪᏩᏛᏗ [[prior art|ᏧᏩᎫᏔᏅᏒ ᏗᏟᎶᏍᏙᏗ]].
-
-=== ᏧᏓᎴᏅᏓ ᏐᎢ ᏧᎬᏩᎶᏗ ᎦᎷᎩ ===
-
 * [http://www.bl.uk/services/reading/bipcentre.html The British Library - Business and Intellectual Property Centre] ᏗᏂᏂᏴ ᎦᏬᎯᎸᏙᏗ 50 ᎢᏳᏆᏗᏅᏓ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏂᏛᎴᏅᏓ ᎦᏬᎯᎸᏙᏗ 40 ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ
 * [http://www.ipnewsflash.com IP Newsflash] - ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ caselaw ᎠᎴ ᏗᏤᎢ ᎾᏍᎩ ᎠᏂᏰᎸᏍᎬ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ
 * [http://www.uspto.gov/patft/index.html USPTO] - ᎠᏯᏍᏗ ᎢᏧᎳ ᎠᏴ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ
 * [http://wikipatents.com/ WikiPatents Community] - commented ᎢᏧᎳ ᎠᏴ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ 
 * [http://www.ipmenu.com IPMenu] - IP ᎠᏓᏃᎯᏎᏗ ᏙᎪᏩᎸ ᎬᏙᏗ ᎠᏯᏍᏗ capabilities
-
-=== ᎤᏬᏢᏗ ᎠᎴ ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏧᎬᏩᎶᏗ ᎦᎷᎩ ===
-* [http://www.patent.freeserve.co.uk/ ''Patently Absurd'' British Patents]
-* [http://www.library.umaine.edu/patents/historical.htm Information on Historical Patents]
-* [http://www.patentlysilly.com Patently Silly]
-* [http://ipfunny.blogs.com IP Funny Blog]
-* [[Patent Bending|ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᏗᏌᏓᏗᏍᏗ]] TV ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ
 
 [[Category:ᏗᎧᎿᏩᏛᏍᏗ]]
 
