--- a/ᎤᏍᏗᏰᎬ.mw
+++ b/ᎤᏍᏗᏰᎬ.mw
@@ -1,11 +1,12 @@
-[[Image:Anderson Sophie Young Girl Fixing Her Hair.jpg|thumb|right|"ᎠᏲᎵ ᎠᎨᏳᏣ ᎣᏍᏛ ᎢᎬᏁᏗ ᎾᏍᎩ ᎠᎨᏴ ᎤᏍᏗᏰᎬ", ᎾᎥᎢ [[Sophie Gengembre Anderson]]]]
+[[File:Yagua Indian.JPG|thumb|[[Yagua]] ᎠᏴᏫᏯᎢ ᎠᏧᏣ, [[ᏧᎦᎾᏮ ᎠᎹᏰᎵ]], ca. 1924]]
 '''ᎤᏍᏗᏰᎬ''' ᎨᏒᎢ ᎠᏍᏓᏅᏅ ᎦᏂᏓᏛ ᏂᏛᎴᏅᏓ ᎯᎠ [[skin|ᎦᏁᎦ]], ᎠᏩᏛᏗ ᎠᎬᏫᏳᏛ ᎭᏫᎾᏗᏢ [[mammal|ᎦᏂᏝᎢ ]].
 
 ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎾᏍᎩ ᎨᏒᎢ ᏁᏙᎲᎾ ᎾᎾᎢ ᎤᏙᎯᏳ ᎠᏓᏅᏍᏗ ᎥᎴᏂᏙᎲ. ᎾᏍᎩ ᎠᏎᎸᎯ ᏂᏛᎴᏅᏓ ᎯᎠ [[epidermis (skin)|ᎠᏰᎵ]], ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎾᏍᎩ ᎠᏛᏍᎦ ᏂᏛᎴᏅᏓ [[hair follicles|ᎤᏍᏗᏰᎬ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ]] ᎠᏍᏛᎩ ᎭᏫᎾᏗᏢ ᎯᎠ [[dermis]]. ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ-ᎤᏯᏅᎲ "ᎤᏍᏗᏰᎬ" ([[trichome]]) ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎠᏩᏛᏗ ᎾᎿ [[plant|ᎦᎪᏘ]]. ᎯᎠ ᏂᎯ ᎾᎿ [[arthropod]], ᏯᏛᎿ ᏥᏄᏍᏗ [[insect|ᏨᏍᎪᏱ]] ᎠᎴ [[spider|ᎧᎿᏁᏍᎩ]] ᎠᎴ ᎤᏙᎯᏳᎯᏯ [[insect|ᏨᏍᎪᏱ]] [[bristle|ᎪᏍᏓᏱ]]. ᎯᎠ ᎤᏍᏗᏰᎬ ᎬᏙᏗ-[[human|ᏴᏫ]] [[species|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ ᏩᏎᎸᎯ ᏥᏄᏍᏗ [[fur|ᎤᏭᏯᏔᏅ]]. ᎾᎿᎢ ᎠᎴ varieties [[cat|ᏪᏌ]], [[dog|ᎩᏟ]], ᎠᎴ [[mouse|ᏥᏍᏕᏥ]] ᏗᏓᏓᏂᎸᏣᏘ ᎤᎭ ᎤᏍᏗ ᎠᎴ Ꮭ ᎬᎪᏩᏛᏗ ᎤᏍᏗᏰᎬ.
 
 == ᏴᏫ ᎤᏍᏗᏰᎬ ==
 === ᎠᏰᎸ ᎤᏍᏗᏰᎬ ===
-ᎭᏫᎾᏗᏢ ᏧᏓᎴᎾᎢ ᎤᎪᏗᏗ [[mammal|ᎦᏂᏝᎢ]], ᎠᏂᏴᏫ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎭ ᏂᎦᏛ-ᎦᏃᎴᏍᎬ, ᎤᎭᎨᏛ ᎤᏍᏗᏰᎬ ᎾᎿ ᎤᎾᏤᎵ ᏗᏂᏰᎸ. ᎾᎯᏳᎢ ᎯᎠ [[great apes|ᎡᏆ ᏗᏟᎶᏍᏔᏅ]] ᎤᎭ ᏗᎦᏃᏢᎩ ᏌᎨᎢ ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᎠᎴ ᎢᎦᏛ ᎤᏰᎸᎭ ᎡᏍᎦᏂ, ᎪᎯ ᎨᏒᎢ ᎤᏚᏃᎯᏍᏔᏍᎧ ᎭᏫᎾᏗᏢ ᎠᏂᏴᏫ: coverage ᎨᏒᎢ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎠᏂᎦᏲᎵ Ꮎ ᎾᏍᎩ ᏰᎵᏇ ᎠᏓᏁᏗ ᎯᎠ ᎦᎾᏄᎪᏨᎢ ᎠᎧᎵᏬᎯ ᎤᏰᎸᎭ ᎦᏁᎦ (ᏯᏛᎾ ᎯᎠ ᎠᎴᏂᏍᎬ "[[The Naked Ape|ᎤᏰᎸᎭ ᏗᏟᎶᏍᏔᏅ]]").
+[[Image:Anderson Sophie Young Girl Fixing Her Hair.jpg|thumb|right|"ᎠᏲᎵ ᎠᎨᏳᏣ ᎣᏍᏛ ᎢᎬᏁᏗ ᎾᏍᎩ ᎠᎨᏴ ᎤᏍᏗᏰᎬ", ᎾᎥᎢ [[Sophie Gengembre Anderson]]]]
+ᎭᏫᎾᏗᏢ ᏧᏓᎴᎾᎢ ᎤᎪᏗᏗ [[mammal]], ᎠᏂᏴᏫ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎭ ᏂᎦᏛ-ᎦᏃᎴᏍᎬ, ᎤᎭᎨᏛ ᎤᏍᏗᏰᎬ ᎾᎿ ᎤᎾᏤᎵ ᏗᏂᏰᎸ. ᎾᎯᏳᎢ ᎯᎠ [[great apes|ᎡᏆ ᏗᏟᎶᏍᏔᏅ]] ᎤᎭ ᏗᎦᏃᏢᎩ ᏌᎨᎢ ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᎠᎴ ᎢᎦᏛ ᎤᏰᎸᎭ ᎡᏍᎦᏂ, ᎪᎯ ᎨᏒᎢ ᎤᏚᏃᎯᏍᏔᏍᎧ ᎭᏫᎾᏗᏢ ᎠᏂᏴᏫ: coverage ᎨᏒᎢ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎠᏂᎦᏲᎵ Ꮎ ᎾᏍᎩ ᏰᎵᏇ ᎠᏓᏁᏗ ᎯᎠ ᎦᎾᏄᎪᏨᎢ ᎠᎧᎵᏬᎯ ᎤᏰᎸᎭ ᎦᏁᎦ (ᏯᏛᎾ ᎯᎠ ᎠᎴᏂᏍᎬ "[[The Naked Ape|ᎤᏰᎸᎭ ᏗᏟᎶᏍᏔᏅ]]").
 
 ᎯᎸᏍᎩ ᎠᏓᏅᏖᏍᎬ ᎤᎭ ᏭᏪᏙᎢ ᎠᏓᏌᎳᏙᏗ ᏗᎪᏏᏐᏗ ᎯᎠ ᎠᏚᎳᏗ ᏴᏫ ᎠᏰᎸ ᎤᏍᏗᏰᎬ. ᏌᏊ ᎠᏂᏁᎢᏍᏗ Ꮎ ᎤᏁᎳᏅ ᎤᏬᏢᏅ ᎠᏑᏰᏛ ᎠᏂᏴᏫ ᎾᏍᎩᎾᎢ ᏍᏆᎵᎯᎨᏍᏗ ᎠᎴ thinner ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᏥᏄᏍᏗ ᎢᎦᏛ ᎠᏫᏒᏗ adaptations ᎯᎠ ᎤᎦᎾᏩ [[plains|ᏂᎬᏅ]] ᎯᎠ [[savanna|ᏂᎬᏅ]], ᎠᏠᏯᏍᏗᏍᎩ [[bipedal]] [[locomotion|ᎠᏌᎳᏙᏗ]] ᎠᎴ ᎦᎸᎳᏗ ᎠᎦᏘ [[posture|ᏄᏍᏗᏓᏅ]]. ᎭᏫᎾᏗᏢ ᎪᎯ ᎪᎷᏩᏛᏗ ᎯᎠ ᎠᏚᎳᏗ ᏴᏫ ᎤᏍᏗᏰᎬ ᏥᏄᏍᏛᎩ ᎠᏑᏰᏛ ᎠᎵᏍᏕᎸᏗ ᎠᎨᏔᏗᏍᏗ [[body temperature|ᎠᏰᎸ ᏄᏁᏌᏴᏢ]]. ᎾᎿᎢ ᎠᎴ ᎯᎸᏍᎩ ᏗᎦᏎᏍᏙᏗ ᎬᏙᏗ ᎪᎯ ''ᏂᎬᏅ'' ᎪᎷᏩᏛᏗ, ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏂᎦᏲᎵ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ Ꮎ [[cursorial hunting|cursorial ᎠᏂᏃᎯᎵᏙᎲ]] ᎨᏒᎢ ᎬᏔᏅᎯ ᎾᎥᎢ ᏐᎢ ᎡᎿᎢ ᎡᎥ Ꮎ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎾᏛᏁᎸᏗ ᏂᎦᎵᏍᏗᏍᎬᎫ thinning ᎤᏍᏗᏰᎬ, ᎠᎴ Ꮎ [[chimpanzee]] ᎠᎴ [[gorilla|ᏄᏁᎸᎾ]] ᎤᏍᏗᏰᎬ ᎾᏍᎩ ᎾᏍᏇ ᏚᏓᏩᏗᏍᎬ ᎯᎠ ᎦᏁᎦ ᏂᏛᎴᏅᏓ [[radiant heat|ᏚᎸᏌᏛ ᎤᎦᎾᏭ]] ᎠᎴ ᎠᏓᏍᏕᎸᏗ ᎾᏍᎩ ᏂᏛᎴᏅᏓ ᎤᏗᎴᎩ ᏅᎩᏨᎴ, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏄᏓᎴ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎾᏍᎩᎾᎢ ᎤᎦᎾᏭ ᎤᏲᎱᏎᎸ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎧᏁᏨ ᎢᏯᏛᏁᏗ. ᏄᏓᎴ ᎠᎦᏎᏍᏙᏗ ᎢᎬᏁᏗ ᎨᏒᎢ Ꮎ bipedal ᎠᏌᎳᏙᏗ ᎬᎪᏩᏛᏘᏉ predates [[hominid]]' ᎠᏓᏅ ᏂᏛᎴᏅᏓ [[forest|ᎠᏙᎯ ᎢᎾᎨ]] ᏄᏍᏗᏓᏅ ᏂᎬᏅ ᏄᏍᏗᏓᏅ{{citation needed}}.
 
@@ -40,13 +41,10 @@ http://www.anthro.utah.edu/~rogers/pubs/Pagel-BL-270-S117.pdf
 ᎤᏁᏉᏨᎯ ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᎾᎿ ᎠᏂᎨᏴ ᎠᏍᏓᏩᏗᏒ ᎯᎠ ᎠᏍᎦᏯ ᏗᏟᎶᏍᏙᏗ ᏰᎵᏇ ᎾᏍᏋ ᏩᏎᎸᎯ ᏥᏄᏍᏗ [[hirsutism]]. ᎤᎶᏒᏍᏔᏅ ᎠᎴ ᎧᎵ ᏂᎨᏒᎾ ᎤᏍᏗᏰᎬ ᎤᏛᏏᏗᏒ ᎾᎿ ᎯᎠ ᎠᏰᎸ ᎠᏍᎦᏯ ᎠᎴ ᎠᎨᏴ ᎨᏒᎢ ᎧᏁᎢᏍᏔᏅᎯ ᏥᏄᏍᏗ [[hypertrichosis]]. ᎠᎦᏎᏍᏗᏍᎬ ᎠᏂᏏᏴᏫᎭ ᏄᏍᏗᏓᏅ ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᏥᏄᏍᏗ ᎧᎵ ᏂᎨᏒᎾ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏍᏆᏂᎪᏗ ᎠᎵᏍᎦᏍᏙᏗ ᎾᎿ ᎦᏃᏢᎩ ᏅᏬᏘ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎾᎿ cultural ᎠᎴ ᎠᎾᏓᏟᏏᏍᎬ ᏄᏍᏛ ᎣᏓᏅᏛ.
 
 [[Image:Gray945.png|thumb|left|150px|ᏫᏚᏳᎪᏛ   ᎠᏂᏏᏴᏫᎭ ᎤᏍᏗᏰᎬ]]
-[[Image:Shuau with long hair.jpg|thumb|right|150px| ᎠᏏᏴᏫ ᎬᏙᏗ ᏭᎶᏒᏍᏔᏅ ᎦᏂᏝᎢ ᎤᏍᏗᏰᎬ]]
 ᎠᏂᏏᏴᏫᎭ ᎤᏍᏗᏰᎬ ᎠᏓᏁᏟᏴᏍᏗᎭ ᏗᎴᏪᎢᏍᏙᏗ ᎤᏛᏏᏗᏒ ᎠᎴ dormancy. ᎾᎯᏳᎨᏒ ᎯᎠ ᎤᏛᏏᏗᏒ ᎢᎦᏛ ᎯᎠ ᎠᏓᏠᎯᏍᏗ, [[hair follicles|ᎤᏍᏗᏰᎬ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ]] ᎠᎴ ᎦᏅᎯᏓ ᎠᎴ [[bulbous|ᎤᏚᏃᎯᏍᏔᏍᎧ]], ᎠᎴ ᎯᎠ ᎤᏍᏗᏰᎬ ᎠᏓᏌᎳᏙᏗ ᎤᏓᏎᎦᏤᏗ ᎾᎾᎢ ᎬᏩᏚᏫᏛ ᏦᎢᏁ [[millimeter]] ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎢᎦ. ᎤᎶᏐᏅ ᏦᎢ ᏑᏓᎵ ᎢᏯᏅᏓ, ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᎤᏛᏏᏗᏒ ᎠᎾᎴᏫᏍᏗᏍᎬ (ᎯᎠ pubic ᎠᎴ armpit ᎡᏍᎦᏂ ᎤᎲᎢ ᎯᎠ ᎦᏅᎯᎢᏍᏗ ᎤᏛᏏᏗᏒ ᎠᎴᏫᏍᏙᏗ). ᎯᎠ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎠᎦᏲᎳᏗᏍᏗ ᎠᎴ ᎯᎠ [[root|ᎤᎾᏍᏕᏢ]] ᎯᎠ ᎤᏍᏗᏰᎬ ᎠᏛᏍᎦ ᏄᏍᏛ ᎢᏯᏛᏁᏗ. ᎠᏍᏓᏩᏗᏒ ᎠᎴᏫᏍᏙᏗ [[dormancy]], ᏄᏓᎴ ᎤᏛᏏᏗᏒ ᎠᏓᏠᎯᏍᏗ ᎠᏂᎩᏍᏗ, ᎠᎴ ᏭᎵᏱᎶᎸ ᎢᏤ ᎤᏍᏗᏰᎬ pushes ᎯᎠ ᎠᎦᏴᎵ ᏌᏊ ᎠᏥᏄᏉᏫᏍᎬ ᎯᎠ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᏂᏛᎴᏅᏓ ᎭᏫᎾᏗᏢ. ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ, ᎾᎥᎢ ᎤᏠᏱ ᎾᎬᏁᎲ, ᎠᏛᏍᎦ ᎾᏍᎩᎾᎢ ᎦᏅᎯᏓ [[time|ᎢᏳᏩᎪᏗ]] ᎠᎴ ᎡᏆ ᏂᎦᏅᎯᏒ ᎤᏓᎷᎸ ᎠᎴᏂᏙᎲ ᏚᎦᏔᏬᎸ. ᎯᎠ ᏓᎬᏩᎶᏛ ᎤᏛᏏᏗᏒ ᎨᏒᎢ ᎾᎥᏂᎨᏍᏙᏗᏇ 1.25 centimeters, ᎠᎴ ᎬᏩᏚᏫᏛ 0.5 [[inch|ᎢᏯᏏᏔᏛ]]es, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏏᏅᏙ. [[Anthropologist]] ᎠᏩᏒᏗᏱ Ꮎ ᎯᎠ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎦᏛᎬᎢ ᎦᏅᎯᏓ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ ᎠᎾᏍᎬᏘ ᎾᏍᏋ [[adornment|ᎠᏣᏅᏙ]], byproduct ᎠᏂᎦᏲᎵ [[natural selection|ᏂᎬᏩᏍᏛ ᎠᏑᏰᏍᏗ]] ᏌᏊ ᎢᏳᏩᎫᏗ ᏐᎢ [[somatic|ᎢᏳᏍᏗ ᏯᏛᎿ]] ᎤᏍᏗᏰᎬ ᎠᏰᎲ ᏭᏪᏙᎢ ᎤᎴᎾᎯᏛ. ᏄᏓᎴ ᎤᏝᏅᏓᏕᎲ ᎨᏒᎢ Ꮎ ᎦᏅᎯᏓ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᏄᎵᏍᏔᏅ [[Fisherian runaway|Fisherian ᎠᏑᎳᎪᎢᏍᏗ]] [[sexual selection|sexual ᎠᏑᏰᏍᏗ]], ᎭᏢᏃ ᎦᏅᎯᏓ ᎠᏨᏍᏛ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᎬᎪᏩᏛᏗ [[marker]] ᎾᏍᎩᎾᎢ ᏅᏩᏙᎯᏯᏛ ᎠᏂᏏᏴᏫᎭ (ᎬᏙᏗ ᎣᏍᏛ ᎠᏓᏍᏕᎸᏗ, ᎤᏓᏠᏍᏛ ᏂᎦᏅᎯᏒ ᎤᏍᏗᏰᎬ&mdash;ᎾᎥᏂᎨᏍᏙᏗᏇ 1 ᎠᏎᎯᎯ ᎠᎴ 39 ᎢᏯᏏᏔᏗᏍᏗ ᎦᏅᎯᏓ&mdash;ᏯᏓᎢᏗᏏ ᎠᎩᏍᏗ ᏴᏩᏚᏫᏛ 80 ᎢᏯᏅᏓ, ᎠᎴ ᎣᏍᏛ ᎭᏫᎾᏗᏢ 7 ᏧᏕᏘᏴᏓ, ᎠᏛᏍᎬ). ᎪᎯ ᏯᏓᎢᏗᏏ ᏗᎪᏏᏐᏗ ᎦᏙᏃ ᎦᏅᎯᏓ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ (ᎭᏫᎾᏗᏢ ᎢᏧᎳ sexes) ᎨᏒᎢ viewed ᏥᏄᏍᏗ ᎤᎵᎶᎯ ᎢᏧᎳᎭ ᎾᏊ.
 
 === Aging ===
-[[Image:Old Hmong Man (Sapa Vietnam).jpg|150px|right|thumb| ᎠᎦᏴᎳᎯᎨᏍᏙᏗ [[Hmong people|Hmong]] ᎠᏍᎦᏯ ᎬᏙᏗ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ]]
-
-ᎠᎦᏴᎳᎯᎨᏍᏙᏗ ᏴᏫ ᏫᏚᏳᎪᏛ ᎤᏙᎷᏬᏗ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎢᎬᏂᏏᏍᎩ ᎯᎠ [[pigment|ᏗᎧᏃᏗ]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᎤᎴᎾᎯᏛ ᎠᎴ ᎯᎠ ᎤᏍᏗᏰᎬ ᏗᏙᎳᎩ colourless. ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᎠᎦᏎᏍᏔᏅ ᎾᏍᏋ ᎨᎦᏓᏅᏖᏗ ᏄᎶᏒᏍᏛᎾ aging. ᎯᎠ ᎢᏳᏕᏘᏴᏓ ᎾᎾᎢ ᎦᏙ ᎤᏍᏗ ᎪᎯ ᏄᎵᏍᏔᏅ varies ᏂᏛᎴᏅᏓ ᎠᏏᏴᏫ ᎠᏏᏴᏫ, ᎠᎴ ᎭᏫᎾᏗᏢ ᏂᎦᎥ ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ 75 ᏧᏕᏘᏴᏓ ᎠᎴ ᎠᎦᏴᎳᎯᎨᏍᏙᏗ ᎤᎭ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ, ᎠᎴ ᎭᏫᎾᏗᏢ ᏂᎦᎥ ᎠᏂᏍᎦᏯ ᏫᏚᏳᎪᏛ ᏗᏙᎳᎩ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎾᎾᎢ ᎠᏲᎵᎨ ᎤᎧᏁᎳ ᎬᎾᏬᏍᎬ ᎠᏂᎨᏴ. 
+ᎠᎦᏴᎳᎯᎨᏍᏙᏗ ᏴᏫ ᏫᏚᏳᎪᏛ ᎤᏙᎷᏬᏗ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎢᎬᏂᏏᏍᎩ ᎯᎠ [[pigment|ᏗᎧᏃᏗ]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᎤᎴᎾᎯᏛ ᎠᎴ ᎯᎠ ᎤᏍᏗᏰᎬ ᏗᏙᎳᎩ colorless. ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᎠᎦᏎᏍᏔᏅ ᎾᏍᏋ ᎨᎦᏓᏅᏖᏗ ᏄᎶᏒᏍᏛᎾ aging. ᎯᎠ ᎢᏳᏕᏘᏴᏓ ᎾᎾᎢ ᎦᏙ ᎤᏍᏗ ᎪᎯ ᏄᎵᏍᏔᏅ varies ᏂᏛᎴᏅᏓ ᎠᏏᏴᏫ ᎠᏏᏴᏫ, ᎠᎴ ᎭᏫᎾᏗᏢ ᏂᎦᎥ ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ 75 ᏧᏕᏘᏴᏓ ᎠᎴ ᎠᎦᏴᎳᎯᎨᏍᏙᏗ ᎤᎭ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ, ᎠᎴ ᎭᏫᎾᏗᏢ ᏂᎦᎥ ᎠᏂᏍᎦᏯ ᏫᏚᏳᎪᏛ ᏗᏙᎳᎩ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎾᎾᎢ ᎠᏲᎵᎨ ᎤᎧᏁᎳ ᎬᎾᏬᏍᎬ ᎠᏂᎨᏴ. 
 
 ᎾᏍᎩ ᎢᏳᏗᎾ ᎾᏍᏋ ᎪᏪᎶᏗ ᏱᏂᎬᏛᎾ, Ꮎ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎭᏫᎾᏗᏢ ᎤᏩᏌᏊ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏙᎯᏳᎯᏯ ᎤᏍᎪᎸ ᏌᎪᏂᎨ - ᎯᎠ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᏄᎵᏍᏔᏅ ᎯᎠ ᏧᏓᎴᎾᎢ ᎠᏰᎵ ᎯᎠ ᎤᎳᏏᎩ ᎠᎴ ᎤᏁᎬ/ᎤᏓᏂᎳᎯᎨ ᎤᏍᏗᏰᎬ ᏑᏓᎴᎩ overall 'ᎤᏍᎪᎸ ᏌᎪᏂᎨ' ᎦᎾᏄᎪᏨᎢ ᎯᎠ ᎾᎿ. ᏥᏄᏍᏗ ᏯᏛᎿ, ᏴᏫ ᎠᏂᎩᏍᏗᏍᎬ ᎠᏥᏄᏉᏫᏍᎬ ᎬᏙᏗ ᎤᏙᎯᏳ ᎤᏔᏂᏗ ᎦᏙᎯ [[blond|ᎠᏍᎪᎸᎬ]] ᎤᏍᏗᏰᎬ ᎤᏠᏱᎭ ᎤᏙᎷᏬᏗ ᎤᏁᎬ ᎤᏍᏗᏰᎬ ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎯᎳᎪ ᎢᏳ aging. ᎩᎦᎨ ᎤᏍᏗᏰᎬ ᎤᏠᏱᎭ doesn't ᎠᎦᏔᎲᏍᏗ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎬᏙᏗ ᎢᏳᏕᏘᏴᏓ; ᎤᏟ ᎬᏰᎸᏗ ᎾᏍᎩ ᏗᏙᎳᎩ ᏃᏯᎭ ᏗᎧᏃᏗ ᎠᎴ afterward ᎠᎦᏔᎲᎠ ᎤᏁᎬ. ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ, ᎯᎠ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎠᎴ ᎤᏁᎬ ᎦᎾᏄᎪᏨᎢ ᎠᏂᏏᏴᏫᎭ ᎤᏍᏗᏰᎬ [[fiber|ᎠᏍᏗ ᎪᏢᏔᏅ]]ᎨᏒᎢ ᏄᎵᏍᏔᏅ ᎠᏨᏍᏛ ᏗᏗᎦᎴᏴ ᏂᏛᎴᏅᏓ ᎤᏃᎴ [[bubble|ᎥᏝ ᎪᎱᏍᏗ]]ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏰᎵ [[medula]] ᎯᎠ ᎤᏍᏗᏰᎬ ᎠᏍᏗ ᎪᏢᏔᏅ. ᎢᎦᏛ ᎢᎦᎢ ᎢᎦᏘ [[scalp|ᎠᏥᏍᏓᏁᎦᎸᏓ]] [[hair loss|ᎤᏍᏗᏰᎬ ᎤᏲᎱᏎᎸ]] ᎠᎴ thinning ᏂᎦᎥᏊ accompanies aging ᎭᏫᎾᏗᏢ ᎢᏧᎳ ᎠᏍᎦᏯ ᎠᎴ ᎠᎨᏴ, ᎠᎴ ᎾᏍᎩ ᎤᏤᎵ ᎠᎦᏎᏍᏔᏅ Ꮎ ᎠᏰᎵ ᎢᏴ ᏂᎦᏛ ᎠᏂᏍᎦᏯ ᎠᎴ ᎦᎸᏉᏔᏅ ᎾᎥᎢ [[male pattern baldness|ᎠᏍᎦᏯ ᏗᏟᎶᏍᏙᏗ baldness]] ᎾᎥᎢ ᎯᎠ ᎢᏳᏩᎪᏗ ᎤᏅᏌ ᎠᎴ 50<ref name="halfofmen">[http://nl.newsbank.com/nl-search/we/Archives?s_site=ozarksnow&f_site=ozarksnow&f_sitename=Springfield+News-Leader+%28MO%29&p_theme=gannett&p_product=SNLB&p_action=search&p_field_base-0=&p_text_base-0=baldness&Search=Search&p_perpage=10&p_maxdocs=200&p_queryname=700&s_search_type=keyword&p_sort=_rank_%3AD&p_field_date-0=YMD_date&p_params_date-0=date%3AB%2CE&p_text_date-0= "Uncovering the bald truth about hair loss."] ''Springfield ᏗᏤᎢ-ᏗᏓᏘᏁᎯ'', ᎠᎾᏍᎬᏘ 10, 2005.  "ᎠᏰᎵ ᎢᏴ ᎠᏂᏍᎦᏯ" ᎠᎦᏎᏍᏙᏗ ᎨᏒᎢ ᎪᏢᏅᎯ ᎾᎥᎢ ᎯᎠ ᏴᏩᏁᎬ ᎢᎬᎢ ᎤᏔᎾ ᏧᎾᏕᎶᏆᏍᏗ ᎠᏰᎵ ᎠᎴ ᎧᎵ ᏗᎪᎥᎯ ᎠᎦᏎᏍᏗ ᎤᏂᎪᏗᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎹᏰᏟ ᎾᏂᎥ ᏴᏫ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎪᎯ ᎢᏳᏗᎾ ᏄᏍᏛ ᏨᏓᏓ ᏄᏍᏛ ᏨᏓᏓᎧᏁᏗ ᎤᏂᎪᏗᏗ ᎭᏫᎾᏗᏢ ᏐᎢ ᎾᏂᎥ ᏴᏫ.</ref>. ᎯᎠ ᏫᏚᏳᎪᏛ ᏫᏚᏳᎪᏛ [[baldness]] ᎨᏒᎢ ᏫᏚᏳᎪᏛ shared ᎾᎥᎢ ᏎᏍᏗ ᏐᎢ [[primate|ᎠᎵᏣᏙᎲᏍᎩ]] [[species|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]], ᎠᎴ ᎨᏒᎢ ᏁᎵᏒ ᎤᎭ evolutionary ᎠᎲᏏᏓᏍᏗ.
 
@@ -92,92 +90,21 @@ g ᎤᏍᏗᏰᎬ]]
 === ᎤᏍᏗᏰᎬ ᏥᏄᏍᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ ===
 [[Hair care|ᎤᏍᏗᏰᎬ ᎠᎦᏎᏍᏙᏗ]] ᎾᏍᎩᎾᎢ ᎠᏂᏴᏫ ᎨᏒᎢ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᎡᎶᎯ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎬᏙᏗ specialized ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ, chemicals ᎠᎴ techniques. 
 ᎯᎠ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏧᏓᎴᏅᏓ ᎤᎾᏛᎯᏍᏔᏅ ᏗᎵᎪᏔᏅ ᎬᏙᏗ ᏴᏫ ᎤᏍᏗᏰᎬ ᎤᎭ ᏗᏙᎳᎩ ᎤᎵᏍᎨᏛ ᏧᏂᎸᏫᏍᏓᏁᏗ ᎠᎴ ᎠᏕᎸ ᏄᎾᏍᏛ ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ ᎭᏫᎾᏗᏢ ᏭᏕᎵᎬᏗᏢ societies.
-{{Sectstub}}
-
-==ᏙᎪᏩᎸ ᏴᏫ ᎠᎴ fictional ᎠᎦᏓᏅᏖᏗ ᎬᏙᏗ ᏗᎦᏃᏣᎵ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ==
-ᎪᎯ ᏙᎪᏩᎸ ᎾᏍᎩ ᎤᏩᏒ ᎠᏠᏯᏍᏗ ᏗᎦᏃᏣᎵ ᏴᏫ ᎠᎴ fictional ᎠᎦᏓᏅᏖᏗ ᎬᏙᏗ ᎢᎦᏪᏛ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ. ᏗᎦᏃᏣᎵ ᎠᏂᏍᎦᏯ ᎬᏙᏗ ᏗᎦᏃᏣᎵ ᎦᏅᏙᎬ ᎠᎴ/ᎠᎴ ᎠᎭᏄᎸᏒ ᏰᎵᏇ ᎾᏍᏋ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᏧᏓᎴᎿᎢ ᏙᎪᏩᎸ. ᎾᏍᎩ ᎠᏠᏯᏍᏔᏅ ᎠᎭᏂ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎢᏗᎦᏘᎭ ᎬᏙᏗ ᎤᏍᏗᏰᎬ ᎠᎴ ᎠᎴ ᎢᏳᏓᎵᎭ ᎤᎾᎵᎪᏅᎯ ᎬᏙᏗ ᎤᎾᏤᎵ ᏗᎪᏍᎩ ᏗᎦᎪᏗ ᎤᏍᏗᏰᎬ ᎠᎴ ᎤᏍᏗᏰᎬ ᎠᏣᏅᏗ.
-
-* [[Absalom]]
-* [[The Beatles|ᎯᎠ Beatles]]
-* [[Ludwig van Beethoven|Ludwig ᎠᏓᎴᏂᏍᎬ Beethoven]], ᎢᎦᏛ theologeons ᎤᏬᎯᏳ ᎾᏍᎩ ᎠᏍᎦᏯ ᏥᏄᏍᏛᎩ ᎥᏳᎩ ᎤᏍᏆᎸᎲ ᎯᎠ ᎡᏆ ᎢᎦᎢ ᎨᏒ ᎦᏂ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᏓᎦᏏ ᎤᏤᎵ ᎤᏍᏗᏰᎬ. 
-* [[Björn Borg]]
-* [[David Bowie]] ᏥᏄᏍᏗ [[Ziggy Stardust]]
-* [[Louise Brooks|Louise ᎤᏕᏯᏍᏗᏍᏗ]]
-* [[Brunhilda of Austrasia|Brunhilda  Austrasia]], ᎤᎬᏫᏳ ᎠᏂᏁᎳ ᎾᏍᎩ ᎤᏤᎵ ᎤᏍᏗᏰᎬ ᏥᏄᏍᏛᎩ ᎠᏠᏯᏍᏔᏅ ᎯᎠ ᎦᏂᏓᏛ ᏐᏈᎵ ᏥᏄᏍᏗ ᎤᏙᏢᏒ [[death penalty|ᎠᏲᎱᎯᏍᏗ ᎤᏓᏍᏛᏗᏍᏗ]].
-* [[Kurt Cobain]]
-* [[Coolio]]
-* [[George Clooney]], ᎤᎾᏅᏛ ᎾᏍᎩᎾᎢ ᎤᏤᎵ [[Caesar cut|ᎡᎯᏍᏛ ᎠᏰᎳᏍᏗ]]
-* [[Angela Davis]]
-* [[Robert De Niro|Robert ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Niro]] ᏥᏄᏍᏗ [[Travis Bickle|ᎠᎵᏍᏕᎸᏗ Bickle]] ᎭᏫᎾᏗᏢ [[Taxi Driver|Taxi ᏗᎦᏣᏄᎶ ᎤᎾᏣ]]
-* [[Bo Derek|ᎠᎵᎦᎵᏴᎯ Derek]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎾᏛᏁᎶᏗ [[Ten|ᏍᎪᎯ]] (1979)
-* [[Dido (singer)|Dido (ᏗᏂᏃᎩᏍᏗᏍᎩ)]], ᎤᏓᏁᎸ ᏚᏙᎥ ᎯᎠ [[Dido flip|Dido ᎠᏗᏅᏗ]]
-* [[Albert Einstein]]
-* [[Farrah Fawcett]]
-* ᎯᎠ ᏩᏗᏅᏗ [[Friends|ᏧᎾᎵᎢ]], ᎾᏍᎩ ᎤᏤᎵ hairstyles ᎠᏓᏁᏟᏴᏍᏗ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏗᎦᏃᏣᎵ Ꮎ ᎤᏅᏌ ᎨᏒᎩ ᎦᎾᏄᎪᏨᎢ ᏄᏠᏯᏍᏛᎾ ᎯᎠ ᏚᎾᎧᏛ.
-* [[Crystal Gayle|ᎤᏓᏅᏖᏗ Gayle]]
-* [[Whoopi Goldberg]]
-* [[Goldilocks]]
-* [[Ruud Gullit]], Dutch footballer, ᎤᎾᏅᏛ ᎾᏍᎩᎾᎢ ᎤᏤᎵ dreadlocks.
-* [[Audrey Hepburn]]
-* [[Moe Howard]] [[The Three Stooges|ᎯᎠ ᏦᎢ Stooges]]
-* [[The Jackson Five|ᎯᎠ Jackson ᎯᏍᎩ]]
-* [[Michael Jackson]], ᏗᎦᏃᏣᎵ ᎾᏍᎩᎾᎢ ᎤᏤᎵ [[jheri curl|jheri ᎠᏗᏌᏓᏗᏍᏗ]] ᎾᎯᏳᎨᏒ ᎤᏤᎵ [[Thriller]] ᎠᎴᏫᏍᏙᏗ.
-* [[Samuel L. Jackson]] ᏥᏄᏍᏗ [[Jules]] ᎭᏫᎾᏗᏢ [[Pulp Fiction (film)|ᏄᏍᏛ ᎠᎩᏍᏗ ᎠᏓᏅᏖᎸᏅ ᎬᏗ ᎪᏪᎳᏅᎯ]].
-* [[Jommeke]], Belgian ᎤᎸᏓᎴᏍᎩ ᎠᎦᏓᏅᏖᏗ ᎾᎥᎢ [[Jef Nys]].
-* [[Don King|ᎫᏢᎥᏍᎬ ᎤᎬᏫᏳᎯ]]
-* [[Elsa Lanchester]] ᏥᏄᏍᏗ ᎯᎠ ᏣᎦᏨᏍᏗᏍᎩ ᎠᎨᏴ ᎭᏫᎾᏗᏢ ᎯᎠ ᏫᏚᏳᎪᏛ [[The Bride of Frankenstein|ᎯᎠ ᏣᎦᏨᏍᏗᏍᎩ ᎠᎨᏴ  Frankenstein]]
-* [[Tom Lanoye|ᏗᏂᏤᎷᎯᏍᎩ Lanoye]], Belgian ᎪᏪᎵ ᎠᎪᏪᎵ ᎠᏪᎵ ᎪᏪᎵᏍᏗ, ᎤᎾᏅᏛ ᎾᏍᎩᎾᎢ ᎤᏤᎵ ᏓᎦᏘᎴᎬ hearstyles
-* [[Pippi Longstocking]]
-* [[Princess Leia|ᎤᎬᏫᏳ ᎤᏪᏥᎠᏘ Leia]] ᏂᏛᎴᏅᏓ [[Star Wars|ᏃᏈᏏ ᏓᏄᏩ]]
-* [[John Lydon|ᎦᎳᏅᎯ Lydon]]/[[Johnny Rotten|Johnny ᎤᎪᏏᏛ]] ᏂᏛᎴᏅᏓ [[The Sex Pistols|ᎯᎠ ᏧᏠᎯᏍᏗ ᏍᏆᎳ ᎦᎶᏇ]]
-* [[Madame de Pompadour|ᎠᎨᏴ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Pompadour]], ᏓᎪᎥᎩ ᎯᎠ [[Pompadour]] haircut
-* [[Bob Marley|ᏆᏆ Marley]], ᎪᏢᏅᎯ [[dreadlocks]] ᏗᎦᏃᏣᎵ ᎠᎴ ᎠᏛᏍᎩ.
-* [[Harpo Marx]]
-* [[Medusa]]
-* [[John McEnroe|ᎦᎳᏅᎯ McEnroe]]
-* [[Jim Morrison]]
-* [[Dolly Parton]]
-* [[Jean-Marie Pfaff]], Belgian ᎠᎳᏍᎦᎸᏗ ᎤᎦᏎᏍᏗ
-* [[Elvis Presley]]
-* [[Rapunzel]]
-* [[The Rolling Stones|ᎯᎠ ᎦᏐᏆᎴᏍᎬ ᎠᏂᏅᏯ]]
-* [[Samson|ᏄᎵᏂᎬᎬ]]/[[Simpson]]
-* [[Bart Simpson]]
-* [[Marge Simpson]]
-* [[Son Goku|ᎤᏪᏥ Goku]]
-* [[Cloud Strife|ᎤᎶᎩᎸ ᏓᎾᎵᎲ]], ᎠᏏᎾᏍᏛ [[Final Fantasy VII|ᏭᎵᏍᏆᏙᏅ ᎢᏰᎵᏍᏗᎢ VII]]
-* [[Tammin Sursok]]
-* [[Robert Smith (musician)|Robert ᎠᏥᏅᏏᏓᏍᏗ]], ᎦᏂ ᏗᏂᏃᎩᏍᏗᏍᎩ [[The Cure|ᎯᎠ ᎠᏅᏬᏗ]]
-* [[Mr. T.|ᎠᏍᎦᏯ. T.]]
-* [[Shirley Temple|Shirley ᏧᏂᎳᏫᎢᏍᏗ]]
-* [[The Adventures of Tintin|Tintin]]
-* [[Donald Trump|Donald galgvda]], ᎾᏍᎩᎾᎢ ᎤᏤᎵ [[combover]] hairstyle
-* [[Andy Warhol]]
-* [[Adolf Hitler]]
-* [[Cousin Itt|ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ Itt]] ᏂᏛᎴᏅᏓ ᎯᎠ [[Addams Family|Addams ᏏᏓᏁᎸᎯ]] tv ᎤᎾᏛᏁᎸᏗ
-* [[Chuck Norris|ᎦᏌᏙᏯᏍᏗ Norris]]
-* [[Jimi Hendrix]]
 
 == ᎦᏂᏝᎢ ᎤᏍᏗᏰᎬ ==
 ᎯᎠ ᎤᏍᏗᏰᎬ ᎬᏙᏗ-ᏴᏫ [[mammals|ᎦᏂᏝᎢ]] ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[pelage]], [[fur|ᎤᏭᏯᏔᏅ]] ᎠᎴ [[wool|ᎤᏩᏅ]]. ᎢᎦᏛ ᎯᎠ ᏧᏓᎴᏅᏓ ᏚᏙᏢᏒ ᎤᏍᏗᏰᎬ Ꮎ ᎪᏢᏗ ᎦᎸᎳᏗᏢ ᎯᎠ pelage ᎠᎴ ᎠᎦᏘᏯ ᎤᏍᏗᏰᎬ (ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎤᎾᏓᏟᏌᎲ ᎪᏍᏓᏱ [[porcupine|ᏧᏣᏯᏍᏘ ᎤᏁ]]) ᎠᎴ ᎪᏍᏓᏱ (ᎦᏙ ᎤᏍᏗ ᎪᏢᏗ ᎦᎸᎳᏗᏢ ᎯᎠ [[mane|ᎦᏅᏙᎬ]][[lion|ᏢᏓᏥ]]). ᎯᎠ [[polar bear|ᎦᏚᎢ ᎠᎵᏐᏆᎸᏗ]] ᎤᎭ ᎤᏙᏢᏒ pelage ᎭᏢᏃ ᎤᎸᏑᏘ ᎠᎴ [[pigmentation|unpigmented]] ᎤᏍᏗᏰᎬ ᎠᎯᏴᏍᏗ [[sunlight]], ᎾᏍᎩᎾ ᎨᏒ [[ultraviolet]] [[light|ᎠᏨᏍᏛ]], ᏗᎬᏩᎶᏒ ᎯᎠ ᎠᏫᏒᏗ ᎤᏭᏯᏔᏅ ᎯᎠ ᎦᏁᎦ. 
 
 ᎾᏍᎩ ᏂᎨᏒᎾ ᏂᎦᏛ ᎦᏂᏝᎢ ᎤᎭ ᎤᎭᎨᏛ ᎤᏭᏯᏔᏅ. ᎤᎪᏗᏗ aquatic ᎦᏂᏝᎢ, ᏯᏛᎿ ᏥᏄᏍᏗ [[whale|ᎤᏔᎾ ᎠᏣᏗ]] ᎠᎴ [[dolphin|ᎠᎺᏉᎯ]], ᎤᎭ ᎤᏍᏗ ᎠᎴ Ꮭ ᎠᏰᎸ ᎤᏍᏗᏰᎬ (ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎥᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎹ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏎᎾᏍᎩ ᎢᏳᎵᏍᏙᏗ ᎦᏂ ᎤᏍᏗᏰᎬ ᎤᏲᎱᏎᎸ, ᏥᏄᏍᏗ ᎯᎠ [[pinniped]] ᎠᎴ [[Mustelidae|ᏥᏯ]] ᎠᏓᏃᎮᏗ). ᏂᎦᎥ ᎠᏨᏍᏙᏗ ᏫᏚᏳᎪᏛ ᎬᏂᎨᏒ ᏂᏚᏍᏗ ᎠᏰᎵ ᎠᏰᎸ ᏂᎬᎢ ᎠᎴ ᎯᎠ ᎾᏯᏛᎲᎢ ᎠᏰᎸ ᎤᏍᏗᏰᎬ (ᎡᎷᏪᎢ ᎭᏫᎾᏗᏢ ᎤᏍᏗᏰᎬ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏅᎩ ᏧᏅᏏᏯ centimeter). ᎡᏆ ᎡᎿᎢ ᎡᎥ ᏯᏛᎿ ᏥᏄᏍᏗ [[elephant|ᎧᎹᎹ]] ᎠᎴ [[rhinoceros|ᎳᏃᏏᎳ]] Ꮎ ᎤᎭ ᎦᎸᎳᏗᎨᏍᏙᏗ ᎠᎾᎵᏐᏈᎸᏍᎬ ᎠᏰᎸ ᎦᏟᏌᏅ ᎤᎪᏗᏗ ᎦᏚᎢ ᎡᏍᎦᏂ (ᎠᎴ Ꮎ ᎤᏚᎳᏗ ᎠᏍᏆᏂᎪᏙᏗ ᏂᏛᎴᏅᏓ overheating) ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᎤᏍᏗ ᎠᎴ Ꮭ ᎠᏰᎸ ᎤᏍᏗᏰᎬ.
 
-==ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ==
-
-{{Commons|Category:Hair|Hair}}
-
-* [[Xie Qiuping]]
+==ᎯᎪᏩᏔ ᎾᏍᎦ ᎾᏍᏇ==
+<div style="font-size:100%;-moz-column-count:2; column-count:2;">
 * [[Facial hair|Facial ᎤᏍᏗᏰᎬ]]
 * [[Chest hair|ᎦᏁᏥ ᎤᏍᏗᏰᎬ]]
 * [[Abdominal hair|ᎭᏫᎾᏗᏢ ᎤᏍᏗᏰᎬ]]
 * [[Pubic hair|Pubic ᎤᏍᏗᏰᎬ]]
-* [[Hypertrichosis]]
-* [[Hirsutism]]
 * [[Baldness]]
 * [[Depilation|ᏗᏄᏪᏍᏗ]]
 * [[Widow's peak|ᎤᏬᏑᎶᏨ ᎤᏤᎵ ᏫᎪᏍᏓᏴ]]
-* [[Cowlick]]
 * [[Social role of hair|ᎠᎾᏓᏟᏏᏍᎬ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ  ᎤᏍᏗᏰᎬ]]
 * [[Blond|ᎠᏍᎪᎸᎬ]]
 * [[Brunette|ᏬᏗᎨ]]
@@ -188,18 +115,15 @@ g ᎤᏍᏗᏰᎬ]]
 * [[Hair care|ᎤᏍᏗᏰᎬ ᎠᎦᏎᏍᏙᏗ]]
 * [[Hair style|ᎤᏍᏗᏰᎬ ᎠᏣᏅᏗ]]
 * [[List of songs about hair|ᏙᎪᏩᎸ  ᏗᎧᏃᎩᏛ ᎬᏩᏚᏫᏛ ᎤᏍᏗᏰᎬ]]
-* [[Eponymous hairstyles]]
-* [[Poliosis]]
+</div>
 
-==ᏫᏓᏎᎸᎢ==
-<references />
+==ᏓᏓᏚᎬ ᎪᏪᎵ==
+{{reflist}}
 
-==ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ==
-*[http://answers.google.com/answers/threadview?id=122411 Discussion about shaving and cultures]
-*[http://www.clevelandclinicmeded.com/diseasemanagement/dermatology/hair/hair.htm Hair disorders] ᏂᏛᎴᏅᏓ ᎯᎠ Cleveland Clinic
-
-{{integumentary_system}}
-{{human anatomical features}}
+==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
+{{Commonscat|Hair}}
+::*[http://answers.google.com/answers/threadview?id=122411 Discussion about shaving and cultures]
+::*[http://www.clevelandclinicmeded.com/diseasemanagement/dermatology/hair/hair.htm Hair disorders] ᏂᏛᎴᏅᏓ ᎯᎠ Cleveland Clinic
 
 [[Category:ᎠᏂᏴᏫ]]
 
