--- a/ᎤᏍᏗᏰᎬ.mw
+++ b/ᎤᏍᏗᏰᎬ.mw
@@ -16,12 +16,6 @@
 
 ᏄᏓᎴ ᎪᎷᏩᏛᏗ Ꮎ ᎨᏒᎢ ᎦᏟᏐᏗᎩ ᎭᏫᎾᏗᏢ ᏧᏠᎯᏍᏗ ᎬᏙᏗ [[sexual selection|sexual ᎠᏑᏰᏍᏗ]] ᎨᏒᎢ Ꮎ ᎠᏂᏴᏫ ᎤᎴᎾᎯᏛ ᎤᎾᏤᎵ ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᎠᎦᏲᎳᏅ ᎤᎾᏤᎵ ᎦᏂᏰᎩ [[fur|ᎤᏭᏯᏔᏅ]]-ᎠᎨᏳᎯ [[parasite|ᎠᏥᎾᏝᎢ]] ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎠᎦᏎᏍᏙᏗ ᎯᎠ ᎠᎿᏗᏢ ᏧᏠᎯᏍᏗ. "ᎭᏫᎾᏗᏢ ᎡᎿᎢ ᎡᎥ, [[ectoparasite]] ᎾᏍᎩᏯᎢ [[biting flies|ᎤᏴᏢ ᎠᏂᏛᎦ]], ᏄᎵᏂᎬᎬ ᎤᎪᏗᏳ ᏓᏓᏁᏤᎸ ᏚᏂᎬᏩᎶᏛ - ᎤᏅᏌ ᎤᏙᎯᏳᎯ ᎦᎸᏉᏙᏗ ᎠᏆᏤᎵ ᎠᏰᎸ ᏄᏛᎿᏕᎬ", "ᎠᏆᏤᎵ ᏗᎧᏃᏗᎢ ᎨᏒᎢ Ꮎ hairlessness ᎨᏒᎢ adaptation ᎾᏍᎩᎾᎢ ᎠᎦᏲᎳᏗᏍᎩ ᎯᎠ ectoparasite ᎠᎧᎵᎢ." ᎠᏗᎭ ᎤᏙᏪᎸ Pagel, [[evolutionary biologist]], ᎠᎴ ᎤᏤᎵ ᎤᎾᏓᏡᎩ [[Walter Bodmer]] ᎾᎾᎢ ᎯᎠ [[University of Reading|ᏗᏕᎶᏆᏍᏗ  ᏓᎪᎵᏰᏍᎬ]], [[UK]]. ᏥᏄᏍᏗ ᎠᏂᏴᏫ ᎤᏙᎷᏩᏛᏓ ᎯᎠ ᏅᏏᎾᏒ ᎠᎨᏔᏗᏍᏗ ᎤᎾᏤᎵ ᏄᏍᏗᏓᏅ ᎾᎥᎢ ᎠᏓᏁᎸ ᎠᏥᎸ ᎠᎴ ᏄᎾᏰᎯᏍᏛᎾ ᎠᎴ ᎠᏃᏢᏍᎬ ᎤᎾᏤᎵ ᎣᏤᎵ 'ᎤᏭᏯᏔᏅ' ᎬᏙᏗ ᏧᎾᏄᏬ ᎬᏙᏗ ᎯᎠ ᎤᎵᏌᎳᏙᏗ ᏴᏫ ᎥᎦᏔᎲᎢ, ᎪᎯ adaptation ᎠᏓᏁᏟᏴᏍᏗ ᏰᎵᏊ. "ᎾᏍᎩ ᎤᏤᎵ ᏌᏊ ᎾᏍᎩ ᎣᏍᏛ ᏕᎦᎸᏛ ᎧᏁᏌᎢ gene/ᎥᎦᏔᎲᎢ ᎢᏗᎦᏘᎭ-ᎠᏓᎴᏂᏍᎬ" ᎠᏗᎭ Pagel. "ᎾᏍᎩ ᎤᏤᎵ ᎯᎠ ᎥᎦᏔᎲᎢ ᎦᏙ ᎤᏍᏗ ᎤᎵᏍᏕᎸᎲᎩ ᎢᏧᎳ ᎠᏴ ᎣᏤᎵ ᎢᎬᏁᏗ ᎯᎠ ᎤᏅᏔᏂᏓᏍᏗ ᎤᏓᏲᎱᏎᏗ ᎠᏆᏤᎵ ᎤᏍᏗᏰᎬ." ᎭᏫᎾᏗᏢ ᎪᎯ scenario [[sexual selection|sexual ᎠᏑᏰᏍᏗ]] ᎤᎵᏍᏕᎸᎲᎩ ᎦᏣᏄᎳᎯᏍᏗ ᎯᎠ ᎤᏲᎱᏎᎸ ᎤᏭᏯᏔᏅ.
 
-ᎾᏍᎩᎾᎢ ᎯᎠ newscientist ᎤᏓᏡᎬ ᎬᏙᏗ ᎯᎠ ᏕᎬᏔᏛ:
-http://www.newscientist.com/ᎤᏓᏡᎬ.ns?id=dn3807
-
-ᎾᏍᎩᎾᎢ ᎯᎠ ᎤᏙᏪᎸ Pagel ᎠᎴ Walter Bodmer ᎤᏓᏡᎬ ᎭᏫᎾᏗᏢ ᎤᎾᏙᏢᎯ ᎪᏪᎵ ᏂᏙᏓᎦᏅᏅᎯ, ᎬᏙᏗ ᎯᎠ ᏕᎬᏔᏛ
-http://www.anthro.utah.edu/~rogers/pubs/Pagel-BL-270-S117.pdf
-
 === ᎢᏗᎦᎪᏘ ᎤᏍᏗᏰᎬ ===
 [[Image:Edward S. Curtis Collection People 043.jpg|right|thumb|ᎧᏃᎮᎸᎯ Hopi ᎤᏍᏗᏰᎬ ᎠᏣᏅᏗ, ᏗᏟᎶᏍᏔᏅ ᎾᎥᎢ Edward . Curtis, 1922]]  ᎠᏂᏴᏫ ᎤᎭ ᏦᎢ ᏄᏓᎴᎿᎥ ᎢᏗᎦᎪᏘ ᎤᏍᏗᏰᎬ:
 * [[Lanugo]], ᎯᎠ ᎣᏌᏂ ᎤᏍᏗᏰᎬ Ꮎ ᏗᎫᏝᎢ ᎾᎥᏂᎨᏍᏗ ᎯᎠ ᏂᎦᏛ ᎠᏰᎸ [[fetus]]es
@@ -46,17 +40,16 @@ http://www.anthro.utah.edu/~rogers/pubs/Pagel-BL-270-S117.pdf
 === Aging ===
 ᎠᎦᏴᎳᎯᎨᏍᏙᏗ ᏴᏫ ᏫᏚᏳᎪᏛ ᎤᏙᎷᏬᏗ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎢᎬᏂᏏᏍᎩ ᎯᎠ [[pigment|ᏗᎧᏃᏗ]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᎤᎴᎾᎯᏛ ᎠᎴ ᎯᎠ ᎤᏍᏗᏰᎬ ᏗᏙᎳᎩ colorless. ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᎠᎦᏎᏍᏔᏅ ᎾᏍᏋ ᎨᎦᏓᏅᏖᏗ ᏄᎶᏒᏍᏛᎾ aging. ᎯᎠ ᎢᏳᏕᏘᏴᏓ ᎾᎾᎢ ᎦᏙ ᎤᏍᏗ ᎪᎯ ᏄᎵᏍᏔᏅ varies ᏂᏛᎴᏅᏓ ᎠᏏᏴᏫ ᎠᏏᏴᏫ, ᎠᎴ ᎭᏫᎾᏗᏢ ᏂᎦᎥ ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ 75 ᏧᏕᏘᏴᏓ ᎠᎴ ᎠᎦᏴᎳᎯᎨᏍᏙᏗ ᎤᎭ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ, ᎠᎴ ᎭᏫᎾᏗᏢ ᏂᎦᎥ ᎠᏂᏍᎦᏯ ᏫᏚᏳᎪᏛ ᏗᏙᎳᎩ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎾᎾᎢ ᎠᏲᎵᎨ ᎤᎧᏁᎳ ᎬᎾᏬᏍᎬ ᎠᏂᎨᏴ. 
 
-ᎾᏍᎩ ᎢᏳᏗᎾ ᎾᏍᏋ ᎪᏪᎶᏗ ᏱᏂᎬᏛᎾ, Ꮎ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎭᏫᎾᏗᏢ ᎤᏩᏌᏊ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏙᎯᏳᎯᏯ ᎤᏍᎪᎸ ᏌᎪᏂᎨ - ᎯᎠ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᏄᎵᏍᏔᏅ ᎯᎠ ᏧᏓᎴᎾᎢ ᎠᏰᎵ ᎯᎠ ᎤᎳᏏᎩ ᎠᎴ ᎤᏁᎬ/ᎤᏓᏂᎳᎯᎨ ᎤᏍᏗᏰᎬ ᏑᏓᎴᎩ overall 'ᎤᏍᎪᎸ ᏌᎪᏂᎨ' ᎦᎾᏄᎪᏨᎢ ᎯᎠ ᎾᎿ. ᏥᏄᏍᏗ ᏯᏛᎿ, ᏴᏫ ᎠᏂᎩᏍᏗᏍᎬ ᎠᏥᏄᏉᏫᏍᎬ ᎬᏙᏗ ᎤᏙᎯᏳ ᎤᏔᏂᏗ ᎦᏙᎯ [[blond|ᎠᏍᎪᎸᎬ]] ᎤᏍᏗᏰᎬ ᎤᏠᏱᎭ ᎤᏙᎷᏬᏗ ᎤᏁᎬ ᎤᏍᏗᏰᎬ ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎯᎳᎪ ᎢᏳ aging. ᎩᎦᎨ ᎤᏍᏗᏰᎬ ᎤᏠᏱᎭ doesn't ᎠᎦᏔᎲᏍᏗ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎬᏙᏗ ᎢᏳᏕᏘᏴᏓ; ᎤᏟ ᎬᏰᎸᏗ ᎾᏍᎩ ᏗᏙᎳᎩ ᏃᏯᎭ ᏗᎧᏃᏗ ᎠᎴ afterward ᎠᎦᏔᎲᎠ ᎤᏁᎬ. ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ, ᎯᎠ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎠᎴ ᎤᏁᎬ ᎦᎾᏄᎪᏨᎢ ᎠᏂᏏᏴᏫᎭ ᎤᏍᏗᏰᎬ [[fiber|ᎠᏍᏗ ᎪᏢᏔᏅ]]ᎨᏒᎢ ᏄᎵᏍᏔᏅ ᎠᏨᏍᏛ ᏗᏗᎦᎴᏴ ᏂᏛᎴᏅᏓ ᎤᏃᎴ [[bubble|ᎥᏝ ᎪᎱᏍᏗ]]ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏰᎵ [[medula]] ᎯᎠ ᎤᏍᏗᏰᎬ ᎠᏍᏗ ᎪᏢᏔᏅ. ᎢᎦᏛ ᎢᎦᎢ ᎢᎦᏘ [[scalp|ᎠᏥᏍᏓᏁᎦᎸᏓ]] [[hair loss|ᎤᏍᏗᏰᎬ ᎤᏲᎱᏎᎸ]] ᎠᎴ thinning ᏂᎦᎥᏊ accompanies aging ᎭᏫᎾᏗᏢ ᎢᏧᎳ ᎠᏍᎦᏯ ᎠᎴ ᎠᎨᏴ, ᎠᎴ ᎾᏍᎩ ᎤᏤᎵ ᎠᎦᏎᏍᏔᏅ Ꮎ ᎠᏰᎵ ᎢᏴ ᏂᎦᏛ ᎠᏂᏍᎦᏯ ᎠᎴ ᎦᎸᏉᏔᏅ ᎾᎥᎢ [[male pattern baldness|ᎠᏍᎦᏯ ᏗᏟᎶᏍᏙᏗ baldness]] ᎾᎥᎢ ᎯᎠ ᎢᏳᏩᎪᏗ ᎤᏅᏌ ᎠᎴ 50<ref name="halfofmen">[http://nl.newsbank.com/nl-search/we/Archives?s_site=ozarksnow&f_site=ozarksnow&f_sitename=Springfield+News-Leader+%28MO%29&p_theme=gannett&p_product=SNLB&p_action=search&p_field_base-0=&p_text_base-0=baldness&Search=Search&p_perpage=10&p_maxdocs=200&p_queryname=700&s_search_type=keyword&p_sort=_rank_%3AD&p_field_date-0=YMD_date&p_params_date-0=date%3AB%2CE&p_text_date-0= "Uncovering the bald truth about hair loss."] ''Springfield ᏗᏤᎢ-ᏗᏓᏘᏁᎯ'', ᎠᎾᏍᎬᏘ 10, 2005.  "ᎠᏰᎵ ᎢᏴ ᎠᏂᏍᎦᏯ" ᎠᎦᏎᏍᏙᏗ ᎨᏒᎢ ᎪᏢᏅᎯ ᎾᎥᎢ ᎯᎠ ᏴᏩᏁᎬ ᎢᎬᎢ ᎤᏔᎾ ᏧᎾᏕᎶᏆᏍᏗ ᎠᏰᎵ ᎠᎴ ᎧᎵ ᏗᎪᎥᎯ ᎠᎦᏎᏍᏗ ᎤᏂᎪᏗᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎹᏰᏟ ᎾᏂᎥ ᏴᏫ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎪᎯ ᎢᏳᏗᎾ ᏄᏍᏛ ᏨᏓᏓ ᏄᏍᏛ ᏨᏓᏓᎧᏁᏗ ᎤᏂᎪᏗᏗ ᎭᏫᎾᏗᏢ ᏐᎢ ᎾᏂᎥ ᏴᏫ.</ref>. ᎯᎠ ᏫᏚᏳᎪᏛ ᏫᏚᏳᎪᏛ [[baldness]] ᎨᏒᎢ ᏫᏚᏳᎪᏛ shared ᎾᎥᎢ ᏎᏍᏗ ᏐᎢ [[primate|ᎠᎵᏣᏙᎲᏍᎩ]] [[species|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]], ᎠᎴ ᎨᏒᎢ ᏁᎵᏒ ᎤᎭ evolutionary ᎠᎲᏏᏓᏍᏗ.
+ᎾᏍᎩ ᎢᏳᏗᎾ ᎾᏍᏋ ᎪᏪᎶᏗ ᏱᏂᎬᏛᎾ, Ꮎ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎭᏫᎾᏗᏢ ᎤᏩᏌᏊ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏙᎯᏳᎯᏯ ᎤᏍᎪᎸ ᏌᎪᏂᎨ - ᎯᎠ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᏄᎵᏍᏔᏅ ᎯᎠ ᏧᏓᎴᎾᎢ ᎠᏰᎵ ᎯᎠ ᎤᎳᏏᎩ ᎠᎴ ᎤᏁᎬ/ᎤᏓᏂᎳᎯᎨ ᎤᏍᏗᏰᎬ ᏑᏓᎴᎩ overall 'ᎤᏍᎪᎸ ᏌᎪᏂᎨ' ᎦᎾᏄᎪᏨᎢ ᎯᎠ ᎾᎿ. ᏥᏄᏍᏗ ᏯᏛᎿ, ᏴᏫ ᎠᏂᎩᏍᏗᏍᎬ ᎠᏥᏄᏉᏫᏍᎬ ᎬᏙᏗ ᎤᏙᎯᏳ ᎤᏔᏂᏗ ᎦᏙᎯ [[blond|ᎠᏍᎪᎸᎬ]] ᎤᏍᏗᏰᎬ ᎤᏠᏱᎭ ᎤᏙᎷᏬᏗ ᎤᏁᎬ ᎤᏍᏗᏰᎬ ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎯᎳᎪ ᎢᏳ aging. ᎩᎦᎨ ᎤᏍᏗᏰᎬ ᎤᏠᏱᎭ doesn't ᎠᎦᏔᎲᏍᏗ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎬᏙᏗ ᎢᏳᏕᏘᏴᏓ; ᎤᏟ ᎬᏰᎸᏗ ᎾᏍᎩ ᏗᏙᎳᎩ ᏃᏯᎭ ᏗᎧᏃᏗ ᎠᎴ afterward ᎠᎦᏔᎲᎠ ᎤᏁᎬ. ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ, ᎯᎠ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎠᎴ ᎤᏁᎬ ᎦᎾᏄᎪᏨᎢ ᎠᏂᏏᏴᏫᎭ ᎤᏍᏗᏰᎬ [[fiber|ᎠᏍᏗ ᎪᏢᏔᏅ]] ᎨᏒᎢ ᏄᎵᏍᏔᏅ ᎠᏨᏍᏛ ᏗᏗᎦᎴᏴ ᏂᏛᎴᏅᏓ ᎤᏃᎴ [[bubble|ᎥᏝ ᎪᎱᏍᏗ]]ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏰᎵ [[medula]] ᎯᎠ ᎤᏍᏗᏰᎬ ᎠᏍᏗ ᎪᏢᏔᏅ. ᎢᎦᏛ ᎢᎦᎢ ᎢᎦᏘ [[scalp|ᎠᏥᏍᏓᏁᎦᎸᏓ]] [[hair loss|ᎤᏍᏗᏰᎬ ᎤᏲᎱᏎᎸ]] ᎠᎴ thinning ᏂᎦᎥᏊ accompanies aging ᎭᏫᎾᏗᏢ ᎢᏧᎳ ᎠᏍᎦᏯ ᎠᎴ ᎠᎨᏴ, ᎠᎴ ᎾᏍᎩ ᎤᏤᎵ ᎠᎦᏎᏍᏔᏅ Ꮎ ᎠᏰᎵ ᎢᏴ ᏂᎦᏛ ᎠᏂᏍᎦᏯ ᎠᎴ ᎦᎸᏉᏔᏅ ᎾᎥᎢ [[male pattern baldness|ᎠᏍᎦᏯ ᏗᏟᎶᏍᏙᏗ baldness]] ᎾᎥᎢ ᎯᎠ ᎢᏳᏩᎪᏗ ᎤᏅᏌ ᎠᎴ 50<ref name="halfofmen">[http://nl.newsbank.com/nl-search/we/Archives?s_site=ozarksnow&f_site=ozarksnow&f_sitename=Springfield+News-Leader+%28MO%29&p_theme=gannett&p_product=SNLB&p_action=search&p_field_base-0=&p_text_base-0=baldness&Search=Search&p_perpage=10&p_maxdocs=200&p_queryname=700&s_search_type=keyword&p_sort=_rank_%3AD&p_field_date-0=YMD_date&p_params_date-0=date%3AB%2CE&p_text_date-0= "Uncovering the bald truth about hair loss."] ''Springfield ᏗᏤᎢ-ᏗᏓᏘᏁᎯ'', ᎠᎾᏍᎬᏘ 10, 2005.  "ᎠᏰᎵ ᎢᏴ ᎠᏂᏍᎦᏯ" ᎠᎦᏎᏍᏙᏗ ᎨᏒᎢ ᎪᏢᏅᎯ ᎾᎥᎢ ᎯᎠ ᏴᏩᏁᎬ ᎢᎬᎢ ᎤᏔᎾ ᏧᎾᏕᎶᏆᏍᏗ ᎠᏰᎵ ᎠᎴ ᎧᎵ ᏗᎪᎥᎯ ᎠᎦᏎᏍᏗ ᎤᏂᎪᏗᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎹᏰᏟ ᎾᏂᎥ ᏴᏫ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎪᎯ ᎢᏳᏗᎾ ᏄᏍᏛ ᏨᏓᏓ ᏄᏍᏛ ᏨᏓᏓᎧᏁᏗ ᎤᏂᎪᏗᏗ ᎭᏫᎾᏗᏢ ᏐᎢ ᎾᏂᎥ ᏴᏫ.</ref>. ᎯᎠ ᏫᏚᏳᎪᏛ ᏫᏚᏳᎪᏛ [[baldness]] ᎨᏒᎢ ᏫᏚᏳᎪᏛ shared ᎾᎥᎢ ᏎᏍᏗ ᏐᎢ [[primate|ᎠᎵᏣᏙᎲᏍᎩ]] [[species|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]], ᎠᎴ ᎨᏒᎢ ᏁᎵᏒ ᎤᎭ evolutionary ᎠᎲᏏᏓᏍᏗ.
 
 ᎾᏍᎩ ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ ᎠᏆᏤᎵ ᎤᏛᏅᎩ Ꮎ ᎤᏍᏗᏰᎬ ᎠᎴ ᏴᎩ ᏫᎵ ᎬᎵᏱᎵᏒ ᎠᏛᏏᏒ ᎾᏍᎩᎾᎢ ᎯᎸᏍᎩ ᎯᎸᏍᎩ ᎢᎦ ᎤᎶᏐᏅ ᎠᏲᎱᎯᏍᏗ. ᎪᎯ ᎨᏒᎢ [[myth|ᎢᏰᎵᏍᏗᎢ]]; ᎯᎠ ᎦᎾᏄᎪᏨᎢ ᎤᏛᏏᏗᏒ ᎨᏒᎢ ᎤᏙᎯᏳᎯᏯ ᎢᎬᏂᏌᏅᎯ ᎾᎥᎢ ᎯᎠ ᏗᎦᏘᎸᏍᏗ ᎦᏁᎦ ᏥᏄᏍᏗ ᎯᎠ ᏓᎦᏚᏫᏍᏗᏍᎬ ᏂᎦᏛ [[dehydrate]], ᎠᏃᏢᏍᎬ ᏴᎩ ᎠᎴ ᎤᏍᏗᏰᎬ ᎤᏟ ᎢᎦᎢ ᏧᏓᏃᏣᎵ.
 
 === Pathological ᏓᏓᏛᎾᏍᏗᏍᎬ ᎾᎿ ᎤᏍᏗᏰᎬ ===
 ᏄᏬᏗ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ [[cancer|ᎠᏓᏰᏍᎩ]] [[chemotherapy]] ᎢᏳᏓᎵᎭ ᏂᎬᏂᏏᏍᎬ ᎢᎬᏱ ᎨᏰᎯ ᎤᏲᎱᏎᎸ ᎤᏍᏗᏰᎬ, noticeable ᎾᎿ ᎯᎠ ᎠᏍᎪᎵ ᎠᎴ [[eyebrow]], ᎢᎬᏂᏏᏍᎩ ᎤᏅᏌ ᎠᏓᎯᏍᏗ ᏂᎦᏛ ᎤᎵᏍᏓᎯᎨ dividing ᎦᏁᎸ, ᎾᏍᎩ ᏂᎨᏒᎾ ᎣᏍᏛ ᎯᎠ cancerous ᎠᏂᏏᏴᏫᎭ. ᏐᎢ [[disease|ᎥᏳᎩ]] ᎠᎴ [[Physical trauma|trauma]]ᏰᎵᏇ ᏂᎬᏂᏏᏍᎬ ᎢᎬᏱ ᎨᏰᎯ ᎠᎴ ᏂᎪᎯᎸ ᎤᏲᎱᏎᎸ ᎤᏍᏗᏰᎬ, ᎢᏳᏍᏗᏊ ᏂᎦᎥᏊ ᎠᎴ ᎭᏫᎾᏗᏢ patches.
 
-ᎯᎠ ᎤᏍᏗᏰᎬ ᎤᏒᏙᏂ ᎠᎾᏍᎬᏘ ᎾᏍᎩ ᎾᏍᏇ ᎠᏓᎾᏅ ᎤᏙᎯᏳ [[poison|ᎠᏓᎯᎯ]]ᎾᏍᎩᎾᎢ ᏧᏕᏘᏴᏓ, ᎢᏧᎳᎭ ᎯᏍᎩ, ᎤᎶᏐᏅ ᎠᏲᎱᎯᏍᏗ. ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎸᏛ ᎧᏁᏌᎢ Col. [[Lafayette Baker]], ᎦᎪ ᎤᏲᎱᏒ [[July 3|ᎫᏰᏉᏂ 3]], 1868, ᎬᏙᏗ [[atomic|ᎠᏍᏓᏩᏛᏍᏗ]] [[absorption|ᎤᎾᏓᏟᏌᏅ]] [[spectrophotometer]] ᎤᏓᏎᎮᎸᎩ ᎯᎠ ᎠᏍᎦᏯ ᏥᏄᏍᏛᎩ ᎠᏥᎸᎩ ᎾᎥᎢ ᎤᏁᎬ [[arsenic|ᎠᏍᎩᎾᏗᏍᏗ]]. ᎯᎠ ᎠᎴᏂᏍᎬ ᎠᏓᎳᏩᏎᏗ ᏥᏄᏍᏛᎩ [[Wallace Pollock|Wally Pollack]], Baker ᎤᏤᎵ ᏗᎾᏓᏅᏟ-ᎭᏫᎾᏗᏢ-ᏗᎧᎿᏩᏛᏍᏗ. ᎧᎵ ᏗᏙᎳᎩ ᏗᏕᎶᏆᏍᎩ. ᎠᏨᏍᏛ . Neff, Pollack ᎠᏰᎲ ᎦᏅᎾᏩ Baker ᎤᏤᎵ [[beer|ᎠᏬᎩᎸᏍᎩ]] ᎬᏙᏗ ᎾᏍᎩ ᎦᏬᎯᎸᏙᏗ ᎠᎴᏫᏍᏙᏗ ᎢᏯᏅᏓ, ᎠᎴ ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎣᏂᏯᎨᏍᏙᏗ ᎢᏯᏔᏬᏍᏔᏅ ᏕᎬᏔᏛ ᎠᏍᎩᎾᏗᏍᏗ ᎤᏓᏎᎮᎸᎩ ᎦᎸᎳᏗᏢ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏲᎱᏒ ᎠᏍᎦᏯ ᎤᏤᎵ ᎤᏍᏗᏰᎬ. ᎠᎨᏴ. Baker ᎤᏤᎵ [[diary|ᎢᏳ ᎢᎪᎯ]] ᎤᏁᎵᏒᎯ ᎦᎫᏍᏛᏗ Ꮎ ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎤᏙᎯᏳᎢ ᎠᏍᎩᎾᏗᏍᏗ, ᏥᏄᏍᏗ ᎾᏍᎩ ᎠᎨᏴ ᎪᏪᎵᎠ ᎯᎳᎪ ᎾᏍᎩ ᎠᎨᏴ ᎠᏩᏛᏗ ᎢᎦᏛ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎾᏍᎩ ᎭᏫᎾᏗᏢ ᎾᏍᎩ ᎠᎨᏴ ᏗᎾᏓᏅᏟ ᎤᏤᎵ suitcoat ᏌᏊ ᎢᎦ.
+ᎯᎠ ᎤᏍᏗᏰᎬ ᎤᏒᏙᏂ ᎠᎾᏍᎬᏘ ᎾᏍᎩ ᎾᏍᏇ ᎠᏓᎾᏅ ᎤᏙᎯᏳ [[poison|ᎠᏓᎯᎯ]]ᎾᏍᎩᎾᎢ ᏧᏕᏘᏴᏓ, ᎢᏧᎳᎭ ᎯᏍᎩ, ᎤᎶᏐᏅ ᎠᏲᎱᎯᏍᏗ. ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎸᏛ ᎧᏁᏌᎢ Col. [[Lafayette Baker]], ᎦᎪ ᎤᏲᎱᏒ [[July|ᎫᏰᏉᏂ]] 3, 1868, ᎬᏙᏗ [[atomic|ᎠᏍᏓᏩᏛᏍᏗ]] [[absorption|ᎤᎾᏓᏟᏌᏅ]] [[spectrophotometer]] ᎤᏓᏎᎮᎸᎩ ᎯᎠ ᎠᏍᎦᏯ ᏥᏄᏍᏛᎩ ᎠᏥᎸᎩ ᎾᎥᎢ ᎤᏁᎬ [[arsenic|ᎠᏍᎩᎾᏗᏍᏗ]]. ᎯᎠ ᎠᎴᏂᏍᎬ ᎠᏓᎳᏩᏎᏗ ᏥᏄᏍᏛᎩ [[Wallace Pollock|Wally Pollack]], Baker ᎤᏤᎵ ᏗᎾᏓᏅᏟ-ᎭᏫᎾᏗᏢ-ᏗᎧᎿᏩᏛᏍᏗ. ᎧᎵ ᏗᏙᎳᎩ ᏗᏕᎶᏆᏍᎩ. ᎠᏨᏍᏛ . Neff, Pollack ᎠᏰᎲ ᎦᏅᎾᏩ Baker ᎤᏤᎵ [[beer|ᎠᏬᎩᎸᏍᎩ]] ᎬᏙᏗ ᎾᏍᎩ ᎦᏬᎯᎸᏙᏗ ᎠᎴᏫᏍᏙᏗ ᎢᏯᏅᏓ, ᎠᎴ ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎣᏂᏯᎨᏍᏙᏗ ᎢᏯᏔᏬᏍᏔᏅ ᏕᎬᏔᏛ ᎠᏍᎩᎾᏗᏍᏗ ᎤᏓᏎᎮᎸᎩ ᎦᎸᎳᏗᏢ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏲᎱᏒ ᎠᏍᎦᏯ ᎤᏤᎵ ᎤᏍᏗᏰᎬ. ᎠᎨᏴ. Baker ᎤᏤᎵ [[diary|ᎢᏳ ᎢᎪᎯ]] ᎤᏁᎵᏒᎯ ᎦᎫᏍᏛᏗ Ꮎ ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎤᏙᎯᏳᎢ ᎠᏍᎩᎾᏗᏍᏗ, ᏥᏄᏍᏗ ᎾᏍᎩ ᎠᎨᏴ ᎪᏪᎵᎠ ᎯᎳᎪ ᎾᏍᎩ ᎠᎨᏴ ᎠᏩᏛᏗ ᎢᎦᏛ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎾᏍᎩ ᎭᏫᎾᏗᏢ ᎾᏍᎩ ᎠᎨᏴ ᏗᎾᏓᏅᏟ ᎤᏤᎵ suitcoat ᏌᏊ ᎢᎦ.
 
 === ᎾᏯᏛᎲᎢ ===
-
 ᎧᎵ ᏗᏙᎳᎩ ''ᎯᎠ [[Physics|ᎢᏳᏍᏗ ᏯᏛᎿ]] Factbook'', ᎯᎠ [[diameter|ᎠᏰᎵ ᎠᏍᏓᏅᏅ]] ᏴᏫ ᎤᏍᏗᏰᎬ ᎠᏍᏓᏅᏅ ᏂᏛᎴᏅᏓ 17 181 [[µm]] (millionths [[meter|ᎠᏎᎯᎯ]]), ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ 0.017 mm 0.181 mm.[http://hypertextbook.com/facts/1999/BrianLey.shtml]
 g ᎤᏍᏗᏰᎬ]]
 
@@ -67,25 +60,23 @@ g ᎤᏍᏗᏰᎬ]]
 
 ᎭᏫᎾᏗᏢ [[ancient Egypt|ᎯᎸᎯᏳᎢ Egypt]] ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ ᏥᏄᏍᏛᎩ ᎢᏳᏓᎵᎭ shaved, ᎾᏍᎩ ᎨᏒᎢ ᏧᏠᎯᏍᏗ ᏗᏂᏲᎵ, ᏥᏄᏍᏗ ᎦᏅᎯᏓ ᎤᏍᏗᏰᎬ ᏥᏄᏍᏛᎩ ᎤᏦᎠᏎᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎦᎾᏭ. ᏗᏂᏲᎵ ᎨᏒᎩ ᎢᏳᏓᎵᎭ ᎠᎦᏍᎦᏂ ᎬᏙᏗ ᎦᏅᎯᏓ ᏓᎦᏏ ᎤᏍᏗᏰᎬ ᎠᏛᏏᏒ ᏂᏛᎴᏅᏓ ᏌᏊ ᎢᎦᏛ ᎤᎾᏤᎵ ᏗᏂᏍᎪᎵ, ᎯᎠ ᎠᎵᏏᎾᎯᏍᏙᏗ ᎠᎴᏂᏙᎲ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏧᏣᏔᏊ Ꮎ ᎾᏍᎩ ᎠᏓᏁᏟᏴᏍᏗ ᎯᎠ ᏰᎵᏊ ᏗᏙᎳᎩ ᎭᏫᎾᏗᏢ Egyptian ᏗᏟᎶᏍᏙᏗ ᎾᏍᎩᎾᎢ ᏓᎾᏛᏁᎵᏍᎬ ᎢᏯᏓᏛᏁᎸ ᏗᏂᏲᎵ ᏥᏄᏍᏗ ᏂᎪᎯᎸᎢ ᏙᏄᏭᎢ ᎪᎯ "[[sidelock]]". ᎤᎪᏗᏗ ᎤᏔᎾ ᎠᏂᏍᎦᏯ ᎠᎴ ᎠᏂᎨᏴ ᎠᏍᏆᏂᎪᏔᏅ ᎤᎾᏤᎵ ᏗᏂᏍᎪᎵ ᏂᎪᎯᎸᎢ shaved ᎾᏍᎩᎾᎢ ᏄᏦᏎᏛᎾ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎦᎾᏭ ᎠᎴ ᎠᏍᏆᏂᎪᏙᏗ ᎯᎠ ᎠᏍᎪᎵ ᎠᏎᏊᎢ [[lice|ᏘᎾ]], ᎾᎯᏳᎢ ᏙᏄᏭᎢ [[wig|ᎫᏢᎥᏍᎬ]] ᎭᏫᎾᏗᏢ ᏴᏫ ᎤᏁᏓᏍᏗ. 
 
-ᎭᏫᎾᏗᏢ ᎯᎸᎯᏳᎢ [[Greece|ᎪᎢ]] ᎠᎴ ᎯᎸᎯᏳᎢ [[Rome|ᎶᎻ]] ᎠᏂᏍᎦᏯ ᎠᎴ ᎠᏂᎨᏴ ᎦᏳᎳ differed ᏂᏛᎴᏅᏓ ᎠᏂᏏᏴᏫᎭ ᏐᎢ ᏗᎬᏩᎶᏒ ᎤᎾᏤᎵ haircuts. ᎯᎠ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ ᎠᏂᎨᏴ ᏥᏄᏍᏛᎩ ᎦᏅᎯᏓ ᎠᎴ ᎤᎾᏌᏁᏒ ᎦᏐᎯ ᎾᎾᎯ [[chignon|ᎫᏢᎥᏍᎬ]]. ᎤᎪᏗᏗ ᏄᎵᏂᎬᎬ ᎤᎾᏤᎵ ᎤᏍᏗᏰᎬ ᎩᎦᎨ ᎬᏙᏗ [[henna]] ᎠᎴ sprinkled ᎾᏍᎩ ᎬᏙᏗ [[gold|ᎠᏕᎸ ᏓᎶᏂᎨ]] ᏓᏪᎳᎩᏍᎩ, ᎢᏳᏓᎵᎭ ᎠᏣᏅᏗ ᎾᏍᎩ ᎬᏙᏗ ᎢᏤᎢ ᎠᏂᏥᎸᏍᎩ. Men’s ᎤᏍᏗᏰᎬ ᏥᏄᏍᏛᎩ ᏍᏆᎳᎢ ᎠᎴ ᎢᏧᎳᎭ ᎢᏳᏓᎵᎭᏊ shaved. ᎭᏫᎾᏗᏢ Rome [[hairdressing]] ᎠᏓᏁᏟᏴᏍᏗ ᎢᏳᏊ ᎤᏟ ᎢᎦᎢ ᎤᏂᎸᏉᏗ ᎠᎴ ᎯᎠ [[upper class|ᎦᎸᎳᏗᏢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]]es ᎨᏒᎩ ᎤᏁᏙᎸ ᎾᎥᎢ [[slavery|ᎠᏥᎾᏝᎢ]] ᎠᎴ ᎤᏓᏩᏛᎯᏙᎸᎩ ᏴᏫ ᎤᏁᏓᏍᏗ [[barber|ᏗᏓᏍᏙᏰᏍᎩ]] ᏧᏂᎸᏫᏍᏓᏁᏗ. 
+ᎭᏫᎾᏗᏢ ᎯᎸᎯᏳᎢ [[Greece|ᎪᎢ]] ᎠᎴ ᎯᎸᎯᏳᎢ [[Rome|ᎶᎻ]] ᎠᏂᏍᎦᏯ ᎠᎴ ᎠᏂᎨᏴ ᎦᏳᎳ differed ᏂᏛᎴᏅᏓ ᎠᏂᏏᏴᏫᎭ ᏐᎢ ᏗᎬᏩᎶᏒ ᎤᎾᏤᎵ haircuts. ᎯᎠ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ ᎠᏂᎨᏴ ᏥᏄᏍᏛᎩ ᎦᏅᎯᏓ ᎠᎴ ᎤᎾᏌᏁᏒ ᎦᏐᎯ ᎾᎾᎯ [[chignon|ᎫᏢᎥᏍᎬ]]. ᎤᎪᏗᏗ ᏄᎵᏂᎬᎬ ᎤᎾᏤᎵ ᎤᏍᏗᏰᎬ ᎩᎦᎨ ᎬᏙᏗ [[henna]] ᎠᎴ sprinkled ᎾᏍᎩ ᎬᏙᏗ [[gold|ᎠᏕᎸ ᏓᎶᏂᎨ]] ᏓᏪᎳᎩᏍᎩ, ᎢᏳᏓᎵᎭ ᎠᏣᏅᏗ ᎾᏍᎩ ᎬᏙᏗ ᎢᏤᎢ ᎠᏂᏥᎸᏍᎩ. Men’s ᎤᏍᏗᏰᎬ ᏥᏄᏍᏛᎩ ᏍᏆᎳᎢ ᎠᎴ ᎢᏧᎳᎭ ᎢᏳᏓᎵᎭᏊ shaved. ᎭᏫᎾᏗᏢ [[Rome|ᎶᎻ]] [[hairdressing]] ᎠᏓᏁᏟᏴᏍᏗ ᎢᏳᏊ ᎤᏟ ᎢᎦᎢ ᎤᏂᎸᏉᏗ ᎠᎴ ᎯᎠ [[upper class|ᎦᎸᎳᏗᏢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]]es ᎨᏒᎩ ᎤᏁᏙᎸ ᎾᎥᎢ [[slavery|ᎠᏥᎾᏝᎢ]] ᎠᎴ ᎤᏓᏩᏛᎯᏙᎸᎩ ᏴᏫ ᎤᏁᏓᏍᏗ [[barber|ᏗᏓᏍᏙᏰᏍᎩ]] ᏧᏂᎸᏫᏍᏓᏁᏗ. 
+
 [[Image:Maasai_tribe.jpg|left|thumb|170px|Maasai ᏓᏄᏩ ᎠᎾᎵᎯ ᎬᏙᏗ ᎤᎾᏤᎵ ᎧᏃᎮᎸᎯ ᎤᏍᏗᏰᎬ styling]]
-
-<!-- The tradition of women having long hair and men having short hair is usually traced back to times of war, where having long hair meant that one was weak and was to be spared. Generally men, being viewed as strong and dominant, would cut their hair short, while women who were considered inferior and weaker, would keep their hair long so that they would be spared. -->
-
 ᎯᎠ ᎧᏃᎮᎸᎯ ᎤᏍᏗᏰᎬ styling ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎢᎦᏛᎭ [[Africa]] ᎾᏍᎩ ᎾᏍᏇ ᎠᏓᏁᏗ ᎤᏍᏆᏂᎪᏗ ᏱᏓᏟᎶᏍᏔᏅ ᎯᎳᎪ ᏴᏫ dealt ᎬᏙᏗ ᎤᎾᏤᎵ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ. ᎯᎠ [[Maasai]] [[warrior|ᏓᏄᏩ ᎠᎾᎵᎯ]]ᏗᎧᏁᎸ ᎯᎠ ᎢᎬᏱᏗᏢ ᎤᏍᏗᏰᎬ ᎾᎾᎯ ᎾᎿ ᏕᎨᏒ ᎤᏍᏗ [[braid|ᎤᏇᎷᎬ]]ᎾᎯᏳᎢ ᎯᎠ ᎦᏐᎯ ᎤᏍᏗᏰᎬ ᏥᏄᏍᏛᎩ ᎠᎾᏓᏁᎲ ᎠᏛᏍᎬ ᎤᏓᏠᏍᏛ ᏂᎦᏅᎯᏒ. ᎠᏂᎨᏴ ᎠᎴ ᎬᏙᏗ-ᏓᏄᏩ ᎠᎾᎵᎯ, ᏱᏂᎬᏛᎾ, shaved ᎤᎾᏤᎵ ᏗᏂᏍᎪᎵ. ᎤᎪᏗᏗ ᎠᏂᎳᏍᏓᎸ ᏄᎵᏂᎬᎬ ᎯᎠ ᎤᏍᏗᏰᎬ ᎬᏙᏗ ᎩᎦᎨ ᎡᎶᎯ ᎠᎴ [[grease|ᎪᎢ]]; ᎢᎦᏛ stiffened ᎾᏍᎩ ᎬᏙᏗ [[animal|ᎦᏂᏝᎢ]] [[dung|ᎦᎳᏅᎯ]]. 
 
 ᎠᎵᎪᏁᏗ ᎠᎾᏓᏟᏏᏍᎬ ᎠᎴ cultural ᏄᏍᏗᏓᏅ ᎤᎭ ᏂᎪᎯᎸᎢ influenced ᎤᏂᎸᏉᏗ ᎤᏍᏗᏰᎬ ᏧᎾᏣᏅᏙᏗ. ᏂᏛᎴᏅᏓ ᎯᎠ [[17th Century|17th ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ]] ᎾᎾᎯ ᎯᎠ ᎢᎬᏱ [[19th Century|19th ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ]] ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎯᎠ ᎢᏚᏳᎪᏛ ᎾᏍᎩᎾᎢ ᎠᏂᏍᎦᏯ ᎤᎭ ᎦᏅᎯᏓ ᎤᏍᏗᏰᎬ ᎢᏳᏓᎵᎭ ᏗᎧᏁᎸ-ᎦᏐᎯ ᎾᎾᎯ [[ponytail]]. ᏗᎦᏃᏣᎵ ᎦᏅᎯᏓ-haired ᎠᏂᏍᎦᏯ ᎠᏠᏯᏍᏛ [[Oliver Cromwell]], [[George Washington]] ᎠᎴ ᎾᎯᏳᎨᏒ ᎤᏤᎵ ᎠᏲᎵᎨ ᏧᏕᏘᏴᏓ [[Napoleon Bonaparte]] ᎠᏰᎲ ᎦᏅᎯᏓ ᎠᎴ flamboyant ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ. ᎤᏓᎷᎸ [[World War I|ᎡᎶᎯ ᏓᏄᏩ ᎠᏯ]] ᎠᏂᏍᎦᏯ ᏂᎦᎥᏊ ᎠᏰᎲ ᎦᏅᎯᏓᎨ ᎤᏍᏗᏰᎬ ᎠᎴ [[beard|ᎠᎭᏄᎸᏒ]]. ᎯᎠ [[trench warfare|ᎦᏓᎷᎦᏅ ᏓᎾᏩᏄᏁᎯ]] ᎠᏰᎵ 1914 ᎠᎴ 1918 ᏗᏄᏪᏍᏗ ᎠᏂᏍᎦᏯ [[lice|ᏘᎾ]] ᎠᎴ [[flea|ᏣᏑᎦ]] [[infestation|ᎥᏳᎩ]], ᎦᏙ ᎤᏍᏗ prompted ᎯᎠ ᎠᏓᏅᏍᏗ ᎠᏰᎳᏍᏗ ᎤᏍᏗᏰᎬ ᏍᏆᎳᎢ, ᎠᏃᏢᏍᎬ ᎢᏚᏳᎪᏛ Ꮎ ᎤᎭ persisted.
 
-ᏱᏂᎬᏛᎾ ᎾᏍᎩ ᎤᎭ ᎾᏍᎩ ᎾᏍᏇ ᏭᏪᏙᎢ ᎠᏓᏌᎳᏙᏗ Ꮎ ᏍᏆᎳᎢ ᎤᏍᏗᏰᎬ ᎾᎿ ᎠᏂᏍᎦᏯ ᎤᎭ ᏭᏪᏙᎢ ᎦᏌᏙᏯᏍᏗ ᏥᏄᏍᏗ ᎤᏅᏔᏂᏓᏍᏗ ᎠᎨᏔᏗᏍᏗ, ᏥᏄᏍᏗ ᎤᎾᏓᏎᎮᎸᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏂᏯᏫᏍᎩ ᎠᎴ ᏗᏓᏂᏱᏍᎩ ᎠᎴ ᏐᎢ ᎠᏂᏌᏙᏯᏍᎩ Ꮎ ᎧᏁᏍᏗ ᎢᏯᏛᏁᏗ ᎪᎯᏳᎯ ᎠᎴ ᏓᏕᏲᎲᏍᎬ. ᏗᎦᏟᏌᏅᎯ, ᏗᎨᏥᎾᏝᎢ ᎠᎴ ᎤᏄᎸᎲᏍᎩ armies ᎨᏒᎩ ᎢᏳᏓᎵᎭ ᎧᏁᏨ ᎢᏯᏛᏁᏗ ᎠᎵᏍᏙᏯᏗ ᎤᎾᏤᎵ ᏗᏂᏍᎪᎵ, ᎭᏫᎾᏗᏢ ᎢᏧᎳ ᎬᏂᎨᏒ ᏄᏍᏛᎢ-[[medieval|ᎢᏳᏕᏘᏴᏓ]] [[Europe|ᏳᎳᏛ]] ᎠᎴ [[China|ᎠᎦᎾᏫᏗᏍᎩ]].
+ᏱᏂᎬᏛᎾ ᎾᏍᎩ ᎤᎭ ᎾᏍᎩ ᎾᏍᏇ ᏭᏪᏙᎢ ᎠᏓᏌᎳᏙᏗ Ꮎ ᏍᏆᎳᎢ ᎤᏍᏗᏰᎬ ᎾᎿ ᎠᏂᏍᎦᏯ ᎤᎭ ᏭᏪᏙᎢ ᎦᏌᏙᏯᏍᏗ ᏥᏄᏍᏗ ᎤᏅᏔᏂᏓᏍᏗ ᎠᎨᏔᏗᏍᏗ, ᏥᏄᏍᏗ ᎤᎾᏓᏎᎮᎸᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏂᏯᏫᏍᎩ ᎠᎴ ᏗᏓᏂᏱᏍᎩ ᎠᎴ ᏐᎢ ᎠᏂᏌᏙᏯᏍᎩ Ꮎ ᎧᏁᏍᏗ ᎢᏯᏛᏁᏗ ᎪᎯᏳᎯ ᎠᎴ ᏓᏕᏲᎲᏍᎬ. ᏗᎦᏟᏌᏅᎯ, ᏗᎨᏥᎾᏝᎢ ᎠᎴ ᎤᏄᎸᎲᏍᎩ armies ᎨᏒᎩ ᎢᏳᏓᎵᎭ ᎧᏁᏨ ᎢᏯᏛᏁᏗ ᎠᎵᏍᏙᏯᏗ ᎤᎾᏤᎵ ᏗᏂᏍᎪᎵ, ᎭᏫᎾᏗᏢ ᎢᏧᎳ ᎬᏂᎨᏒ ᏄᏍᏛᎢ-[[medieval|ᎢᏳᏕᏘᏴᏓ]] [[Europe|ᏳᎳᏛ]] ᎠᎴ [[China|ᏓᎶᏂᎨᏍᏛ]].
 
 ᎠᏛᏏᏒ ᎠᎴ ᏙᏄᏭᎢ ᎦᏅᎯᏓ ᎤᏍᏗᏰᎬ ᎨᏒᎢ lifestyle ᎠᏛᏅᎢᏍᏔᏅ ᎾᎥᎢ ᎢᏧᏆᏗᏅᏓ ᏗᏍᏆᎸᏙᏗ. ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎾᎥᏂᎨᏍᏗ ᎢᎬᏩᎾᏓᎴᎩ ᏄᎾᏛᏅ ᎠᏂᎨᏴ ᎭᏫᎾᏗᏢ [[Western Culture|ᏭᏕᎵᎬᏗᏢ ᎥᎦᏔᎲᎢ]] ᎢᏳᏩᎪᏗ [[World War One|ᎡᎶᎯ ᏓᏄᏩ ᏌᏊ]]. ᎤᎪᏗᏗ ᎠᏂᎨᏴ ᎭᏫᎾᏗᏢ ᎠᏂᏙᎾᎥ [[Pentecostal]] ᏚᎾᏓᏟᏌᎲ ᎠᏑᎳᎪᎢᏍᏗ ᏂᏛᎴᏅᏓ trimming ᎤᎾᏤᎵ ᎤᏍᏗᏰᎬ ᎤᎶᏐᏅ ᏧᎾᏍᏗ. ᎯᎠ ᎠᎾᏓᏟᏏᏍᎬ ᎠᏕᏲᎲ ᎯᎠ 1960s ᎤᏗᏅᏒᎩ ᏅᎪᏢᎯᏐᏗᏱ ᏙᎯ ᎠᏕᏗ ᎤᏍᏗᏰᎬ ᎤᏛᏏᏗᏒ. ᎤᏍᏗᏰᎬ ᏂᎦᏅᎯᏒ ᎨᏒᎢ ᎡᎷᏪᎢ (ᎭᏫᎾᏗᏢ ᎢᏯᏏᏔᏗᏍᏗ ᎠᎴ centimeters) ᏂᏛᎴᏅᏓ ᎯᎠ ᎢᎬᏱᏗᏢ [[scalp|ᎠᏥᏍᏓᏁᎦᎸᏓ]] ᎠᏍᏓᏅᏅ ᎾᎿ ᎯᎠ [[forehead|ᎢᎬᏱᏗᏢ ᎠᏍᎪᎵ]] ᎦᎸᎳᏗᏢ ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᎦᏚᎢ ᎯᎠ ᎠᏍᎪᎵ ᎠᎴ ᎡᎳᏗ ᎯᎠ ᎦᏐᎯ ᎯᎠ ᎠᏯᏖᏃᎯ. ᏰᎵᏊ ᏗᏙᎳᎩ ᏄᏍᏛ ᏗᎧᏃᏗ ᎭᏫᎾᏗᏢ ᎪᎯ ᏧᎵᎬᏩᎳᏅᎯ ᎤᏍᏗᏰᎬ ᎠᏛᏏᏒ ᎠᎴ ᎢᏳᏕᏘᏴᏓ ᏂᎦᏅᎯᏒ (midpoint ᎾᎿ ᎯᎠ ᎠᏰᎸ, ᎭᏢᏃ ᎯᎠ [[buttock|ᎣᏂᏗᏢ]]ᏗᏠᎯᏍᏗ ᎯᎠ [[thigh]]), [[waist|ᎤᏓᏠᏍᏛ]] ᏂᎦᏅᎯᏒ, [[hip|ᎠᎧᏍᎨᏂ]] ᏂᎦᏅᎯᏒ, ᎠᎴ ᎠᏰᎵ ᏯᏛᎾ ᎠᎺᏉᎯ-thigh. ᎾᏍᎩ ᎠᎩᏍᎪᎢ ᎬᏩᏚᏫᏛ ᎦᎵᏉᎩ ᏧᏕᏘᏴᏓ, ᎠᏠᏯᏍᏗᏍᎩ ᎢᏳᏓᎵᎭ ᎪᏢᎯᏐᏗ, ᎠᏛᏍᎬ ᏌᏊ ᎤᏤᎵ ᎤᏍᏗᏰᎬ ᎤᏓᏠᏍᏛ ᏂᎦᏅᎯᏒ. ᎤᎵᏍᏛ ᏂᎦᏅᎯᏒ varies ᏂᏛᎴᏅᏓ ᎠᏏᏴᏫ ᎠᏏᏴᏫ ᎧᎵ ᏗᏙᎳᎩ [[genetics|ᎠᏛᎯᏍᏙᏗ]] ᎠᎴ overall ᎠᏰᎸ ᏄᏛᎿᏕᎬ. ᎡᏆ [[internet communities|ᎧᎾᏁᏍ ᎾᎥ ᏄᎾᏓᎸ]] ᎠᎴ ᎠᏫᏒᏗ ᎦᎸᎳᏗᏢ ᎠᏓᎦᎳᏍᏓᏗᏍᏗ ᎠᎴ ᎠᎵᏍᏕᎸᏗ ᎦᏅᎯᏓ ᎤᏍᏗᏰᎬ lifestyle.
 
 === ᎠᏰᎸ ᎤᏍᏗᏰᎬ ===
 ᎯᎠ ᏄᏍᏛ ᎣᏓᏅᏛ ᏫᏂᏚᏳᎪᏛ ᎤᏍᏗᏰᎬ ᎾᎿ ᎯᎠ ᏴᏫ ᎠᏰᎸ ᎾᏍᎩ ᎾᏍᏇ ᏧᏓᎴᎾᎯ ᎠᏰᎵ ᏄᏓᎴᎿᎥ ᎥᎦᏔᎲᎢ ᎠᎴ ᎢᏧᏩᎪᏗ. ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎥᎦᏔᎲᎢ ᎤᏂᎪᏗᏗ [[chest hair|ᎦᏁᏥ ᎤᏍᏗᏰᎬ]] ᎾᎿ ᎠᏂᏍᎦᏯ ᎨᏒᎢ ᏗᎬᏟᎶᏍᏙᏗ [[virility|ᎤᏂᎪᏗᏗ]] ᎠᎴ [[masculinity]]; ᏐᎢ societies ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᏗᏄᏪᏍᏗ ᎠᏰᎸ ᏥᏄᏍᏗ ᎪᏪᎶᏗ youthfulness.
 
-ᎭᏫᎾᏗᏢ [[ancient Egypt|ᎯᎸᎯᏳᎢ Egypt]], ᏴᏫ ᎾᏍᎩ ᎠᏰᎸᏅ ᎠᎧᎵᏬᎯ ᎤᏩᎾᏕᏍᎩ, ᏗᏄᏪᏍᏗ ᎠᏰᎸ ᏥᏄᏍᏗ ᎯᎠ ᏰᎵᏊ ᏗᏙᎳᎩ [[beauty|ᎤᏬᏚ]]. ᎦᎸᎳᏗᏢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ Egyptian ᎠᎨᏴ ᎤᎩᏒᎩ ᎡᏆ ᎤᏓᏍᏓᏲᎯᏎᏗ ᎠᏍᏓᏩᏛᏍᏗ Ꮎ ᎾᏍᎩ ᎠᎨᏴ ᏄᏛᏁᎸ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎭ ᏏᏴᏫ ᎤᏍᏗᏰᎬ ᎾᎿ ᎾᏍᎩ ᎠᎨᏴ ᎠᏰᎸ, ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩᎾᎢ ᎯᎠ ᎦᏚᎢ ᎾᏍᎩ ᎠᎨᏴ ᎠᏍᎪᎵ (ᎠᎴ ᎢᏧᎳᎭ ᎪᎯ ᏥᏄᏍᏛᎩ ᎢᏳᏓᎵᎭ ᏅᎪᏢᎯᏌᏅ ᎬᏙᏗ ᎫᏢᎥᏍᎬ<ref name="egypt">Dersin, Denise, ᎠᏃᏪᎵᏍᎬ ᎦᎾᏄᎪᏫᏒ. (Eds.) (1996). ''ᎦᏙ ᎤᏍᏗ ᎥᎴᏂᏙᎲ ᏥᏄᏍᏛᎩ ᎾᏍᎩᏯᎢ ᎾᎿ ᎯᎠ adel didiyi ᎯᎠ Nile''. Richmond, Virginia: ᎢᏳᏩᎪᏗ-ᎥᎴᏂᏙᎲ ᏗᎪᏪᎵ.</ref>). ᎯᎠ [[ancient Greece|ᎯᎸᎯᏳᎢ ᎠᎪᎢ]] ᎣᏂᏯᎨᏍᏙᏗ ᎠᏠᏯᏍᏔᏅᎯ ᎪᎯ ᎤᏩᎾᏕᏍᎩ ᎤᎵᎶᎯ, ᎠᎦᏎᏍᏗᏍᎬ ᏗᏄᏪᏍᏗ ᎠᏰᎸ ᎾᏍᏋ ᏗᎦᎳᏫᎩ [[youth|ᎠᏛᏍᎩ]] ᎠᎴ ᎤᏬᏚ. ᎪᎯ ᎨᏒᎢ reflected ᎭᏫᎾᏗᏢ ᎠᎪᎢ ᎠᎨᏴ ᎤᏙᏢᏒ ᎦᏙ ᎤᏍᏗ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᏂᎦᎵᏍᏗᏍᎬᎫ pubic ᎤᏍᏗᏰᎬ. [[Islam]] ᏓᏓᏁᏤᎸ ᎤᎪᏗᏗ ᎤᏬᎯᏳᏒ ᎬᏙᏗ ᎪᎯᏳᎯ ᎤᏍᏗᏰᎬ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎫᏢᎥᏍᎬ ᎤᏍᏗᏰᎬ ᎾᎥᎢ ᎠᏂᎨᏴ ᎠᎴ ᎯᎠ ᎠᎲᏏᏓᏍᏗ armpit ᎠᎴ pubic ᎤᏍᏗᏰᎬ (ᎠᎪᏩᏛᏗ [[fitrah|ᎯᏍᎩ ᏄᎵᏂᎬᎬ ᎨᎦᏓᏅᏖᏗ ᏫᏚᏳᎪᏛ fitrah]]). 
+ᎭᏫᎾᏗᏢ [[ancient Egypt|ᎯᎸᎯᏳᎢ Egypt]], ᏴᏫ ᎾᏍᎩ ᎠᏰᎸᏅ ᎠᎧᎵᏬᎯ ᎤᏩᎾᏕᏍᎩ, ᏗᏄᏪᏍᏗ ᎠᏰᎸ ᏥᏄᏍᏗ ᎯᎠ ᏰᎵᏊ ᏗᏙᎳᎩ [[beauty|ᎤᏬᏚ]]. ᎦᎸᎳᏗᏢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ Egyptian ᎠᎨᏴ ᎤᎩᏒᎩ ᎡᏆ ᎤᏓᏍᏓᏲᎯᏎᏗ ᎠᏍᏓᏩᏛᏍᏗ Ꮎ ᎾᏍᎩ ᎠᎨᏴ ᏄᏛᏁᎸ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎭ ᏏᏴᏫ ᎤᏍᏗᏰᎬ ᎾᎿ ᎾᏍᎩ ᎠᎨᏴ ᎠᏰᎸ, ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩᎾᎢ ᎯᎠ ᎦᏚᎢ ᎾᏍᎩ ᎠᎨᏴ ᎠᏍᎪᎵ (ᎠᎴ ᎢᏧᎳᎭ ᎪᎯ ᏥᏄᏍᏛᎩ ᎢᏳᏓᎵᎭ ᏅᎪᏢᎯᏌᏅ ᎬᏙᏗ ᎫᏢᎥᏍᎬ<ref name="egypt">Dersin, Denise, ᎠᏃᏪᎵᏍᎬ ᎦᎾᏄᎪᏫᏒ. (Eds.) (1996). ''ᎦᏙ ᎤᏍᏗ ᎥᎴᏂᏙᎲ ᏥᏄᏍᏛᎩ ᎾᏍᎩᏯᎢ ᎾᎿ ᎯᎠ ᎠᏕᎸ ᏗᏗᏱ ᎯᎠ Nile''. Richmond, Virginia: ᎢᏳᏩᎪᏗ-ᎥᎴᏂᏙᎲ ᏗᎪᏪᎵ.</ref>). ᎯᎠ [[ancient Greece|ᎯᎸᎯᏳᎢ ᎠᎪᎢ]] ᎣᏂᏯᎨᏍᏙᏗ ᎠᏠᏯᏍᏔᏅᎯ ᎪᎯ ᎤᏩᎾᏕᏍᎩ ᎤᎵᎶᎯ, ᎠᎦᏎᏍᏗᏍᎬ ᏗᏄᏪᏍᏗ ᎠᏰᎸ ᎾᏍᏋ ᏗᎦᎳᏫᎩ [[youth|ᎠᏛᏍᎩ]] ᎠᎴ ᎤᏬᏚ. ᎪᎯ ᎨᏒᎢ reflected ᎭᏫᎾᏗᏢ ᎠᎪᎢ ᎠᎨᏴ ᎤᏙᏢᏒ ᎦᏙ ᎤᏍᏗ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᏂᎦᎵᏍᏗᏍᎬᎫ pubic ᎤᏍᏗᏰᎬ. [[Islam]] ᏓᏓᏁᏤᎸ ᎤᎪᏗᏗ ᎤᏬᎯᏳᏒ ᎬᏙᏗ ᎪᎯᏳᎯ ᎤᏍᏗᏰᎬ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎫᏢᎥᏍᎬ ᎤᏍᏗᏰᎬ ᎾᎥᎢ ᎠᏂᎨᏴ ᎠᎴ ᎯᎠ ᎠᎲᏏᏓᏍᏗ armpit ᎠᎴ pubic ᎤᏍᏗᏰᎬ (ᎠᎪᏩᏛᏗ [[fitrah|ᎯᏍᎩ ᏄᎵᏂᎬᎬ ᎨᎦᏓᏅᏖᏗ ᏫᏚᏳᎪᏛ fitrah]]). 
 
-ᎭᏫᎾᏗᏢ [[Western world|ᏭᏕᎵᎬᏗᏢ]] societies ᎾᏍᎩ ᎠᏓᏁᏟᏴᏍᏗ ᏴᏫ ᎤᏁᏓᏍᏗ ᏫᏚᏳᎪᏛ ᎾᎯᏳᎨᏒ ᎯᎠ ᎣᏂᏱᏳ [[twentieth century|ᏔᎵᏍᎪᎯᏁ sᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ]], ᎾᏍᎩᎾ ᎨᏒ ᎾᏍᎩᎾᎢ ᎠᏂᎨᏴ, ᎠᎦᏲᎳᏅ ᎠᎴ ᎠᎲᏍᏗ ᎤᎾᏤᎵ ᎠᏰᎸ ᎤᏍᏗᏰᎬ. ᎯᎠ [[bikini]] ᎤᎵᎶᎯ ᎢᎬᏁᎯ ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎯᎠ sexual ᎢᏰᎵᏍᏗᎢ ᎭᏫᎾᏗᏢ advertising ᎠᎴ ᏓᎾᏛᏁᎵᏍᎬ ᎠᎴ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᎠᎾᏓᏅᏖᏍᎬ ᎾᏍᎩᎾᎢ ᎪᎯ ᏚᏙᎳᏩᏛᎲ. ᎪᎯ media ᏫᏚᏳᎪᏛ ᎤᎴᏅᎲ ᎭᏫᎾᏗᏢ ᎯᎠ [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]] ᎠᎴ ᎨᏒᎢ ᏗᎾᏙᎳᎩ ᎢᏳᏊ ᎤᏟ ᎢᎦᎢ ᎤᏂᎸᏉᏗ ᏂᎦᏅᎯᏒ ᏐᎢ ᏭᏕᎵᎬᏗᏢ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ. ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎠᏓᎴᏂᏍᎬ ᎤᏁᏉᎢᏍᏗ ᏕᎦᏃᏣᎸ ᏄᎾᏛᏅ ᎠᏂᏍᎦᏯ, ᏄᎾᏛᏅ ᎦᎪᏃ ᎠᏍᏓᏩᏛᏍᏗ ᎠᎴ ᎠᏍᏛᎢ ᏌᏊ ᎤᏤᎵ ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ ᎤᏬᏢᏗ ᎤᏯᏅᎲ "[[manscaping]]".
+ᎭᏫᎾᏗᏢ [[Western world|ᏭᏕᎵᎬᏗᏢ]] societies ᎾᏍᎩ ᎠᏓᏁᏟᏴᏍᏗ ᏴᏫ ᎤᏁᏓᏍᏗ ᏫᏚᏳᎪᏛ ᎾᎯᏳᎨᏒ ᎯᎠ ᎣᏂᏱᏳ [[twentieth century|ᏔᎵᏍᎪᎯᏁ sᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ]], ᎾᏍᎩᎾ ᎨᏒ ᎾᏍᎩᎾᎢ ᎠᏂᎨᏴ, ᎠᎦᏲᎳᏅ ᎠᎴ ᎠᎲᏍᏗ ᎤᎾᏤᎵ ᎠᏰᎸ ᎤᏍᏗᏰᎬ. ᎯᎠ [[bikini]] ᎤᎵᎶᎯ ᎢᎬᏁᎯ ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎯᎠ sexual ᎢᏰᎵᏍᏗᎢ ᎭᏫᎾᏗᏢ advertising ᎠᎴ ᏓᎾᏛᏁᎵᏍᎬ ᎠᎴ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᎠᎾᏓᏅᏖᏍᎬ ᎾᏍᎩᎾᎢ ᎪᎯ ᏚᏙᎳᏩᏛᎲ. ᎪᎯ media ᏫᏚᏳᎪᏛ ᎤᎴᏅᎲ ᎭᏫᎾᏗᏢ ᎯᎠ [[United States|ᎠᎹᏰᏟ]] ᎠᎴ ᎨᏒᎢ ᏗᎾᏙᎳᎩ ᎢᏳᏊ ᎤᏟ ᎢᎦᎢ ᎤᏂᎸᏉᏗ ᏂᎦᏅᎯᏒ ᏐᎢ ᏭᏕᎵᎬᏗᏢ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ. ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎠᏓᎴᏂᏍᎬ ᎤᏁᏉᎢᏍᏗ ᏕᎦᏃᏣᎸ ᏄᎾᏛᏅ ᎠᏂᏍᎦᏯ, ᏄᎾᏛᏅ ᎦᎪᏃ ᎠᏍᏓᏩᏛᏍᏗ ᎠᎴ ᎠᏍᏛᎢ ᏌᏊ ᎤᏤᎵ ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ ᎤᏬᏢᏗ ᎤᏯᏅᎲ "[[manscaping]]".
 
 === ᎤᏍᏗᏰᎬ ᏥᏄᏍᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ ===
 [[Hair care|ᎤᏍᏗᏰᎬ ᎠᎦᏎᏍᏙᏗ]] ᎾᏍᎩᎾᎢ ᎠᏂᏴᏫ ᎨᏒᎢ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᎡᎶᎯ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎬᏙᏗ specialized ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ, chemicals ᎠᎴ techniques. 
@@ -126,8 +117,6 @@ g ᎤᏍᏗᏰᎬ]]
 ::*[http://www.clevelandclinicmeded.com/diseasemanagement/dermatology/hair/hair.htm Hair disorders] ᏂᏛᎴᏅᏓ ᎯᎠ Cleveland Clinic
 
 [[Category:ᎠᏂᏴᏫ]]
-
-<!-- The below are interlanguage links. -->
 
 [[am:ፀጉር]]
 [[an:Pelo]]
